Review index and replace - with --

--- a/belaveshkin.sty
+++ b/belaveshkin.sty
@@ -23,6 +23,7 @@
 %%%%%  FONTS  %%%%%
 \setmainfont[
   ItalicFont=SourceSerif4-Italic,%
+  BoldItalicFont=SourceSerif4-BoldItalic,%
   BoldFont=SourceSerifPro-Bold,%
 ]{SourceSerifPro-Regular}
 \setsansfont{SourceSansPro-Regular}
