--- a/nutrition/chapter13.tex
+++ b/nutrition/chapter13.tex
@@ -49,12 +49,12 @@
 Давайце разьбяром пары «сапраўдны прадукт»~--- «харчовае рэчыва»: цэльнае мяса~--- сасіскі (перапрацаванае мяса), яблыкі~--- яблычны сок, трускаўка~--- клубнічнае жэле, часнык~--- часнычны марынад, памідор~--- кетчуп. Суцэльны авёс~--- цукровыя аўсяныя шматкі хуткага прыгатаваньня. У~такой справе важна абыходзіцца бяз крайнасьцяў. У~рэальнасьці мы сутыкаемся зь вялікай колькасьцю прамежкавых кампанэнтаў, і ня ўсе яны адназначна кепскія. Вось пара: сьвежая рыба~--- рыбная мука (сурымі). Насамрэч тут больш прамежкавых зьвёнаў: сьвежая рыба~--- рыба астуджаная~--- цэльная рыба глыбокай замарозкі~--- растрыбушаная тушка глыбокай замарозкі~--- кавалкі рыбы з~косткамі і скурай~--- філе бяз скуры і костак~--- кансэрвы ва ўласным соку~--- рыбны фарш~--- паўфабрыкаты з~рыбнага фаршу~--- сурымі. Варта аддаваць перавагу верхняму полюсу, выбіраючы даступныя вам варыянты на дадзены момант часу. Розьніца паміж сырой і сьвежазамарожанай рыбай не такая ўжо вялікая, а~вось паміж сурымі і цэльнай рыбай~--- вельмі істотная. Цалкам вартымі варыянтамі будуць сьвежазамарожаная зеляніна і таматная паста (з таматаў, без даданьня цукру і крухмалу).
 
 \paragraph{Сьвежыя прадукты.}
-Сьвежасьць зьяўляецца важнай умовай карысьці і бясьпекі прадуктаў, але многія цэльныя прадукты маюць нядоўгі тэрмін захоўваньня. Пры працяглым захоўваньні ў~бялковых прадуктах адбываецца распад амінакіслотаў да біягенных амінаў\index{біягенныя аміны}, што пагаршае якасьць ежы і можа выклікаць непажаданую рэакцыю. Тлушчы пры працяглым захоўваньні пачынаюць акісьляцца, есьці такія акісьленыя тлушчы вельмі шкодна. Вугляводы захоўваюцца лепш, але садавіна і гародніна працяглага захоўваньня заўважна губляюць свае карысныя ўласьцівасьці. Сьвежую гародніну, якую прывозяцца здалёк, часта зрываюць яшчэ нясьпелай і зь нізкім утрыманьнем карысных кампанэнтаў. Менавіта таму глыбокая замарозка~--- гэта ідэальны варыянт захоўваньня шматлікіх прадуктаў у~цэльным выглядзе, большасьць сваіх карысных уласьцівасьцяў прадукты пры ёй захоўваюць. Заўсёды выбірайце найболей сьвежыя прадукты, навучыцеся адрозьніваць іх вонкава.
+Сьвежасьць зьяўляецца важнай умовай карысьці і бясьпекі прадуктаў, але многія цэльныя прадукты маюць нядоўгі тэрмін захоўваньня. Пры працяглым захоўваньні ў~бялковых прадуктах адбываецца распад амінакіслотаў да біягенных амінаў\index{аміны!біягенныя}, што пагаршае якасьць ежы і можа выклікаць непажаданую рэакцыю. Тлушчы пры працяглым захоўваньні пачынаюць акісьляцца, есьці такія акісьленыя тлушчы вельмі шкодна. Вугляводы захоўваюцца лепш, але садавіна і гародніна працяглага захоўваньня заўважна губляюць свае карысныя ўласьцівасьці. Сьвежую гародніну, якую прывозяцца здалёк, часта зрываюць яшчэ нясьпелай і зь нізкім утрыманьнем карысных кампанэнтаў. Менавіта таму глыбокая замарозка~--- гэта ідэальны варыянт захоўваньня шматлікіх прадуктаў у~цэльным выглядзе, большасьць сваіх карысных уласьцівасьцяў прадукты пры ёй захоўваюць. Заўсёды выбірайце найболей сьвежыя прадукты, навучыцеся адрозьніваць іх вонкава.
 
 \paragraph{Правіла «маладой» ежы.}
 Сута гэтага правіла вельмі простая: імкнуцца выбіраць у~якасьці ежы маладзейшыя расьліны (маладое лісьце і парасткі, пупышкі, верхавіны), маладзейшую рыбу і мяса. Вядома, «маладыя» прадукты харчаваньня здаўна шанаваліся як больш лёгказасваяльныя і пажыўныя, але навуковае абгрунтаваньне гэтаму ўдалося атрымаць нядаўна. Навукоўцы давялі, што «маладая» дыета падаўжае жыцьцё, а~«старая» скарачае жыцьцё ў~параўнаньні з~«маладой». У~маладых уцёках чайнага куста відавочна больш карысных рэчываў. А~вось максімальная канцэнтрацыя сульфарафану\index{сульфарафан} ўтрымліваецца менавіта ў~парастках брокалі. Што да шкодных спалучэньняў, то ў~маладых прадуктах іх меней. Так, у~буйной і дарослай рыбе ртуці больш, чым у~дробнай і маладой.
 
-\tipbox{Пры працяглым захоўваньні ў~бялковых прадуктах адбываецца распад амінакіслотаў да біягенных амінаў\index{біягенныя аміны}, што пагаршае якасьць ежы. Тлушчы пры працяглым захоўваньні пачынаюць акісьляцца, есьці іх вельмі шкодна. Вугляводы захоўваюцца лепей, але садавіна і гародніна працяглага захоўваньня відавочна губляюць свае карысныя ўласьцівасьці.}
+\tipbox{Пры працяглым захоўваньні ў~бялковых прадуктах адбываецца распад амінакіслотаў да біягенных амінаў\index{аміны!біягенныя}, што пагаршае якасьць ежы. Тлушчы пры працяглым захоўваньні пачынаюць акісьляцца, есьці іх вельмі шкодна. Вугляводы захоўваюцца лепей, але садавіна і гародніна працяглага захоўваньня відавочна губляюць свае карысныя ўласьцівасьці.}
 
 \subsection{Як трымацца правіла? Ідэі і парады}
 
