--- a/nutrition/chapter17.tex
+++ b/nutrition/chapter17.tex
@@ -18,7 +18,7 @@
 
 \subsection{Як гэта ўплывае на здароўе?}
 
-Існуе мноства злучэньняў, якія ўтвараюцца пры гатоўлі і валодаюць патэнцыйна нэгатыўным уздзеяньнем на здароўе. Гэта акрыламід\index{акрыламід}, мэтылгліяксальляктоза\index{мэтылгліяксаль}, акралеін\index{акралеін} (пры смажаньні на алеі), гетэрацыклічныя аміны, бэнзапірны\index{бэнзапірын} і шэраг іншых злучэньняў. Глікацыя доўгажывучых бялкоў, міжклеткавага матрыксу, ДНК, мітахандрыяльных бялкоў~--- гэта важны паталягічны працэс, які цяпер павярнуць назад практычна немагчыма. Чым больш вы зьядаеце КПГ зь ежай, тым вышэйшы іх узровень у~крыві. Лішак КПГ павялічвае рызыку атэрасклерозу, сардэчна-сасудзістых захворваньняў, ныркавай недастатковасьці, а~таксама шэрагу аўтаімунных захворваньняў.
+Існуе мноства злучэньняў, якія ўтвараюцца пры гатоўлі і валодаюць патэнцыйна нэгатыўным уздзеяньнем на здароўе. Гэта акрыламід\index{акрыламід}, мэтылгліяксальляктоза\index{мэтылгліяксаль}, акралеін\index{акралеін} (пры смажаньні на алеі), гетэрацыклічныя аміны\index{аміны!гетэрацыклічныя}, бэнзапірны\index{бэнзапірын} і шэраг іншых злучэньняў. Глікацыя доўгажывучых бялкоў, міжклеткавага матрыксу, ДНК, мітахандрыяльных бялкоў~--- гэта важны паталягічны працэс, які цяпер павярнуць назад практычна немагчыма. Чым больш вы зьядаеце КПГ зь ежай, тым вышэйшы іх узровень у~крыві. Лішак КПГ павялічвае рызыку атэрасклерозу, сардэчна-сасудзістых захворваньняў, ныркавай недастатковасьці, а~таксама шэрагу аўтаімунных захворваньняў.
 
 \paragraph{Адчувальнасьць да інсуліну.}
 Нават умеранае скарачэньне прадуктаў, багатых КПГ, павялічвае адчувальнасьць да інсуліну, зьніжае рызыку цукровага дыябэту\index{дыябэт}.
@@ -113,7 +113,7 @@
 Зразайце перасмажаныя ці цёмныя кавалкі мяса перад ядой, ня ежце скуру птушак.
 
 \paragraph{Здаровы глузд і балянс.}
-Некаторыя рэчывы, якія даюць цёмныя адценьні (мэляідыны), у~невялікіх канцэнтрацыях могуць быць і карысныя для арганізму, таму ня кідайцеся ў~скрайнасьці. Спажываньне смажаных прадуктаў раз на тыдзень і радзей не нясе аніякае рызыкі паводле дасьледаваньняў.
+Некаторыя рэчывы, якія даюць цёмныя адценьні (мэляідыны\index{мэляідын}), у~невялікіх канцэнтрацыях могуць быць і карысныя для арганізму, таму ня кідайцеся ў~скрайнасьці. Спажываньне смажаных прадуктаў раз на тыдзень і радзей не нясе аніякае рызыкі паводле дасьледаваньняў.
 
 \paragraph{Тэрмаапрацоўка карысная.}
 Часта важна праварыць прадукты, асабліва мясныя і рыбу, каб забіць магчымых паразытаў у~ёй. Сырая рыба і недаваранае мяса павялічваюць рызыку заражэньня.
@@ -125,4 +125,4 @@
 Калі доўга захоўваць ежу, узьнікае рызыка размнажэньня ў~ёй бактэрыяў. Тэмпэратуры ніжэй за 5 і вышэй за 60\,°C спыняюць або запавольваюць рост мікраарганізмаў.
 
 \paragraph{Сьвежасьць.}
-Сьвежасьць прадуктаў~--- гэта ключ да здароўя. Найбольш карысным будзе захаваньне сьвежасьці пры харчовых алергіях, асабліва пры непераноснасьці гістаміну. Біягенныя аміны\index{біягенныя аміны} назапашваюцца ў~прадуктах, што схільныя да хуткага закісаньня, гніеньня, перасьпяваньня (асабліва калі гэтыя прадукты вязуць здалёку). Пазьбягайце прадуктаў зь невыразным тэрмінам захоўваньня або зь перапыненым ланцужком астуджэньня (сьляды шматразовай замарозкі).
+Сьвежасьць прадуктаў~--- гэта ключ да здароўя. Найбольш карысным будзе захаваньне сьвежасьці пры харчовых алергіях, асабліва пры непераноснасьці гістаміну. Біягенныя аміны\index{аміны!біягенныя} назапашваюцца ў~прадуктах, што схільныя да хуткага закісаньня, гніеньня, перасьпяваньня (асабліва калі гэтыя прадукты вязуць здалёку). Пазьбягайце прадуктаў зь невыразным тэрмінам захоўваньня або зь перапыненым ланцужком астуджэньня (сьляды шматразовай замарозкі).
