--- a/nutrition/chapter18.tex
+++ b/nutrition/chapter18.tex
@@ -4,9 +4,9 @@
 
 \subsection{Як зьявілася праблема?}
 
-Першапачаткова смак дапамагаў нам пазьбягаць небясьпечнай ежы і знаходзіць больш пажыўную. Зь цягам часу гэты працэс ускладніўся, таму давайце вызначымся з~паняцьцямі больш дакладна. Вельмі часта мы блытаем два розныя паняцьці, калі гаворым пра адзнаку ежы: цяга і смак. Багата ў~каго наогул уся ежа спрашчаецца да «гэта смачна», «гэта нясмачна», што вельмі кепска для харчовых паводзінаў, бо цягне толькі на вельмі смачнае. Чым больш ежа выбівае з~вас дафаміну, тым мацней вас да яе цягне. Прытым смак гэтай ежы можа быць агідны.
+Першапачаткова смак дапамагаў нам пазьбягаць небясьпечнай ежы і знаходзіць больш пажыўную. Зь цягам часу гэты працэс ускладніўся, таму давайце вызначымся з~паняцьцямі больш дакладна. Вельмі часта мы блытаем два розныя паняцьці, калі гаворым пра адзнаку ежы: цяга і смак. Багата ў~каго наогул уся ежа спрашчаецца да «гэта смачна», «гэта нясмачна», што вельмі кепска для харчовых паводзінаў, бо цягне толькі на вельмі смачнае. Чым больш ежа выбівае з~вас дафаміну\index{дафамін}, тым мацней вас да яе цягне. Прытым смак гэтай ежы можа быць агідны.
 
-Наш мозг цягнецца да ежы з~высокай даступнасьцю калёрыяў і іншых неабходных кампанэнтаў. Таму для нас будзе прывабнай ежа з~высокай удзельнай калярыйнасьцю, высокім глікемічным індэксам і глікемічнай нагрузкай, вялікім утрыманьнем амінакіслотаў з~разгалінаваным ланцугом (лейцын і г.~д. таксама выклікае прыкметны ўздым інсуліну), больш салёная, смажаная. Таму, калі мы возьмем шмат мукі, дадамо цукру, тлушчу, солі, малака і падсмажым да скарыначкі, наша дафамінавая сыстэма відавочна будзе захопленая і дэзарыентаваная. Чым вышэйшая ўдзельная шчыльнасьць калёрыяў, тым прывабнейшая ежа. Чым вышэйшы ўзровень інсуліну, тым мацнейшая дафамінавая стымуляцыя. Чым вышэйшы стрэс, тым болей трэба зьесьці ў~запас. Гэта сапраўдная дафамінавая цяга, і калі мы гаворым «смачна ці не», дык маем на ўвазе часьцей за ўсё суб'ектыўную цягу, а~ня смак. Так-так, суб'ектыўную, якая мяняецца ў~залежнасьці ад вашага стану: раніцай нясмачна, уначы~--- вельмі смачна.
+Наш мозг цягнецца да ежы з~высокай даступнасьцю калёрыяў і іншых неабходных кампанэнтаў. Таму для нас будзе прывабнай ежа з~высокай удзельнай калярыйнасьцю, высокім глікемічным індэксам і глікемічнай нагрузкай, вялікім утрыманьнем амінакіслотаў з~разгалінаваным ланцугом (лейцын\index{лейцын} і г.~д. таксама выклікае прыкметны ўздым інсуліну), больш салёная, смажаная. Таму, калі мы возьмем шмат мукі, дадамо цукру, тлушчу, солі, малака і падсмажым да скарыначкі, наша дафамінавая сыстэма відавочна будзе захопленая і дэзарыентаваная. Чым вышэйшая ўдзельная шчыльнасьць калёрыяў, тым прывабнейшая ежа. Чым вышэйшы ўзровень інсуліну, тым мацнейшая дафамінавая стымуляцыя. Чым вышэйшы стрэс, тым болей трэба зьесьці ў~запас. Гэта сапраўдная дафамінавая цяга, і калі мы гаворым «смачна ці не», дык маем на ўвазе часьцей за ўсё суб'ектыўную цягу, а~ня смак. Так-так, суб'ектыўную, якая мяняецца ў~залежнасьці ад вашага стану: раніцай нясмачна, уначы~--- вельмі смачна.
 
 \tipbox{Чым большая ўдзельная шчыльнасьць калёрыяў, тым прывабнейшая ежа. Чым вышэйшы ўзровень інсуліну, тым мацнейшая дафамінавая стымуляцыя. Чым вышэйшы стрэс, тым больш трэба зьесьці ў~запас. Гэта дафамінавая цяга, і калі мы гаворым «смачна ці не», то мы маем на ўвазе часьцей за ўсё суб'ектыўную цягу, а~ня смак.}
 
@@ -19,9 +19,9 @@
 \subsection{Як гэта ўплывае на здароўе?}
 
 \paragraph{Харчовая залежнасьць.}
-Ежа, якая ўтрымлівае вялікую колькасьць крухмалу, тлушчу, цукраў, солі, стымулюе высокі выкід нэўрамэдыятара дафаміну, што можа пры пэўных умовах прыводзіць да разьвіцьця харчовай залежнасьці, якая вядомая нам ужо сотні гадоў і раней звалася абжорствам. Умеранасьць, адсутнасьць забароны і ўменьне атрымліваць дастаткова задавальненьня ад ежы~--- гэта важныя ўмовы захаваньня здаровых харчовых паводзінаў. Розныя харчовыя абмежаваньні, нэгатыўны вобраз цела ды іншыя фактары могуць прыводзіць да разнастайных парушэньняў харчовых паводзінаў, ад кампульсіўнай яды (цыклі «ўстрыманьне~--- абжорства») да анарэксіі\index{анарэксія}. У~цэлым пры сындроме дэфіцыту ўзнагароджаньня, калі ў~жыцьці нас мала што радуе, мы часта зьвяртаемся да ежы~--- і гэта ня вельмі здаровае рашэньне.
+Ежа, якая ўтрымлівае вялікую колькасьць крухмалу, тлушчу, цукраў, солі, стымулюе высокі выкід нэўрамэдыятара дафаміну\index{дафамін}, што можа пры пэўных умовах прыводзіць да разьвіцьця харчовай залежнасьці, якая вядомая нам ужо сотні гадоў і раней звалася абжорствам. Умеранасьць, адсутнасьць забароны і ўменьне атрымліваць дастаткова задавальненьня ад ежы~--- гэта важныя ўмовы захаваньня здаровых харчовых паводзінаў. Розныя харчовыя абмежаваньні, нэгатыўны вобраз цела ды іншыя фактары могуць прыводзіць да разнастайных парушэньняў харчовых паводзінаў, ад кампульсіўнай яды (цыклі «ўстрыманьне~--- абжорства») да анарэксіі\index{анарэксія}. У~цэлым пры сындроме дэфіцыту ўзнагароджаньня, калі ў~жыцьці нас мала што радуе, мы часта зьвяртаемся да ежы~--- і гэта ня вельмі здаровае рашэньне.
 
-\tipbox{Ежа, якая ўтрымлівае вялікую колькасьць крухмалу, тлушчу, цукраў, солі, стымулюе высокі выкід нэўрамэдыятара дафаміну, што можа пры пэўных умовах прыводзіць да разьвіцьця харчовай залежнасьці, якая вядомая нам ужо сотні гадоў і раней звалася абжорствам.}
+\tipbox{Ежа, якая ўтрымлівае вялікую колькасьць крухмалу, тлушчу, цукраў, солі, стымулюе высокі выкід нэўрамэдыятара дафаміну\index{дафамін}, што можа пры пэўных умовах прыводзіць да разьвіцьця харчовай залежнасьці, якая вядомая нам ужо сотні гадоў і раней звалася абжорствам.}
 
 \paragraph{Пераяданьне і выкліканыя ім разлады.}
 Чым менш задавальненьня мы атрымліваем ад ежы, тым больш пераядаем і тым вышэйшая рызыка шматлікіх праблемаў, выкліканых залішнім спажываньнем калёрыяў (ад атлусьценьня і дыябэту да нэўрадэгенэратыўных і аўтаімунных захворваньняў). Таму задавальненьне і задаволенасьць ад смачнай ежы зьяўляюцца залогам стрыманасьці ў~ежы. Смачная ежа дазваляе больш эфэктыўна прытрымлівацца свайго харчовага пляну.
@@ -62,7 +62,7 @@
 Выбірайце самы дарагі і прыгожы посуд і прыборы, якія можаце сабе дазволіць. Есьці зь іх дапамогай тады стане сапраўднай асалодай.
 
 \paragraph{Камунікацыя.}
-Ежце побач зь іншымі людзьмі. Аксытацын стымулюе выкід дафаміну і робіць ежу менш важнай. Прыцягвайце сямейнікаў да гатоўлі страваў: уцягнутасьць робіць ежу смачнейшай.
+Ежце побач зь іншымі людзьмі. Аксытацын\index{аксытацын} стымулюе выкід дафаміну і робіць ежу менш важнай. Прыцягвайце сямейнікаў да гатоўлі страваў: уцягнутасьць робіць ежу смачнейшай.
 
 \paragraph{Рытуал.}
 Прыдумайце розныя правілы і рытуалы ежы. Выразны парадак рыхтуе ваш стрававальны тракт да ежы.
