--- a/nutrition/chapter19.tex
+++ b/nutrition/chapter19.tex
@@ -29,7 +29,7 @@
 \paragraph{Цукар.}
 Залішняе спажываньне цукру зьвязанае з~прыкметным павелічэньнем рызыкі шматлікіх захворваньняў. Малекула цукрозы складаецца з~глюкозы і фруктозы. Лішак фруктозы ў~спалучэньні з~падвышаным спажываньнем калёрыяў шкодзіць як наўпрост, так і ўскосна, павялічваючы імавернасьць атлусьценьня. Лішак цукру павялічвае рызыку інсулінарэзыстэнтнасьці\index{інсулінарэзыстэнтнасьць}, мэтабалічнага сындрому, цукровага дыябэту другога тыпу, карыесу, тлушчавай дыстрафіі печані, парушае ліпідны профіль крыві і паскарае атэрасклероз. Таксама ён адмоўна ўплывае на работу мозгу, зьніжае ўтварэньне новых нэўронаў, павялічвае трывогу, рызыку дэпрэсіі і павышае рызыку хваробы Альцгаймэра\index{хвароба!Альцгаймэра}. Лічыцца, што ня менш за траціну выпадкаў сындрому раздражнёнага кішачніка зьвязана з~залішнім спажываньнем цукру.
 
-Ускосная шкода ў~тым, што цукар можа фармаваць харчовую залежнасьць, павялічваючы ўзровень дафаміну і спрыяючы пераяданьню. Фруктоза нэгатыўна ўплывае на нашыя харчовыя паводзіны, павышаючы ўзровень грэліну і зьніжаючы адчувальнасьць да лептыну. Такое яе дзеяньне вядзе да набору масы цела. У~тых людзей, хто атрымлівае 25\,\% калёрыяў з~цукру, рызыка сардэчна-сасудзістых захворваньняў удвая вышэйшая, чым у~тых, хто атрымлівае зь яго менш за 10\,\% калёрыяў. А~вось ужываньне больш за адну порцыю салодкага напою ў~дзень прыводзіць таксама да двухразовай рызыкі цукровага дыябэту. Ва ўсіх выпадках гаворка ідзе пра дададзены цукар і ў~соках. Адмова ад цукру станоўча ўплывае на стан здароўя нават бязь зьмены вагі.
+Ускосная шкода ў~тым, што цукар можа фармаваць харчовую залежнасьць, павялічваючы ўзровень дафаміну\index{дафамін} і спрыяючы пераяданьню. Фруктоза нэгатыўна ўплывае на нашыя харчовыя паводзіны, павышаючы ўзровень грэліну\index{грэлін} і зьніжаючы адчувальнасьць да лептыну. Такое яе дзеяньне вядзе да набору масы цела. У~тых людзей, хто атрымлівае 25\,\% калёрыяў з~цукру, рызыка сардэчна-сасудзістых захворваньняў удвая вышэйшая, чым у~тых, хто атрымлівае зь яго менш за 10\,\% калёрыяў. А~вось ужываньне больш за адну порцыю салодкага напою ў~дзень прыводзіць таксама да двухразовай рызыкі цукровага дыябэту. Ва ўсіх выпадках гаворка ідзе пра дададзены цукар і ў~соках. Адмова ад цукру станоўча ўплывае на стан здароўя нават бязь зьмены вагі.
 
 \tipbox{Надмер цукру ў~рацыёне адмоўна ўплывае на работу мозгу, зьмяншае ўтварэньне новых нэўронаў, павялічвае трывогу, рызыку дэпрэсіі і хваробы Альцгаймэра\index{хвароба!Альцгаймэра}.}
 
@@ -88,7 +88,7 @@
 Любая апрацоўка прадукту~--- яго драбненьне, награваньне, гатаваньне пры высокіх тэмпэратурах~--- павышае яго глікемічны індэкс, прыводзіць да зьніжэньня памеру часьцінак крухмалу. Таму ежа пакаёвай тэмпэратуры мае меншы глікемічны індэкс. Апарваньне кіпнем, варка al dente, фэрмэнтацыя, запарваньне~--- больш ашчаджальныя спосабы гатаваньня.
 
 \paragraph{Харчовыя валокны~--- гэта важная частка рацыёну.}
-Аптымальна атрымліваць іх праз прадукты, а~не праз дабаўкі. У~дасьледаваньнях выкарыстаньне дабаўленай клятчаткі аказалася неэфэктыўным. Зьвярніце ўвагу, што распушчальныя харчовыя валокны (пэктыны\index{пэктын}, альгінаты, сьлізі) больш карысныя і лепей насычаюць, чым не распушчальныя (цэлюлоза, лігнін). У~гародніне ня менш клятчаткі, чым у~збожжавых прадуктах, і аддаваць перавагу лепей ім. Сярод крупаў бабовыя маюць добры набор харчовых валокнаў, а~акрамя гэтага яшчэ й~нізкі глікемічны індэкс. Прэбіётыкі\index{прэбіётыкі} ўтрымліваюцца ў~натуральным відзе ў~харчовых прадуктах, але ёсьць асобна і ў~выглядзе дабавак: фруктаалігацукрыды, інулін\index{інулін}, лактулоза\index{лактулоза}, бэта-глюканы\index{бэта-глюканы}, псіліум\index{псіліум} і многае іншае.
+Аптымальна атрымліваць іх праз прадукты, а~не праз дабаўкі. У~дасьледаваньнях выкарыстаньне дабаўленай клятчаткі аказалася неэфэктыўным. Зьвярніце ўвагу, што распушчальныя харчовыя валокны (пэктыны\index{пэктын}, альгінаты, сьлізі) больш карысныя і лепей насычаюць, чым не распушчальныя (цэлюлоза, лігнін). У~гародніне ня менш клятчаткі, чым у~збожжавых прадуктах, і аддаваць перавагу лепей ім. Сярод крупаў бабовыя маюць добры набор харчовых валокнаў, а~акрамя гэтага яшчэ й~нізкі глікемічны індэкс. Прэбіётыкі\index{прэбіётыкі} ўтрымліваюцца ў~натуральным відзе ў~харчовых прадуктах, але ёсьць асобна і ў~выглядзе дабавак: фрукта-алігацукрыды\index{фрукта-алігацукрыды}\index{алігацукрыды}, інулін\index{інулін}, лактулоза\index{лактулоза}, бэта-глюканы\index{бэта-глюканы}, псіліум\index{псіліум} і многае іншае.
 
 \paragraph{Антынутрыенты\index{антынутрыенты}.}
 Існуюць расьлінныя прадукты, якія ўтрымліваюць шэраг злучэньняў пад назвай «антынутрыенты\index{антынутрыенты}», што выпрацоўваюцца для абароны. Да іх адносяць фіцінавую кіслату\index{фіцінавая кіслата}\index{кіслата!фіцінавая}, фітаэстрагены\index{фітаэстраген}, лектыны\index{лектын} і г.~д. Пры ўжываньні ў~вялікай колькасьці збажыны або бабовых антынутрыенты\index{антынутрыенты} могуць нэгатыўна ўплываць на арганізм (фітаты са збажыны зьніжаюць усмоктваньне жалеза і цынку, фітаэстрагены\index{фітаэстраген} з~соі ўплываюць на гарманальны балянс, лішак шчаўевай кіслаты павялічвае рызыку камянёў у~мачавым пухіры і г.~д.). Для зьніжэньня дзеяньня фітаэстрагенаў\index{фітаэстраген} выкарыстоўваюць замочваньне (на ноч ці на суткі), фэрмэнтацыю, прарошчваньне, кіслае вымочваньне. Але калі вы ясьцё невялікую колькасьць мучнога і крупаў, то можна не турбавацца пра пабочныя эфэктах антынутрыентаў. Пры гэтым заліваць крупы варта~--- гэта скарачае тэрмін гатаваньня і зьніжае глікемічны індэкс гатовай стравы. Небясьпека іншых антынутрыентаў\index{антынутрыенты}, асабліва лектынаў\index{лектын}, значна перабольшаная!
@@ -129,10 +129,10 @@
 Пры павелічэньні долі расьлінных прадуктаў можна сутыкнуцца з~падвышаным газаўтварэньнем. Для прафілактыкі павялічвайце яе паступова, пачніце з~тэрмаапрацаваных прадуктаў, вар'іруйце прадукты (сачавіца замест гароху), выкарыстоўвайце мультыпрабіётыкі\index{мультыпрабіётык}.
 
 \paragraph{FODMAP дыета\index{дыета!FODMAP}.}
-FODMAP~--- гэта англамоўны тэрмін-акронім, які пазначае вугляводы з~кароткім ланцугом (алігацукрыды\index{алігацукрыды}, дыцукрыды\index{дыцукрыды}, монацукрыды\index{монацукрыды}, паліолы\index{паліолы}), што кепска ўсмоктваюцца і могуць прыводзіць да падвышанага газаўтварэньня ды іншым разладаў. Але ў~малой колькасьці яны зьяўляюцца прабіётыкамі\index{прабіётыкі}. Фруктоза, якой шмат у~цукры і садавіне, фруктаны ў~гародніне (капусты, часнык), галяктаны\index{галяктаны} (соя, бабы), ляктоза (малочны цукар) і іншыя. Іх абмежаваньне можа дапамагчы пры парушэньнях стрававальнага працэсу.
+FODMAP~--- гэта англамоўны тэрмін-акронім, які пазначае вугляводы з~кароткім ланцугом (алігацукрыды\index{алігацукрыды}, дыцукрыды\index{дыцукрыды}, монацукрыды\index{монацукрыды}, паліолы\index{паліолы}), што кепска ўсмоктваюцца і могуць прыводзіць да падвышанага газаўтварэньня ды іншым разладаў. Але ў~малой колькасьці яны зьяўляюцца прабіётыкамі\index{прабіётыкі}. Фруктоза, якой шмат у~цукры і садавіне, фруктаны ў~гародніне (капусты, часнык), галяктаны\index{галяктаны} (соя, бабы), ляктоза\index{ляктоза} (малочны цукар) і іншыя. Іх абмежаваньне можа дапамагчы пры парушэньнях стрававальнага працэсу.
 
 \paragraph{Безглютэнавая дыета.}
-Людзям, якія маюць генэтычную схільнасьць да цэліякіі, важна прыбраць глютэназьмяшчальныя прадукты з~рацыёну. Існуюць зьвесткі, што ёсьць непераноснасьць глютэну\index{глютэн}, не зьвязаная з~цэліякіяй, магчыма, што людзям з~сындромам раздражнёнага кішачніка і некаторымі іншымі станамі (шызафрэнія і да т.~п.) будзе карысна прыбраць глютэн. Але для абсалютнай большасьці здаровых людзей плюсаў менавіта ад адсутнасьці глютэну\index{глютэн} ня будзе, а~эфэкт ``безглютенавай'' дыеты зьвязаны толькі са зьмяншэньнем хлебабулачных вырабаў у~рацыёне. Але ў~такіх прадуктах нічога незаменнага няма!
+Людзям, якія маюць генэтычную схільнасьць да цэліякіі\index{цэліякія}, важна прыбраць глютэназьмяшчальныя прадукты з~рацыёну. Існуюць зьвесткі, што ёсьць непераноснасьць глютэну\index{глютэн}, не зьвязаная з~цэліякіяй\index{цэліякія}, магчыма, што людзям з~сындромам раздражнёнага кішачніка і некаторымі іншымі станамі (шызафрэнія і да т.~п.) будзе карысна прыбраць глютэн. Але для абсалютнай большасьці здаровых людзей плюсаў менавіта ад адсутнасьці глютэну\index{глютэн} ня будзе, а~эфэкт ``безглютенавай'' дыеты зьвязаны толькі са зьмяншэньнем хлебабулачных вырабаў у~рацыёне. Але ў~такіх прадуктах нічога незаменнага няма!
 
 \paragraph{Вэганская дыета.}
 Поўная адмова ад прадуктаў жывёльнага паходжаньня ня мае даведзеных карысных уласьцівасьцяў, але пры гэтым павялічвае шэраг рызыкаў для здароўя, спалучаных з~дэфіцытам шматлікіх важных злучэньняў, уключаючы вітамін В12, вітамін D, цынк, жалеза і іншыя. Дасьледаваньні паказваюць, што вэганы маюць павышаную рызыку сьмерці ў~параўнаньні зь людзьмі, якія прытрымліваюцца іншых клясычных дыетаў, напрыклад міжземнаморскай. З~іншага боку, вэгетарыянскія дыеты зьмяншаюць рызыку цукровага дыябэту\index{дыябэт} і маюць шэраг карысных уласьцівасьцяў.
