--- a/nutrition/chapter20.tex
+++ b/nutrition/chapter20.tex
@@ -93,10 +93,10 @@
 \paragraph{Запраўка салаты.}
 Ня толькі алеем можна заправіць салату ці гародніну. Вы можаце таксама аддаць перавагу і шэрагу менш калярыйных заправак: кефіру, ёгурту, воцату, соку цытрыны і інш.
 
-\paragraph{Кета.}
-Кетадыета~--- гэта дасягненьне і ўтрыманьне харчовага кетозу, калі значная частка энэргіі выкарыстоўваецца з~кетонавых целаў. Па сутнасьці, кетадыета імітуе галаданьне. Дзеля дасягненьня кетозу абмяжоўваюцца вугляводы да 30 (15) грамаў, пры гэтым бялкі не павінны складаць больш за 25\,\% ад агульнай калярыйнасьці. Да лекавых уласьцівасьцяў кетадыеты можна аднесьці зьніжэньне прагрэсаваньня некаторых відаў эпілепсіі, раку, ажно да рэмісіі. Кетадыета дапамагае зьнізіць узровень запаленьня, нармалізаваць імунны адказ. Да станоўчых уласьцівасьцяў таксама адносяцца паляпшэньне настрою (больш высокая сімпатаадрэналавая актыўнасьць), высокія кагнітыўныя функцыі, зьніжэньне голаду (кетонавыя целы прыгнятаюць апэтыт), пахудзеньне з~захаваньнем цяглічнай масы, зьніжэньне рызыкі шматлікіх захворваньняў і г.~д. Пры наяўнасьці любых захворваньняў абавязковая кансультацыя са спэцыялістам. У~цэлым сярэдне- і нізкакалярыйныя дыеты паказваюць лепшыя вынікі ў~дачыненьні да працягласьці жыцьця і зьніжэньня запаленьня, чым кетадыета.
+\paragraph{Кета\index{кетадыета}.}
+Кетадыета~--- гэта дасягненьне і ўтрыманьне харчовага кетозу, калі значная частка энэргіі выкарыстоўваецца з~кетонавых целаў. Па сутнасьці, кетадыета\index{кетадыета} імітуе галаданьне. Дзеля дасягненьня кетозу абмяжоўваюцца вугляводы да 30 (15) грамаў, пры гэтым бялкі не павінны складаць больш за 25\,\% ад агульнай калярыйнасьці. Да лекавых уласьцівасьцяў кетадыеты можна аднесьці зьніжэньне прагрэсаваньня некаторых відаў эпілепсіі, раку, ажно да рэмісіі. Кетадыета дапамагае зьнізіць узровень запаленьня, нармалізаваць імунны адказ. Да станоўчых уласьцівасьцяў таксама адносяцца паляпшэньне настрою (больш высокая сімпатаадрэналавая актыўнасьць), высокія кагнітыўныя функцыі, зьніжэньне голаду (кетонавыя целы прыгнятаюць апэтыт), пахудзеньне з~захаваньнем цяглічнай масы, зьніжэньне рызыкі шматлікіх захворваньняў і г.~д. Пры наяўнасьці любых захворваньняў абавязковая кансультацыя са спэцыялістам. У~цэлым сярэдне- і нізкакалярыйныя дыеты паказваюць лепшыя вынікі ў~дачыненьні да працягласьці жыцьця і зьніжэньня запаленьня, чым кетадыета\index{кетадыета}.
 
-\tipbox{Да лекавых уласьцівасьцяў кетадыеты можна аднесьці зьніжэньне прагрэсаваньня эпілепсіі, некаторых відаў раку, ажно да рэмісіі. Кетадыета дапамагае зьнізіць узровень запаленьня, нармалізаваць імунны адказ. Аднак кетадыета пры названых станах зьяўляецца дапаможным, а~не асноўным спосабам лекаваньня.}
+\tipbox{Да лекавых уласьцівасьцяў кетадыеты можна аднесьці зьніжэньне прагрэсаваньня эпілепсіі, некаторых відаў раку, ажно да рэмісіі. Кетадыета дапамагае зьнізіць узровень запаленьня, нармалізаваць імунны адказ. Аднак кетадыета\index{кетадыета} пры названых станах зьяўляецца дапаможным, а~не асноўным спосабам лекаваньня.}
 
 Сярод адмоўных бакоў кетадыеты~--- адносна складанае датрыманьне з~кантролем кетонавых целаў і дыетычнымі абмежаваньнямі (любыя абмежавальныя дыеты павялічваюць рызыку парушэньняў харчовых паводзінаў), парушэньні ліпіднага профілю, зьніжэньне адчувальнасьці да інсуліну, павелічэньне нагрузкі на мочапалавую сыстэму, нэгатыўны ўплыў на мікрафлёру кішачніка, дэфіцыт мінэралаў, вітамінаў, клятчаткі. Першаснае ўваходжаньне ў~кетоз суправаджаецца зьніжэньнем працаздольнасьці і шэрагам нэгатыўных чыньнікаў.
 
