--- a/nutrition/chapter21.tex
+++ b/nutrition/chapter21.tex
@@ -28,15 +28,15 @@
 \tipbox{Бялкі добра засвойваюцца, сытасьць захоўваецца надоўга, чым і тлумачыцца наступнае зьніжэньне колькасьці спажываных калёрыяў. Высокабялковыя дыеты спрыяюць пахудзеньню, пры гэтым дапамагаючы лепш кантраляваць апэтыт.}
 
 \paragraph{Стымулятары mTORС\index{ген!mTORC}.}
-ВСАА амінакіслоты\index{амінакіслота з~разгалінаваным ланцугом (BCAA)} (лейцын\index{лейцын}, ізалейцын\index{ізалейцын} і валін\index{валін}) і метыянін\index{метыянін} стымулююць актыўнасьць mTORС\index{ген!mTORC}. Само па сабе гэта карысна пэрыядычна, але залішняя стымуляцыя прыводзіць да павелічэньня рызыкі шэрагу захворваньняў: ад атлусьценьня і аўтаімунных захворваньняў да заўчаснага старэньня, зьніжэньня хуткасьці аўтафагіі\index{аўтафагія} і рызыкі пухлінавых захворваньняў (гл. разьдзел «Хуткая і павольная ежа»). Ёсьць дадзеныя, што высокае спажываньне BCAA\index{амінакіслота з~разгалінаваным ланцугом (BCAA)} прыводзіць да зьніжэньня працягласьці жыцьця.
+ВСАА амінакіслоты\index{амінакіслота з~разгалінаваным ланцугом (BCAA)} (лейцын\index{лейцын}, ізалейцын\index{ізалейцын} і валін\index{валін}) і мэтыянін\index{мэтыянін} стымулююць актыўнасьць mTORС\index{ген!mTORC}. Само па сабе гэта карысна пэрыядычна, але залішняя стымуляцыя прыводзіць да павелічэньня рызыкі шэрагу захворваньняў: ад атлусьценьня і аўтаімунных захворваньняў да заўчаснага старэньня, зьніжэньня хуткасьці аўтафагіі\index{аўтафагія} і рызыкі пухлінавых захворваньняў (гл. разьдзел «Хуткая і павольная ежа»). Ёсьць дадзеныя, што высокае спажываньне BCAA\index{амінакіслота з~разгалінаваным ланцугом (BCAA)} прыводзіць да зьніжэньня працягласьці жыцьця.
 
 Больш за ўсё гэтых амінакіслотаў у~малочных прадуктах, асабліва ў~сыроватачным бялку і малацэ, менш~--- у~расьлінным бялку (за выключэньнем соевага бялку). Часта BCAA\index{амінакіслота з~разгалінаваным ланцугом (BCAA)} неўзаметку прысутнічае ў~выглядзе соевага парашка, сухога малака і г.~д. Важная ўласьцівасьць BCAA\index{амінакіслота з~разгалінаваным ланцугом (BCAA)}~--- магутная стымуляцыя інсуліну і актывацыя mTORС\index{ген!mTORC}, што ўзмацняецца ў~спалучэньні з~высокаглікемічнымі вугляводамі. Залішняя ўвесьчасная актывацыя mTORС\index{ген!mTORC} прыводзіць да залішняй сімпатаадрэналавай актыўнасьці і ўзмацняе стрэс, трывогу, нэўратычнасьць, павялічвае артэрыяльны ціск і пагаршае рэляксацыю і сон.
 
 \paragraph{Рызыка захворваньняў.}
-Высокабялковыя дыеты, асабліва на тле высокакалярыйнага харчаваньня, павялічваюць рызыку сардэчна-сасудзістых захворваньняў, нагрузку на ныркі. У~людзей з~утрыманьнем бялку ў~дыеце больш за 20\,\% ад каляражу рызыка захворваньняў вышэйшая, чым у~людзей з~утрыманьнем бялку ў~дыеце 10\,\% і менш. Высокабялковая дыета павялічвае рызыку захворваньня на цукровы дыябэт\index{дыябэт} другога тыпу і рызыку ракавых захворваньняў. Дыета зь нізкай колькасьцю мэтыяніну паляпшае хаду некаторых анкалягічных захворваньняў, зьніжае ўзровень сыстэмнага запаленьня.
+Высокабялковыя дыеты, асабліва на тле высокакалярыйнага харчаваньня, павялічваюць рызыку сар\-дэч\-на-сасудзістых захворваньняў, нагрузку на ныркі. У~людзей з~утрыманьнем бялку ў~дыеце больш за 20\,\% ад каляражу рызыка захворваньняў вышэйшая, чым у~людзей з~утрыманьнем бялку ў~дыеце 10\,\% і менш. Высокабялковая дыета павялічвае рызыку захворваньня на цукровы дыябэт\index{дыябэт} другога тыпу і рызыку ракавых захворваньняў. Дыета зь нізкай колькасьцю мэтыяніну\index{мэтыянін} паляпшае хаду некаторых анкалягічных захворваньняў, зьніжае ўзровень сыстэмнага запаленьня.
 
 \paragraph{Старэньне.}
-Лішак бялку ў~ежы, асабліва жывёльнага, скарачае працягласьць жыцьця і паскарае старэньне. Пры гэтым расьлінныя бялкі ня маюць такога ўплыву на захворваньне і працягласьць жыцьця, як жывёльныя (празь меншае ўтрыманьне мэтыяніну і ВСАА). Дыеты зь нізкім утрыманьнем мэтыяніну памяншаюць рызыку разьвіцьця шэрагу захворваньняў і павялічваюць працягласьць жыцьця. Абмежаваньне прадуктаў, багатых лейцынам\index{лейцын} (уваходзіць у~ВСАА), узьдзейнічае амаль эквівалентна нізкакалярыйнаму харчаваньню і падаўжае жыцьцё.
+Лішак бялку ў~ежы, асабліва жывёльнага, скарачае працягласьць жыцьця і паскарае старэньне. Пры гэтым расьлінныя бялкі ня маюць такога ўплыву на захворваньне і працягласьць жыцьця, як жывёльныя (празь меншае ўтрыманьне мэтыяніну\index{мэтыянін} і ВСАА). Дыеты зь нізкім утрыманьнем мэтыяніну\index{мэтыянін} памяншаюць рызыку разьвіцьця шэрагу захворваньняў і павялічваюць працягласьць жыцьця. Абмежаваньне прадуктаў, багатых лейцынам\index{лейцын} (уваходзіць у~ВСАА), узьдзейнічае амаль эквівалентна нізкакалярыйнаму харчаваньню і падаўжае жыцьцё.
 
 \paragraph{Засваеньне мінэралаў.}
 Мінэралы, якія атрымліваюцца з~жывёльных прадуктаў, засвойваюцца нашмат лепш, чым з~расьліннай ежы. Антынутрыенты\index{антынутрыенты} запавольваюць усмоктваньне цынку, жалеза і сэлену\index{сэлен}, таму мяса лепш есьці з~гароднінай, а~ня з~крупамі (збажына, бабовыя). Аднак лішак жалеза (часьцей у~мужчын), назапашваючыся з~узростам, вельмі нэгатыўна ўплывае на здароўе. Жалеза (як і медзь)~--- гэта мэтал зь пераходнай валентнасьцю, таму яго надмер паскарае перакіснае акісьленьне тлушчаў, што павялічвае рызыку шматлікіх захворваньняў~--- ад атлусьценьня і раку да нэўрадэгенэратыўных захворваньняў. Дэфіцыт жалеза (часьцей у~жанчын)~--- таксама сур'ёзная праблема, якая пагаршае самаадчуваньне, вонкавы выгляд і здароўе.
@@ -98,8 +98,8 @@
 \paragraph{Лішак і недахоп жалеза.}
 Вялікая колькасьць чырвонага мяса (асабліва ў~рацыёне мужчынаў) прыводзіць да назапашваньня залішняга жалеза. Праверыць яго варта, здаўшы аналіз на ўзровень фэрытыну\index{фэрытын}. Калі ён высокі, то лепшы спосаб зьніжэньня~--- стаць донарам. Здавайце 1--3 разы на год кроў, рэгулярна правярайце ўзровень жалеза, асабліва калі ў~вас ёсьць генэтычная схільнасьць да яго назапашваньня.
 
-\paragraph{Мэтыянін і кантэкст дыеты.}
-Істотна ўплывае і кантэкст дыеты. Напрыклад, у~чалавека, які есьць шмат мяса і мучнога, мала зеляніны і гародніны, спажываньне мэтыяніну можа прыводзіць да павелічэньня ў~крыві гомацыстэіну, што вельмі шкодна для сасудаў. А~вось калі зь мясам есьці больш гародніны, то мэтыянін будзе лепш засвойвацца з~наяўнасьцю вітамінаў В12, В9, прадуктаў-донараў мэтыльных групаў (халін, бэтаін у~капустах і да т.~п.). Людзям з~мутацыямі фолатнага цыклю (MTHFR, MTR, MTRR) і з~падвышаным гомацыстэінам варта таксама больш уважліва ставіцца да спажываньня чырвонага мяса.
+\paragraph{Мэтыянін\index{мэтыянін} і кантэкст дыеты.}
+Істотна ўплывае і кантэкст дыеты. Напрыклад, у~чалавека, які есьць шмат мяса і мучнога, мала зеляніны і гародніны, спажываньне мэтыяніну можа прыводзіць да павелічэньня ў~крыві гомацыстэіну, што вельмі шкодна для сасудаў. А~вось калі зь мясам есьці больш гародніны, то мэтыянін\index{мэтыянін} будзе лепш засвойвацца з~наяўнасьцю вітамінаў В12, В9, прадуктаў-донараў мэтыльных групаў (халін, бэтаін у~капустах і да т.~п.). Людзям з~мутацыямі фолатнага цыклю (MTHFR, MTR, MTRR) і з~падвышаным гомацыстэінам варта таксама больш уважліва ставіцца да спажываньня чырвонага мяса.
 
 \paragraph{Гатоўля.}
 Бялковыя прадукты вельмі адчувальныя да гатоўлі (гл. разьдзел па гатаваньні). Аптымальныя ашчадныя спосабы гатоўлі, марынаваньне мяса кіслым (воцат, цытрына) і спэцыямі, варыць, а~ня смажыць. Гэта скарачае тэрмін гатаваньня і прадухіляе ўтварэньне шкодных рэчываў. Цікава, што вараная рыба павялічвае працягласьць жыцьця і паляпшае настрой (зьніжэньне рызыкі дэпрэсіі), а~вось смажаная~--- не.
@@ -111,10 +111,10 @@
 Вядома, дастатковы ўзровень бялку важны для цяглічнага росту. Але яго ўплыў часта пераацэньваецца. Так, сілавыя трэніроўкі павышаюць сынтэз бялку на 40\,\%, а~выкарыстаньне бялку дадае толькі 10\,\%, то-бок ключавым момантам зьяўляюцца трэніроўкі, а~не бялок. Залішні бялок не павялічвае інтэнсіўнасьці росту цягліцаў.
 
 \paragraph{Малочныя прадукты.}
-Малако~--- гэта не звычайны структурны бялок (як мяса), а~сыгнальны, які актывуе рост маладых арганізмаў. У~ім шмат лейцыну (да 14\,\%), ён мае высокі інсулінавы індэкс і пры ўжываньні ў~вялікай колькасьці можа выклікаць шэраг адмоўных эфэктаў. У~малацэ таксама ёсьць цукар галактоза, які паскарае старэньне, і ляктоза, непераноснасьць якой (як прыроджаная, так і набытая) нэгатыўна ўплывае на работу кішачніка. Залішняе спажываньне малака можа павялічваць рызыку разьвіцьця некаторых відаў раку. Асабліва неспрыяльна спалучэньне малочнага, салодкага і мучнога разам. Таму ўжываньне цэльных малочных прадуктаў варта абмежаваць, зрабіўшы ўмеранае выключэньне для фэрмэнтаваных прадуктаў (цэльныя кефір, ёгурт) або сыроў, але ў~невялікай колькасьці. Так, кефір можна ня проста піць, а~запраўляць ім салату. А~ўжо пра кефір на ноч, як мы цяпер ведаем, і зусім варта забыць!
+Малако~--- гэта не звычайны структурны бялок (як мяса), а~сыгнальны, які актывуе рост маладых арганізмаў. У~ім шмат лейцыну (да 14\,\%), ён мае высокі інсулінавы індэкс і пры ўжываньні ў~вялікай колькасьці можа выклікаць шэраг адмоўных эфэктаў. У~малацэ таксама ёсьць цукар галактоза, які паскарае старэньне, і ляктоза\index{ляктоза}, непераноснасьць якой (як прыроджаная, так і набытая) нэгатыўна ўплывае на работу кішачніка. Залішняе спажываньне малака можа павялічваць рызыку разьвіцьця некаторых відаў раку. Асабліва неспрыяльна спалучэньне малочнага, салодкага і мучнога разам. Таму ўжываньне цэльных малочных прадуктаў варта абмежаваць, зрабіўшы ўмеранае выключэньне для фэрмэнтаваных прадуктаў (цэльныя кефір, ёгурт) або сыроў, але ў~невялікай колькасьці. Так, кефір можна ня проста піць, а~запраўляць ім салату. А~ўжо пра кефір на ноч, як мы цяпер ведаем, і зусім варта забыць!
 
 \paragraph{Соя і яе вытворныя.}
-Соевы бялок часта выкарыстоўваецца ў~гатовай ежы і паўфабрыкатах. Ён мае высокае ўтрыманьне мэтыяніну (у параўнаньні зь іншымі бабовымі), высокую эстрагенную актыўнасьць і ня вельмі добра засвойваецца. Іншыя бабовыя больш карысныя, чым соевыя прадукты. Іх есьці можна, але ва ўмеранай колькасьці.
+Соевы бялок часта выкарыстоўваецца ў~гатовай ежы і паўфабрыкатах. Ён мае высокае ўтрыманьне мэтыяніну\index{мэтыянін} (у параўнаньні зь іншымі бабовымі), высокую эстрагенную актыўнасьць і ня вельмі добра засвойваецца. Іншыя бабовыя больш карысныя, чым соевыя прадукты. Іх есьці можна, але ва ўмеранай колькасьці.
 
 \paragraph{Нізкагістамінавая дыета.}
-Вельмі часта прычынай непераноснасьці асобных прадуктаў зьяўляецца не харчовая алергія, а~непераноснасьць гістаміну (фальшывая харчовая алергія). У~гэтым выпадку добра дапамагае абмежаваньне прадуктаў, якія ўтрымліваюць гістамін ды іншыя біягенныя аміны\index{біягенныя аміны}. Паўфабрыкаты зь бялковых прадуктаў, працяглае іх захоўваньне павялічваюць рызыку іх непераноснасьці ў~адчувальных да гэтага людзей. У~нізкагістамінавую дыету ўваходзіць выключэньне мясных кансэрваў, сушанага, вяленага мяса, мяса працяглага захоўваньня, каўбасы, фаршу, мяса бяз даты расфасоўкі і г.~д. Шмат можа быць гістаміну ў~рыбе, асабліва ў~тунцы, сардзіне, скумбрыі, у~рыбных соўсах, сьвежай крамнай рыбе. Выбірайце рыбу глыбокай замарозкі і не размарожвайце яе працягла ў~лядоўні. У~вытрыманых сырах таксама можа зьмяшчацца шмат гістаміну ды іншых амінаў. Пры гэтым сьметанковае масла і маладыя сыры дапушчальныя.
+Вельмі часта прычынай непераноснасьці асобных прадуктаў зьяўляецца не харчовая алергія, а~непераноснасьць гістаміну (фальшывая харчовая алергія). У~гэтым выпадку добра дапамагае абмежаваньне прадуктаў, якія ўтрымліваюць гістамін ды іншыя біягенныя аміны\index{аміны!біягенныя}. Паўфабрыкаты зь бялковых прадуктаў, працяглае іх захоўваньне павялічваюць рызыку іх непераноснасьці ў~адчувальных да гэтага людзей. У~нізкагістамінавую дыету ўваходзіць выключэньне мясных кансэрваў, сушанага, вяленага мяса, мяса працяглага захоўваньня, каўбасы, фаршу, мяса бяз даты расфасоўкі і г.~д. Шмат можа быць гістаміну ў~рыбе, асабліва ў~тунцы, сардзіне, скумбрыі, у~рыбных соўсах, сьвежай крамнай рыбе. Выбірайце рыбу глыбокай замарозкі і не размарожвайце яе працягла ў~лядоўні. У~вытрыманых сырах таксама можа зьмяшчацца шмат гістаміну ды іншых амінаў. Пры гэтым сьметанковае масла і маладыя сыры дапушчальныя.
