--- a/nutrition/chapter23.tex
+++ b/nutrition/chapter23.tex
@@ -66,7 +66,7 @@
 У тым, каб зрэдку зьесьці нешта салёнае, небясьпекі няма. Рэдкае ўжываньне нават вельмі салёных страў не нашкодзіць, арганізм эфэктыўна дасьць рады з~гэтым. Дадавайце больш гародніны да салёных страў.
 
 \paragraph{Перапрацаваная расьлінная ежа.}
-Прадукты, вырабленыя з~расьлінаў, тым ня менш часьцей за ўсё ўтрымліваюць лішак натрыю. Так, падсолены таматавы сок зьмяшчае лішак натрыю, а~таксама шмат солі і ў~хлебе.
+Прадукты, вырабленыя з расьлінаў, тым ня менш часьцей за ўсё ўтрымліваюць лішак натрыю. Так, падсолены таматавы сок зьмяшчае лішак натрыю, а~таксама шмат солі і ў~хлебе.
 
 \paragraph{Недахоп солі.}
 Занадта нізкае ўтрыманьне натрыю небясьпечнае і шкоднае. Але дэфіцыт натрыю ў~людзей, якія спажываюць дастаткова жывёльнай ежы і хоць зрэдку нешта з~гатовай ежы, малаімаверны. У~групе рызыкі могуць быць вэганы (якія не ўжываюць соль і гатовыя прадукты), людзі, якія жывуць у~гарачым клімаце, занятыя цяжкай фізычнай працай, пасьля дыярэі і да т.~п.
