--- a/nutrition/chapter24.tex
+++ b/nutrition/chapter24.tex
@@ -12,7 +12,7 @@
 
 Многія з~генэтычных асаблівасьцяў сфармаваліся пад уплывам чыньнікаў асяродзьдзя, у~якім жылі нашы продкі, і ўяўляюць сабой адаптацыі. Напрыклад, у~большасьці эўрапэйцаў сустракаюцца такія варыянты генаў FADS1\index{ген!FADS1} і FADS2\index{ген!FADS2}, якія ня могуць сынтэзаваць жывёльныя формы амэга-3 тлустых кіслотаў з~расьлінных, а~ў Азіі «вэгетарыянскіх» формаў такіх генаў больш.
 
-Зразумела, вялікае значэньне мае і актуальны стан здароўя чалавека, дастатковасьць усіх вітамінаў і мінэралаў. Як я ўжо згадваў, іх аптымальны ўзровень паляпшае мэтабалізм, розныя нутрыенты здольныя палепшыць сыстэму дэтаксыкацыі арганізму і тым самым паўплываць на абмен гармонаў унутры арганізму. Прапорцыі розных макранутрыентаў залежаць ад адчувальнасьці чалавека да інсуліну і да лептыну, узроўню яго фізычнай актыўнасьці. Чым ён вышэйшы, тым, напрыклад, больш бясьпечным будзе ўжываньне вялікіх колькасьцяў вугляводаў. На ступень засваеньня мінэралаў, прыкладам, моцна ўплывае кіслотнасьць страўніка: калі яна паніжаная, тое іх засваеньне будзе слабейшым.
+Зразумела, вялікае значэньне мае і актуальны стан здароўя чалавека, дастатковасьць усіх вітамінаў і мінэралаў. Як я ўжо згадваў, іх аптымальны ўзровень паляпшае мэтабалізм, розныя нутрыенты здольныя палепшыць сыстэму дэтаксыкацыі арганізму і тым самым паўплываць на абмен гармонаў унутры арганізму. Прапорцыі розных макранутрыентаў\index{макранутрыенты} залежаць ад адчувальнасьці чалавека да інсуліну і да лептыну, узроўню яго фізычнай актыўнасьці. Чым ён вышэйшы, тым, напрыклад, больш бясьпечным будзе ўжываньне вялікіх колькасьцяў вугляводаў. На ступень засваеньня мінэралаў, прыкладам, моцна ўплывае кіслотнасьць страўніка: калі яна паніжаная, тое іх засваеньне будзе слабейшым.
 
 \subsection{Як гэта ўплывае на здароўе?}
 
@@ -31,7 +31,7 @@
 Гэты ген зьвязаны з~больш нізкай шчыльнасьцю дафамінавых D2 рэцэптараў у~галаўным мозгу. Яго носьбіты атрымліваюць прыкметна менш задавальненьня ад жыцьця і ад ежы. Людзям зь нізкай шчыльнасьцю дафамінавых рэцэптараў для атрыманьня задавальненьня трэба зьесьці нашмат больш, што яны і робяць. Як толькі жыцьцё такіх людзей становіцца бязрадасным, яны пачынаюць вельмі шмат есьці, пераядаць для кампэнсацыі ўзроўню дафаміну\index{дафамін}. Што рабіць? Трэба больш радасьці, а~ня ежы. Ёсьць і некалярыйныя спосабы атрыманьня задавальненьня ад ежы, і ня толькі ад яе. Гэта і прыгожы абрус, прыборы, сэрвіроўка, падача, размовы, час ежы, смакаваньне і ўсьвядомленая ежа. Таксама важна дадаць больш задавальненьня зь іншых сфэр жыцьця. Гэта падыме ўзровень дафаміну\index{дафамін}, і пераяданьне аслабне.
 
 \paragraph{FTO\index{ген!FTO}.}
-Гэты ген служыць актыватарам выдзяленьня гармону голаду грэліну. У~носьбітаў яго «тлустых» вэрсыяў узровень грэліну ня падае пасьля ежы, як павінна быць, а~застаецца высокім. Таму такія людзі пераядаюць і аддаюць перавагу высокатлушчавыя прадукты. Узровень грэліну павялічваецца пры стрэсе, таму ў~адказ на яго носьбіты зьядаюць шмат лішняга. Што рабіць? Грэлін~--- гэта ня так кепска, як здаецца, ён, напрыклад, зьніжае рызыку дэпрэсіі і стымулюе нэўрагенэз\index{нэўрагенэз}. Для носьбітаў AA вэрсыяў FTO\index{ген!FTO} важна прытрымлівацца рэжыму харчаваньня, не перакусваць, не прапускаць прыёмы ежы і не рабіць харчовых разгрузак на тле павышанага стрэсу. Кантроль стрэсу і рэжыму харчаваньня дазволіць эфэктыўна даць рады з~кампульсіўным пераяданьнем у~гэтым выпадку.
+Гэты ген служыць актыватарам выдзяленьня гармону голаду грэліну\index{грэлін}. У~носьбітаў яго «тлустых» вэрсыяў узровень грэліну ня падае пасьля ежы, як павінна быць, а~застаецца высокім. Таму такія людзі пераядаюць і аддаюць перавагу высокатлушчавыя прадукты. Узровень грэліну\index{грэлін} павялічваецца пры стрэсе, таму ў~адказ на яго носьбіты зьядаюць шмат лішняга. Што рабіць? Грэлін~--- гэта ня так кепска, як здаецца, ён, напрыклад, зьніжае рызыку дэпрэсіі і стымулюе нэўрагенэз\index{нэўрагенэз}. Для носьбітаў AA вэрсыяў FTO\index{ген!FTO} важна прытрымлівацца рэжыму харчаваньня, не перакусваць, не прапускаць прыёмы ежы і не рабіць харчовых разгрузак на тле павышанага стрэсу. Кантроль стрэсу і рэжыму харчаваньня дазволіць эфэктыўна даць рады з~кампульсіўным пераяданьнем у~гэтым выпадку.
 
 \paragraph{Генэтыка смаку.}
 У розных людзей генэтычна розны парог адрозьніваньня смакаў, таму сапраўды «дзеду міла, а~ўнуку гніла». Памятайце, што ваша харчаваньне павінна прыносіць задавальненьне, таму з~шырокага спэктру прадуктаў важна выбіраць, кіруючыся сваім смакам!
@@ -108,4 +108,4 @@
 Мікрафлёра ротавай поласьці важная для нашага здароўя. Пазьбягайце лішку мучнога (глютэн\index{глютэн} прыляпляе часьціцы крухмалу да зубоў), бактэрыцыдных апалосквальнікаў для рота, выкарыстоўвайце аральныя прабіётыкі\index{прабіётыкі} (S. Salivarius і інш.).
 
 \paragraph{Індывідуальная праграма абсьледаваньня.}
-Таксама на ваш стан уплывае і здароўе. Рэгулярна правярайце яго, здавайце неабходныя, а~лепей~--- пашыраныя дыягнастычныя панэлі. Прыклад падобнай лябараторнай панэлі: глюкоза, глікаваны гемаглабін, інсулін, індэкс інсулінарэзыстэнтнасьці\index{інсулінарэзыстэнтнасьць}, Алат, Асат, крэатынін, мачавая кіслата, гомацыстэін, ультраадчувальны тэст на С-рэактыўны бялок, гармоны шчытападобнай залозы (ТТГ, св. Т3), палавыя гармоны, ІФР-1, гармон росту, цынк, магній, жалеза, фэрытын\index{фэрытын}, вітамін D, вітамін В12. Да іх можна дадаць інструмэнтальныя тэсты, напрыклад УГД сонных артэрыяў з~вызначэньнем таўшчыні комплексу інтым-мэдыя. Пры неабходнасьці можна дапаўняць іншымі абсьледаваньнямі, у~залежнасьці ад узросту і індывідуальнай рызыкі (сямейная гісторыя захворваньняў, генэтычныя рызыкі шэрагу захворваньняў і дэфіцытаў і інш.): анкамаркеры, каланаскапія, фібрагастрадуадэнаскапія і іншыя паказьнікі.
+Таксама на ваш стан уплывае і здароўе. Рэгулярна правярайце яго, здавайце неабходныя, а~лепей~--- пашыраныя дыягнастычныя панэлі. Прыклад падобнай лябараторнай панэлі: глюкоза, глікаваны гемаглабін, інсулін, індэкс інсулінарэзыстэнтнасьці\index{інсулінарэзыстэнтнасьць}, Алат, Асат, крэатынін, мачавая кіслата, гомацыстэін, ультраадчувальны тэст на C-рэактыўны бялок\index{C-рэактыўны бялок}, гармоны шчытападобнай залозы (ТТГ, св. Т3), палавыя гармоны, ІФР-1, гармон росту, цынк, магній, жалеза, фэрытын\index{фэрытын}, вітамін D, вітамін В12. Да іх можна дадаць інструмэнтальныя тэсты, напрыклад УГД сонных артэрыяў з~вызначэньнем таўшчыні комплексу інтым-мэдыя. Пры неабходнасьці можна дапаўняць іншымі абсьледаваньнямі, у~залежнасьці ад узросту і індывідуальнай рызыкі (сямейная гісторыя захворваньняў, генэтычныя рызыкі шэрагу захворваньняў і дэфіцытаў і інш.): анкамаркеры, каланаскапія, фібрагастрадуадэнаскапія і іншыя паказьнікі.
