--- a/nutrition/chapter5.tex
+++ b/nutrition/chapter5.tex
@@ -10,13 +10,13 @@
 
 \tipbox{Велізарная колькасьць сьвятлодыёдных выпраменьваньняў з~высокаю доляй сьвятла сіняга спэктру (тэлефоны, кампутары, пляншэты, тэлевізары, сьвятлодыёдныя лямпы і інш.) зьбіваюць нашы ўнутраныя гадзіньнікі. Сьвятло такога спэктру дае сыгнал аб тым, што цяпер дзень, і абвастрае пачуцьцё голаду.}
 
-\paragraph{Цыркадная гіпэрфагія (пераяданьне)\index{цыркадная гіперфагія}.}
+\paragraph{Цыркадная гіпэрфагія (пераяданьне)\index{гіперфагія!цыркадная}.}
 Пытаньне вячэрняга харчаваньня і вячэры шчыльна зьвязана з~работай нашых цыркадных біярытмаў\index{цыркадныя рытмы}. Велізарная колькасьць сьвятлодыёдных выпраменьваньняў з~высокаю доляй сьвятла сіняга спэктру (тэлефоны, кампутары, пляншэты, тэлевізары, сьвятлодыёдныя лямпы і інш.) зьбіваюць нашы ўнутраныя гадзіньнікі. Сьвятло такога спэктру дае сыгнал аб тым, што цяпер дзень, і абвастрае пачуцьцё голаду.
 
 \paragraph{Гіперфагія\index{гіперфагія} і эпідэмія стрэсу.}
 Хранічны стрэс становіцца распаўсюджанай зьявай. Калі востры стрэс часьцей прытупляе апэтыт, то хранічны~--- наадварот, узмацняе з~прычыны падвышанай выпрацоўкі грэліну\index{грэлін}. Стомленасьць і голад на глебе стрэсу павялічваюцца ўвечары, што прыводзіць да пераяданьня. Больш за тое, грэлін\index{грэлін} узбуджае нэрвовую сыстэму, таму людзі вымушаныя есьці для таго, каб заснуць, выкарыстоўваючы ежу як снатворнае. Злоўжываньне кафэінам\index{кафэін} і алькаголем\index{алькаголь} таксама пагаршае разлады прыёму ежы.
 
-\paragraph{Геданічная гіпэрфагія} (імкненьне есьці дзеля атрыманьня задавальненьня пры адсутнасьці дэфіцыту энэргіі).
+\paragraph{Геданічная гіпэрфагія\index{гіперфагія!геданічная}} (імкненьне есьці дзеля атрыманьня задавальненьня пры адсутнасьці дэфіцыту энэргіі).
 Акрамя стрэсу, існуе і сындром дэфіцыту задаволенасьці, калі назіраецца зьніжэньне здольнасьці атрымліваць задавальненьне ад жыцьця. Такія людзі ядуць, бо ім сумна, тужліва, самотна, мала радасьцяў, і выбіраюць пры гэтым максымальна калярыйныя прадукты, нездаровыя спалучэньні мучнога, тлустага, салодкага, смажанага, салёнага і інш.
 
 \tipbox{У людзей, якія пакутуюць на начныя перакусы, парушаная работа біялягічных рытмаў, фізыялягічная работа шматлікіх гармонаў, нармальны абмен рэчываў. Чым больш і чым часьцей чалавек есьць позна, тым больш выяўленымі могуць быць яго сымптомы і парушэньні сну.}
@@ -83,7 +83,7 @@
 Яны ўтрымліваюць вялікую колькасьць цукру, солі і ўзмацняльнікаў смаку. Салёныя прадукты на вячэру прывядуць да затрымкі вадкасьці і да таго, што вы будзеце выглядаць раніцай горш.
 
 \paragraph{Менш тыраміну\index{тырамін}.}
-На вячэру ня варта есьці прадукты, якія ўтрымліваюць шмат біягенных амінаў\index{біягенныя аміны}, напрыклад тыраміну. Яны ўзмацняюць выдзяленьне адрэналіну і пагаршаюць сон. Тырамін\index{тырамін} ёсьць у~чакалядзе, віне, соўсах, сырах і шэрагу бялковых і малочных паўфабрыкатаў.
+На вячэру ня варта есьці прадукты, якія ўтрымліваюць шмат біягенных амінаў\index{аміны!біягенныя}, напрыклад тыраміну. Яны ўзмацняюць выдзяленьне адрэналіну і пагаршаюць сон. Тырамін\index{тырамін} ёсьць у~чакалядзе, віне, соўсах, сырах і шэрагу бялковых і малочных паўфабрыкатаў.
 
 \paragraph{Задавальненьне ўвечары.}
 Плянуйце прыемнае на вечар загадзя і рабіце гэта, нават калі ня хочацца. Такі прынцып ляжыць у~аснове мэтаду паводзіннай актывацыі, вельмі эфэктыўнай пры дэпрэсіі. Тут пасуе хобі, камунікацыя з~роднымі і сябрамі, любое некалярыйнае задавальненьне. Калі мы стамляемся, то можам адмаўляцца ад зносінаў, значных для нас справаў. Але ж калі мозг пазбаўляецца эмацыйнага падсілкоўваньня, ён шукае спосабы папоўніць яго дэфіцыт~--- і знаходзіць у~ежы! Са свайго досьведу я бачу, што вячэрні голад вельмі часта мае эмацыйныя карані.
