--- a/nutrition/chapter7.tex
+++ b/nutrition/chapter7.tex
@@ -29,7 +29,7 @@
 \paragraph{Грэлін\index{грэлін} і галаўны мозг.}
 Сэнс дзеяньня гармону голаду грэліну~--- не пазбавіць вас сілаў, а, наадварот, прастымуляваць, каб вы змаглі рухацца хутчэй і лепей цяміць. Менавіта таму грэлін\index{грэлін} мае вялікую колькасьць карысных дзеяньняў. Так, ён стымулюе выдзяленьне самататропнага гармону\index{самататропны гармон (СTГ)} (гармон голаду), які, у~сваю чаргу, стымулюе аўтафагію\index{аўтафагія}.
 
-Вельмі дабратворна ўзьдзейнічаюць голад і грэлін\index{грэлін} на працу галаўнога мозгу. Грэлін стымулюе выпрацоўку нэўратрафічнага чыньніка BDNF, нэўрагенэз, дапамагае абараніць мозг ад старэньня. Голад паляпшае памяць, здольнасьць вучыцца («поўнае бруха да навукі глуха»), падтрымлівае нармальную працу гіпакампу\index{гіпакамп}, зьніжае рызыку разьвіцьця нэўрадэгенэратыўных захворваньняў, у~тым ліку хваробаў Паркінсана\index{хвароба!Паркінсана} і Альцгаймэра\index{хвароба!Альцгаймэра}. Важным зьяўляецца і антыдэпрэсіўнае дзеяньне грэліну. Так, голад прыкметна зьніжае рызыку дэпрэсіі і стымулюе «пошук навізны», выдзяленьне дафаміну і захаваньне «смаку да жыцьця». Калі ўвесьці грэлін\index{грэлін} экспэрымэнтальным жывёлам, то яны актыўней пачынаюць дасьледаваць ды імкнуцца вывучаць новае; у~чалавека~--- усё тое ж самае.
+Вельмі дабратворна ўзьдзейнічаюць голад і грэлін\index{грэлін} на працу галаўнога мозгу. Грэлін стымулюе выпрацоўку нэўратрафічнага чыньніка BDNF, нэўрагенэз\index{нэўрагенэз}, дапамагае абараніць мозг ад старэньня. Голад паляпшае памяць, здольнасьць вучыцца («поўнае бруха да навукі глуха»), падтрымлівае нармальную працу гіпакампу\index{гіпакамп}, зьніжае рызыку разьвіцьця нэўрадэгенэратыўных захворваньняў, у~тым ліку хваробаў Паркінсана\index{хвароба!Паркінсана} і Альцгаймэра\index{хвароба!Альцгаймэра}. Важным зьяўляецца і антыдэпрэсіўнае дзеяньне грэліну. Так, голад прыкметна зьніжае рызыку дэпрэсіі і стымулюе «пошук навізны», выдзяленьне дафаміну і захаваньне «смаку да жыцьця». Калі ўвесьці грэлін\index{грэлін} экспэрымэнтальным жывёлам, то яны актыўней пачынаюць дасьледаваць ды імкнуцца вывучаць новае; у~чалавека~--- усё тое ж самае.
 
 \paragraph{Голад і матывацыя.}
 Грэлін\index{грэлін} узмацняе ня толькі імкненьне да ежы, але і ў~цэлым «матывацыю». На жывёлах дакладна даведзена: чым больш грэліну, тым больш гатовая жывёла працаваць для атрыманьня ўзнагароды. Больш грэліну\index{грэлін}~--- больш матывацыі!
