--- a/willpower/chapter1.tex
+++ b/willpower/chapter1.tex
@@ -25,7 +25,7 @@
 
 Людзі зьвяртаюцца да курсу ўмацаваньня здароўя, каб вырашыць праблемы, якія ўжо існуюць. Хваробы спустошваюць нашыя рэсурсы, робяць нас больш адчувальнымі і слабымі. Умацаваньне ж здароўя ня толькі дапамагае нам прапампаваць арганізм, але і павышае ступень кантролю над сваім целам, што прыводзіць да памяншэньня болевае адчувальнасьці, паляпшэньня стану нават пры існых хваробах.
 
-Здаровы лад жыцьця вельмі эфэктыўны для прадухіленьня захворваньняў, нават анкалёгіі. Высьветлена, што імавернасьць захворваньня на рак у~здаровага чалавека на 40\,\% ніжэйшая, чым у~чалавека са слабым здароўем. Нават калі адэпт ЗЛЖ хварэе, то рызыка сьмяротнага зыходу скарачаецца на 14-60\,\%.
+Здаровы лад жыцьця вельмі эфэктыўны для прадухіленьня захворваньняў, нават анкалёгіі. Высьветлена, што імавернасьць захворваньня на рак у~здаровага чалавека на 40\,\% ніжэйшая, чым у~чалавека са слабым здароўем. Нават калі адэпт ЗЛЖ хварэе, то рызыка сьмяротнага зыходу скарачаецца на 14--60\,\%.
 
 \subsubsection{Павысіць узровень энэргіі, разумовую і фізычную працаздольнасьць.} 
 Сёньня многія прыходзяць да мяне па здароўе, але называюць яго інакш~--- энэргіяй. Такі запыт узьнікае, калі чалавек пачуваецца добра, але сутыкаецца з~падвышанай нагрузкай. Часта людзі адмаўляюцца ад пэрспэктыўнай працы ці пашырэньня бізнэсу з~прычыны стомленасьці, выгараньня. Іх звыклы ўзровень здароўя недастатковы, і каб адаптавацца да новых патрэбаў і ня выгараць, трэба павялічваць «запас здароўя». Не ахвяруйце здароўем дзеля працы, умацоўвайце здароўе і працуйце з~задавальненьнем! Упэўнены, што мацнейшае здароўе забясьпечыць вам і высокую працаздольнасьць без выгараньня.
@@ -50,7 +50,7 @@
 
 Страх сьмерці і нямогласьці палохае людзей. Часта здароўе ўспрымаецца як магчымасьць пражыць даўжэй, пазьбегнуць або мінімізаваць бездапаможнасьць і крохкасьць старэчых гадоў, падоўжыць ня проста гады, а~менавіта актыўны час свайго жыцьця. Бо цяпер, на тле павелічэньня працягласьці жыцьця, расьце колькасьць хваробаў, якія азмрочваюць апошнія гады самога чалавека і стан яго навакольных.
 
-\tipbox{Здаровы лад жыцьця сам па сабе ня можа радыкальна падоўжыць жыцьцё, а~супердоўгажыхары ў~большасьці сваёй маюць да гэтага генэтычную схільнасьць. Але простыя правілы падтрыманьня здароўя могуць у~сярэднім падоўжыць жыцьцё мужчынаў на 7-8 гадоў, а~жанчынаў~--- на 10 гадоў, а~таксама прыкметна зьменшыць рызыку многіх захворваньняў.}
+\tipbox{Здаровы лад жыцьця сам па сабе ня можа радыкальна падоўжыць жыцьцё, а~супердоўгажыхары ў~большасьці сваёй маюць да гэтага генэтычную схільнасьць. Але простыя правілы падтрыманьня здароўя могуць у~сярэднім падоўжыць жыцьцё мужчынаў на 7--8 гадоў, а~жанчынаў~--- на 10 гадоў, а~таксама прыкметна зьменшыць рызыку многіх захворваньняў.}
 
 Вы ня проста пражывяце даўжэй, але яшчэ й зможаце даўжэй заставацца маладым, аддаляць час пачатку захворваньняў. Гэта ў~вашых руках. І самае важнае: здароўе вельмі моцна паляпшае якасьць жыцьця практычна ва ўсіх яго аспэктах!
 
@@ -60,7 +60,7 @@
 
 Дэпрэсія можа ўзьнікаць у~сувязі з~мноствам біялягічных чыньнікаў, у~тым ліку атлусьценьне, хранічнае запаленьне, парушэньні працы шчытападобнай залозы, зьніжэньне ўзроўню тэстастэрону і да т.~п., а~ня толькі праз стрэс.
 
-Вялікае значэньне мае і генэтыка: узровень самаадчуваньня на 35-40\,\% вызначаецца генамі. Напрыклад, носьбіты «доўгіх» варыяцый сератанінавага гену 5-HTTLPR шчасьлівейшыя за ўладальнікаў «кароткіх» варыяцый. А мо справа ў~нізкім узроўні літыю ў~пітной вадзе ці дэфіцыце фолевай кісьлі? Як бачыце, пытаньне шчасьця шмат у~чым злучанае з~нашай біялёгіяй.
+Вялікае значэньне мае і генэтыка: узровень самаадчуваньня на 35--40\,\% вызначаецца генамі. Напрыклад, носьбіты «доўгіх» варыяцый сератанінавага гену 5-HTTLPR шчасьлівейшыя за ўладальнікаў «кароткіх» варыяцый. А мо справа ў~нізкім узроўні літыю ў~пітной вадзе ці дэфіцыце фолевай кісьлі? Як бачыце, пытаньне шчасьця шмат у~чым злучанае з~нашай біялёгіяй.
 
 \textbf{Калі вы часта і падоўгу пачуваецеся няшчасным~--- гэта можа быць сымптомам захворваньня. А для шчасьця патрэбнае як фізычнае, так і псыхічнае здароўе.}
 
