--- a/willpower/chapter10.tex
+++ b/willpower/chapter10.tex
@@ -59,7 +59,7 @@
 
 Навукоўцы сур'ёзна занепакоеныя эпідэміяй самоты. Сябры і камунікацыя~--- гэта незаменныя вітаміны для нашага мозгу, бо ўся гісторыя чалавека прайшла ў~цесным кантакце зь іншымі: ад вялікай сям'і да згуртаванай супольнасьці. Самота, нават не ўсьвядомленая, глыбока нефізыялягічная для нашага арганізма, нам эвалюцыйна прызначана быць у~кантакце са сваякамі й суродзічамі. Наш мозг успрымае змушаную адзіноту як сымптом хваробы і рэагуе на яго адпаведна.
 
-Але цяпер грамадства ўсё больш атамізуецца, распадаецца. З аднаго боку, у~нас усё больш магчымасьцяў мяняць сваё атачэньне, вандраваць, быць на сувязі. Адваротны бок мабільнасьці~--- гэта зьніжэньне колькасьці доўгатэрміновых сувязяў і слабоя ўкараненьне людзей. Мы бачым, што ўсё больш людзей пачуваюцца самотнымі: у~заходніх краінах гэтая лічба складае 20-40\,\% дарослага насельніцтва. Сучаснае грамадства часта завуць ``вадкім'' (liquid society), калі сталыя пераезды прыводзяць да таго, што ў~нас менее грамадзкіх сувязяў, мы надаём недастаткова ўвагі адносінам у~адрозьненьне ад традыцыйнай мадэлі вялікай сям'і, дзе пад адным дахам жывуць розныя пакаленьні.
+Але цяпер грамадства ўсё больш атамізуецца, распадаецца. З аднаго боку, у~нас усё больш магчымасьцяў мяняць сваё атачэньне, вандраваць, быць на сувязі. Адваротны бок мабільнасьці~--- гэта зьніжэньне колькасьці доўгатэрміновых сувязяў і слабоя ўкараненьне людзей. Мы бачым, што ўсё больш людзей пачуваюцца самотнымі: у~заходніх краінах гэтая лічба складае 20--40\,\% дарослага насельніцтва. Сучаснае грамадства часта завуць ``вадкім'' (liquid society), калі сталыя пераезды прыводзяць да таго, што ў~нас менее грамадзкіх сувязяў, мы надаём недастаткова ўвагі адносінам у~адрозьненьне ад традыцыйнай мадэлі вялікай сям'і, дзе пад адным дахам жывуць розныя пакаленьні.
 
 У Японіі паўмільёна хікікіморы (хікі)~--- людзей, якія імкнуцца да поўнай сацыяльнай ізаляцыі, у~Швэцыі амаль палова гаспадарак~--- гэта самотныя і бязьдзетныя дарослыя людзі, у~Брытаніі больш за 9 мільёнаў самотнікаў і самотніц, у~ЗША больш за 40 мільёнаў людзей старэйшых за 45 гадоў самотныя. Калі ў~1900 годзе толькі 5\,\% людзей лічылі сябе самотнымі, дык цяпер іх ня менш за 25\,\%. Скарачаюцца і спосабы баўленьня часу, мы ўсё меней зьбіраемся разам на мерапрыемствы, радзей гуляем у~гульні або займаемся спортам. Нават у~межах адной сям'і людзі ўсё менш камунікуюць і радзей ядуць за адным сталом.
 
@@ -96,7 +96,7 @@
 
 Сяброўства і камунікацыя~--- гэта прафіляктыка і лячэньне шматлікіх захворваньняў. Нават прымаўка ёсьць: чалавек безь сяброў што печ бяз дроў. Адчуваньне сувязі зь іншымі людзьмі~--- гэта глыбінная патрэба чалавека, таму калі ўжо не сяброўства, то актыўны ўдзел у~сацыяльных справах, напрыклад валанцёрства, таксама павышае ўзровень задавальненьня. Адзін з~надзейных спосабаў справіцца з~болем~--- гэта дапамагаць іншым людзям, якім яшчэ горш. А вось сацыяльная ізаляцыя або адрыньваньне, здрада блізкіх выклікаюць боль ня менш рэальны, чым фізычны, і да таго ж ён можа не згасаць з~часам.
 
-Калі дыета і фізычная актыўнасьць могуць да 20-30\,\% зьнізіць рызыку сьмяротнасьці, то сямейная і сяброўская падтрымка зьніжае яе на 45\,\%, а~моцны шлюб~--- на 49\,\%. Вельмі важна і карысна часьцей бываць сярод людзей, якія вас шчыра любяць, людзей, якія даюць вам паверыць у~сябе, людзей, якія чакаюць ад вас посьпеху.
+Калі дыета і фізычная актыўнасьць могуць да 20--30\,\% зьнізіць рызыку сьмяротнасьці, то сямейная і сяброўская падтрымка зьніжае яе на 45\,\%, а~моцны шлюб~--- на 49\,\%. Вельмі важна і карысна часьцей бываць сярод людзей, якія вас шчыра любяць, людзей, якія даюць вам паверыць у~сябе, людзей, якія чакаюць ад вас посьпеху.
 
 Навукоўцы ацанілі шкоду змушанай самоты, прыраўняўшы яе да 15 скураным цыгарэтам у~дзень, што перавышае нават небясьпеку атлусьценьня і маларухомага ладу жыцьця. Рызыка раньняй сьмерці сярод людзей, якія адчуваюць адзіноту і пакінутасьць, павялічваецца на 26\,\%, жыцьцё на самоце ў~кватэры ці доме~--- на 32\,\%, сацыяльная ізаляцыя~--- на 29\,\%. Прыналежнасьць да рэлігійных суполак зьніжае рызыку сьмерці на 20\,\%, што было даведзена на прыкладзе прыхаджанаў цэркваў. Апроч зьніжэньня рызыкі шэрагу захворваньняў, гэта спрыяе ўсталяваньню дадатковых сацыяльных сувязяў.
 
@@ -361,13 +361,13 @@
 
 Статкавы інстынкт. Для захаваньня ўстойлівасьці і аўтаноміі вельмі важна вытрымліваць сацыяльны ціск і ўмець супраціўляцца статкаваму інстынкту. Для нашага мозгу адрозьнівацца ад навакольных~--- гэта паводзінная памылка. Мозг заўжды дае нам зразумець, калі нашы дзеяньні ці меркаваньні супярэчаць навакольным, і мы пачуваемся вельмі некамфортна. А вось зьмена меркаваньня на агульнапрынятае прыносіць палягчэньне~--- але ня факт, што гэта правільна. У працэсе эвалюцыі, калі вонкавыя ўмовы былі пастаяннымі, адхіленьне ад паводзінаў групы магло каштаваць жыцьця: усе бягуць~--- і я бягу, усе выжылі ці ўсе загінулі. Таму ў~стабільных умовах або сыстэмах меркаваньне большасьці можа быць слушным. Напрыклад, эмоцыі людзей не мяняюцца, таму антычныя кнігі да гэтага часу нам цікавыя і ўтрымліваюць мноства карысных для нас ідэй. А вось калі асяродзьдзе новае ці хутказьменлівае, тут канфармізм будзе зусім не адаптыўны.
 
-Асабліва ўразьлівыя падлеткі. Падчас пераходнага пэрыяду яны заклапочаныя меркаваньнем аднагодкаў, вельмі адчувальныя да таго, як да іх ставяцца і што пра іх думаюць іншыя людзі, гостра рэагуюць на сацыяльны ціск, плёткі. Камунікацыя для падлеткаў~--- гэта крыніца задавальненьня і дафаміну, які падштурхоўвае іх да рызыкоўных паводзінаў. Важна разумець гэта, каб дапамагчы падлеткам прайсьці пэрыяд сталеньня бяз стратаў. Бо найлепшы час для фармаваньня сацыяльных сувязяў~--- 18-25 гадоў. «Эфэкт аднагодка»~--- калі за падлеткам назіраюць яго сябры, у~яго выдзяляецца больш дафаміну, чым пры тым жа дзеяньні, калі ён знаходзіцца адзін. У дарослых гэты эфэкт зьнікае. Таму падлеткі такія залежныя і адчувальныя да меркаваньня аднагодкаў.
+Асабліва ўразьлівыя падлеткі. Падчас пераходнага пэрыяду яны заклапочаныя меркаваньнем аднагодкаў, вельмі адчувальныя да таго, як да іх ставяцца і што пра іх думаюць іншыя людзі, гостра рэагуюць на сацыяльны ціск, плёткі. Камунікацыя для падлеткаў~--- гэта крыніца задавальненьня і дафаміну, які падштурхоўвае іх да рызыкоўных паводзінаў. Важна разумець гэта, каб дапамагчы падлеткам прайсьці пэрыяд сталеньня бяз стратаў. Бо найлепшы час для фармаваньня сацыяльных сувязяў~--- 18--25 гадоў. «Эфэкт аднагодка»~--- калі за падлеткам назіраюць яго сябры, у~яго выдзяляецца больш дафаміну, чым пры тым жа дзеяньні, калі ён знаходзіцца адзін. У дарослых гэты эфэкт зьнікае. Таму падлеткі такія залежныя і адчувальныя да меркаваньня аднагодкаў.
 
 Сацыяльны ціск. Грамадства зацікаўленае ў~захаваньні стабільнасьці, таму заўсёды выкарыстоўвае мэханізмы ціску на тых, хто не падпарадкоўваецца агульнапрынятым нормам. Падобны кансэрватызм валодае і ахоўным эфэктам, засьцерагаючы ад небясьпечных новаўвядзеньняў. Падабаецца нам ці не, але сацыяльная ацэнка вельмі моцна ўплывае на нашы паводзіны. Мы імкнёмся заслужыць ухвалу і пазьбегнуць асуджэньня. Многія людзі спрабуюць рабіць усё, каб навакольныя былі пра іх «добрай думкі», або скарачаюць зносіны, адмаўляюцца ад праектаў і новых справаў толькі праз тое, каб пазьбегнуць крытыкі або неўхваленьня навакольных.
 
 Важна памятаць: мы маем права ставіць свае інтарэсы вышэй за інтарэсы іншых людзей (не кранаючы пры гэтым іх асабістыя межы), мы маем права памыляцца і адчуваць самыя розныя пачуцьці, нават калі грамадзкая думка вызначае іх як «сацыяльна непрымальныя». Прызнавайцеся сабе шчыра, калі вы ўзрушаныя або злуяцеся. Мы можам і нават абавязаныя мяняць сваё меркаваньне, калі адкрыліся дадатковыя абставіны, і паважаць меркаваньне большасьці ці паважаных чальцоў грамадзтва мы павінны не таму, што яны паважаныя ці іх большасьць, а~з аб'ектыўных аргумэнтаў.
 
-Таксічныя людзі. Чым больш людзей лезе ў~ваша жыцьцё, тым хутчэй яно дае расколіну: сапраўды, у~сьвеце ёсьць вялікая колькасьць людзей, якія імкнуцца, сьвядома ці неўсьвядомлена, парушаць межы навакольных, маніпуляваць эмоцыямі, палохаць або зьневажаць. Для абароны~--- перахапляйце кантроль у~размове, мяняйце тэму, гаварыце пра суразмоўцу, а~не пра сябе. Можна выкарыстаць вядомы аргумэнт прафэсара Праабражэнскага: ``Проста не хачу''. Не пускайцеся ў~тлумачэньні~--- маніпулятары прымаюць гэта за праяву слабасьці. Дасьледаваньні паказалі, што калі ўкараніць у~каманду аднаго чалавека зь неканструктыўнымі паводзінамі, то яе эфэктыўнасьць упадзе на 30-40\,\%. Таму важная ня толькі наяўнасьць моцных удзельнікаў, але й адсутнасьць слабых. Сярод людзей, зь якімі вы камунікуеце, адзначце тых, зносіны зь якімі робяць вас шчасьлівымі і натхняюць, і тых, хто толькі выцягвае вашу энэргію. Заплянуйце канкрэтныя крокі, каб павялічыць час камунікацыі зь першымі, а~з другімі~--- максімальна скараціць і фармалізаваць.
+Таксічныя людзі. Чым больш людзей лезе ў~ваша жыцьцё, тым хутчэй яно дае расколіну: сапраўды, у~сьвеце ёсьць вялікая колькасьць людзей, якія імкнуцца, сьвядома ці неўсьвядомлена, парушаць межы навакольных, маніпуляваць эмоцыямі, палохаць або зьневажаць. Для абароны~--- перахапляйце кантроль у~размове, мяняйце тэму, гаварыце пра суразмоўцу, а~не пра сябе. Можна выкарыстаць вядомы аргумэнт прафэсара Праабражэнскага: ``Проста не хачу''. Не пускайцеся ў~тлумачэньні~--- маніпулятары прымаюць гэта за праяву слабасьці. Дасьледаваньні паказалі, што калі ўкараніць у~каманду аднаго чалавека зь неканструктыўнымі паводзінамі, то яе эфэктыўнасьць упадзе на 30--40\,\%. Таму важная ня толькі наяўнасьць моцных удзельнікаў, але й адсутнасьць слабых. Сярод людзей, зь якімі вы камунікуеце, адзначце тых, зносіны зь якімі робяць вас шчасьлівымі і натхняюць, і тых, хто толькі выцягвае вашу энэргію. Заплянуйце канкрэтныя крокі, каб павялічыць час камунікацыі зь першымі, а~з другімі~--- максімальна скараціць і фармалізаваць.
 
 Крытыка. Многія людзі вельмі гостра ўспрымаюць крытыку, але гэта неад'емная частка нашага жыцьця. Бывае дэструктыўная крытыка, накіраваная супраць нас асабіста і звычайна эмацыйна афарбаваная, яна абясцэньвае нас, факусуецца толькі на нэгатыўных аспэктах, не дае шанцу выправіць. Але крытыка можа быць і канструктыўнай, па сутнасьці~--- звычайнай зваротнай сувязьзю. Часьцей за ўсё яна скіраваная на вырашэньне праблемы, а~ня супраць вас, нясе пазітыўны зарад, дае магчымасьць выправіць, падбадзёрвае і натхняе на вырашэньне праблемы.
 
@@ -410,7 +410,7 @@
 
 Як вы цяпер разумееце, асяродзьдзе праграмуе ўсе нашы паводзіны. Мозг увесь час аналізуе навакольнае асяродзьдзе, у~якім галоўнае для яго~--- гэта сацыяльныя сыгналы ад іншых людзей. Іх каштоўнасьці, эмоцыі, зьмест размоў, памкненьні і амбіцыі~--- усё гэта падсумоўваецца і ўплывае на нас. Нядзіўна, што шмат каго натхняюць менавіта іншыя людзі, няхай нават і віртуальныя. Таму для таго, каб умацаваць здароўе, важна зьмяніць сваё асяродзьдзе на здаровае. Памкненьні іншых людзей сумуюцца, накіроўваючы вас да дасягненьня мэты. Калі вакол вас усе клапоцяцца пра здароўе~--- вы скапіюеце іх і неўзаметку для сябе пачняце прымаць больш здаровыя рашэньні.
 
-Растлумачце і выпішыце вашыя мэты і каштоўнасьці, а~таксама мэты і каштоўнасьці вашых бліжэйшых сяброў. Выпішыце імёны 5-7 бліжэйшых чалавек вакол вас. Куды яны вас цягнуць~--- уверх ці ўніз? Ці супадаюць вашыя жаданьні і пляны?
+Растлумачце і выпішыце вашыя мэты і каштоўнасьці, а~таксама мэты і каштоўнасьці вашых бліжэйшых сяброў. Выпішыце імёны 5--7 бліжэйшых чалавек вакол вас. Куды яны вас цягнуць~--- уверх ці ўніз? Ці супадаюць вашыя жаданьні і пляны?
 
 Сацыяльная дыета. Мы часта знаёмімся выпадкова. Але выпадкова цяжка выбудаваць добрую кар'еру і абзавесьціся здаровым асяродзьдзем, таму прадпрымайце мэтанакіраваныя дзеі. У знаёмствах з~пэўнай мэтай няма нічога ганебнага. Знайдзіце тых, з~кім вы будзеце рухацца ў~адным напрамку. Падумайце, якія адносіны цягнуцца аўтаматычна і ўжо не патрэбныя вам, а~якія кантакты шкодныя і іх трэба скараціць.
 
