--- a/willpower/chapter11.tex
+++ b/willpower/chapter11.tex
@@ -2,7 +2,7 @@
 
 \section{Нашае асяродзьдзе і здароўе}
 
-Кожны месяц мы робім мільён удыхаў і выдыхаў, і якасьць паветра вакол нас уплывае на наша здароўе, стан розуму і цела. Стан паветра ў~памяшканьні можа быць у~2-5 разоў горшы, чым звонку, прычым гэта ня толькі сучасная праблема: у~старажытнасьці людзі пакутавалі ад лішку дыму, абаграваючы свае хаты агмянямі без камінаў і паўнавартасных печаў. Актуальны чыньнік~--- гэта шум, якога становіцца ўсё больш у~нашых гарадах і які не змаўкае нават ноччу, а~таксама лішак сьвятла і цяпла. Уплывае на наша здароўе і электрамагнітнае выпраменьваньне. Навакольнае асяродзьдзе інтэнсіўна забруджваецца таксінамі: плястык, цяжкія мэталы, бісфэнолы, антыбіётыкі і інш. Для падтрыманьня і ўмацаваньня здароўя нам важна ня толькі займацца сабой, але й мяняць навакольнае асяродзьдзе, зь якім мы так шчыльна злучаныя. Калі гены памяняць нельга, звычкі~--- цяжка, то асяродзьдзе~--- куды лягчэй.
+Кожны месяц мы робім мільён удыхаў і выдыхаў, і якасьць паветра вакол нас уплывае на наша здароўе, стан розуму і цела. Стан паветра ў~памяшканьні можа быць у~2--5 разоў горшы, чым звонку, прычым гэта ня толькі сучасная праблема: у~старажытнасьці людзі пакутавалі ад лішку дыму, абаграваючы свае хаты агмянямі без камінаў і паўнавартасных печаў. Актуальны чыньнік~--- гэта шум, якога становіцца ўсё больш у~нашых гарадах і які не змаўкае нават ноччу, а~таксама лішак сьвятла і цяпла. Уплывае на наша здароўе і электрамагнітнае выпраменьваньне. Навакольнае асяродзьдзе інтэнсіўна забруджваецца таксінамі: плястык, цяжкія мэталы, бісфэнолы, антыбіётыкі і інш. Для падтрыманьня і ўмацаваньня здароўя нам важна ня толькі займацца сабой, але й мяняць навакольнае асяродзьдзе, зь якім мы так шчыльна злучаныя. Калі гены памяняць нельга, звычкі~--- цяжка, то асяродзьдзе~--- куды лягчэй.
 
 Ня толькі мы ўплываем на асяродзьдзе~--- асяродзьдзе ўплывае на нас. Уявіце сабе чалавека, які жыве ва ўласнай хаце ці малапавярховай забудове, далёка ад магістралі, з~зручнымі для шпацыраў ці прабежак сьцежкамі, дзе шмат дрэваў, чыстае паветра, ціхія вуліцы і знаёмыя суседзі. У такім асяродзьдзі ўсё цешыць вашае вока, разьнявольвае, тут хочацца выходзіць на вуліцу і шпацыраваць, спыняцца для сяброўскіх гутарак, любавацца прыродай, займацца спортам на турніках~--- усё гэта аўтаматычна спрыяе здароўю.
 
@@ -70,7 +70,7 @@
 
 Кожны мэтар мае значэньне, бо з~аддаленьнем ад крыніцы забруджваньне скарачаецца экспанентна, выхлапы разводзяцца чыстым паветрам. Гуляйце ці рабіце прагулкі не ў~гадзіну пік і не адразу ж пасьля яе заканчэньня. Калі вы ідзяце з~маленькімі дзецьмі, то паднімайце іх на рукі, каб трымаць вышэй за ўзровень выхлапных газаў. Ня стойце каля самай дарогі, калі чакаеце зялёнага сыгнала сьвятлафора. Памятайце, што важная ня проста адсутнасьць трасы або завода побач, але і кірунак ветру. Калі праз надвор'е, слабы вецер ці пажары ў~горадзе паўстаў смог, па магчымасьці выязджайце за горад ці трымайце дома ўключаны фільтр ачысткі паветра (пра фільтры ніжэй) пры закрытых вокнах.
 
-Аптымізуйце маршруты для прагулак і прабежак, выбірайце аддаленыя зялёныя вулачкі, гэта можа зьнізіць узьдзеяньне бруднага паветра на 50-60\,\%. Будзе выдатна, калі навігатары навучацца пракладаць ня толькі самы хуткі, але й самы ``зялёны'' маршрут.
+Аптымізуйце маршруты для прагулак і прабежак, выбірайце аддаленыя зялёныя вулачкі, гэта можа зьнізіць узьдзеяньне бруднага паветра на 50--60\,\%. Будзе выдатна, калі навігатары навучацца пракладаць ня толькі самы хуткі, але й самы ``зялёны'' маршрут.
 
 Гэтае правіла тычыцца і кіроўцаў, бо доўгая дарога за рулём і заторы павялічваюць рызыку ўдыханьня бруднага паветра. Не прыціскайце нос свайго аўтамабіля да выхлапной трубы машыны, якая стаіць наперадзе. У заторы лепш закрыць вокны і адключыць вэнтыляцыю салёна, гэта дазволіць зьменшыць забруджваньне ад суседніх машын. Па магчымасьці, менш карыстайцеся аўтамабілем у~гадзіну пік. У некаторых машынах, напрыклад у~Tesla, усталяваныя вельмі якасныя фільтры салёна, зьвяртайце на гэта ўвагу пры выбары і абслугоўваньні аўто.
 
@@ -109,7 +109,7 @@
 
 Праблема вэнтыляцыі існуе: з~аднаго боку, будаўнікі часта грэбуюць нормамі, робячы няўдалыя сыстэмы вэнтыляцыі, эфэктыўнасьць работы якіх ніхто не правярае. Зь цягам часу шахты могуць забівацца брудам, зашывацца~--- звонку гэта не прыкметна. Зьяўленьне плястыкавых вокнаў яшчэ пагоршыла сытуацыю. Бо ў~драўляных вокнах было шмат невялікіх шчылінаў, якія забясьпечвалі мікравэнтыляцыю, а~цяпер гэтага няма. Часта мы закрываемся ``наглуха'' для цішыні або цяпла. Зьяўленьне ізалявальных матэрыялаў, ушчыльняльнікаў, пракладак для дзьвярэй і вокнаў дазваляе нам цалкам зашпунтаваць сябе ў~хатах. А калі прытоку паветра няма, то і вэнтыляцыя перастае працаваць як мае быць.
 
-Перадусім~--- вымяраем! Існуе вялікая колькасьць датчыкаў, як аўтаномных, так і такіх, што сынхранізуюцца са смартфонамі. Хоць мы вымяраем узровень вуглякіслага газу, гэтая лічба кажа нам і аб якасьці вэнтыляцыі ў~цэлым. Чым менш узровень СО2, тым лепш якасьць паветра, уключаючы разнастайную колькасьць выдыханых намі малекул і нават бактэрыяў. СО2 выступае як газ-дэтэктар якасьці паветра. Ідэальныя ўзроўні СО2~--- да 450 ppm, прымальна да 600-800, стандартная норма да 1000, ад 1000 да 2500~--- млявасьць, зьніжэньне самаадчуваньня, дрэнны сон і да т.~п., вышэй за 2500 ppm~--- пажадана пакінуць памяшканьне.
+Перадусім~--- вымяраем! Існуе вялікая колькасьць датчыкаў, як аўтаномных, так і такіх, што сынхранізуюцца са смартфонамі. Хоць мы вымяраем узровень вуглякіслага газу, гэтая лічба кажа нам і аб якасьці вэнтыляцыі ў~цэлым. Чым менш узровень СО2, тым лепш якасьць паветра, уключаючы разнастайную колькасьць выдыханых намі малекул і нават бактэрыяў. СО2 выступае як газ-дэтэктар якасьці паветра. Ідэальныя ўзроўні СО2~--- да 450 ppm, прымальна да 600--800, стандартная норма да 1000, ад 1000 да 2500~--- млявасьць, зьніжэньне самаадчуваньня, дрэнны сон і да т.~п., вышэй за 2500 ppm~--- пажадана пакінуць памяшканьне.
 
 Высокі ўзровень СО2 уплывае на тонус сасудаў галаўнога мозгу, зьніжае прадуктыўнасьць, уважлівасьць і ініцыятыўнасьць. Яго высокія ўзроўні непажадана ўзьдзейнічаюць на мозг і цела, павялічваецца кіслотнасьць плазмы крыві, зьмяняецца тонус сасудаў. Павялічваецца частата галаўных боляў, рэзка падае прадуктыўнасьць, пагаршаецца памяць і шматлікія паказьнікі мысьленьня, асабліва ў~рашэньні складаных задач. Чым менш пакой, больш у~ім людзей~--- тым вышэй узровень СО2.
 
@@ -136,7 +136,7 @@
 
 Шум не раздражняе адно тады, калі ты ў~ім удзельнічаеш~--- так кажуць, і гэта праўда. Сярод стрэсагенных чыньнікаў для насельнікаў кватэр шум упэўнена займае адно зь першых месцаў. Сваю кватэру, дзе я цяпер пішу гэтыя радкі, я абраў, у~тым ліку, па крытэры цішыні~--- верхні паверх, вуглавая кватэра і вокны на тры бакі, стары цагляны дом. Прымусіў мяне гэта зрабіць няўдалы папярэдні досьвед з~шумнымі суседзямі. Выдатна разумею фразу гішпанскага пісьменьніка Рамона Сэрна, што ``ўключаны пыласос у~суседа ўцягвае ўсе нашы думкі''.
 
-Чаму ж так цяжка прыстасавацца да шуму? Бо мы рэагуем на яго вельмі хутка. Гук~--- гэта адна з~крыніц інфармацыі аб навакольным сьвеце. Нас атачаюць гукі, як прыемныя прыродныя: птушкі, хвалі, дождж, так і небясьпечныя: гук стоенага злодзея або выбух пэтардаў. Асаблівасьць у~тым, што мы рэагуем на гукавыя раздражняльнікі хутчэй, чым на візуальныя, 140-160 мілісэкунд супраць 180-200, таму цяжэй тармазіць сваё раздражненьне.
+Чаму ж так цяжка прыстасавацца да шуму? Бо мы рэагуем на яго вельмі хутка. Гук~--- гэта адна з~крыніц інфармацыі аб навакольным сьвеце. Нас атачаюць гукі, як прыемныя прыродныя: птушкі, хвалі, дождж, так і небясьпечныя: гук стоенага злодзея або выбух пэтардаў. Асаблівасьць у~тым, што мы рэагуем на гукавыя раздражняльнікі хутчэй, чым на візуальныя, 140--160 мілісэкунд супраць 180--200, таму цяжэй тармазіць сваё раздражненьне.
 
 Запуск стрэсавай рэакцыі на нязвыклы гук, які перавышае звычайны фон,~--- гэта старажытны эвалюцыйны мэханізм выжываньня. Да шумавога забруджваньня, як і да сьпёртага паветра, можна звыкнуць і перастаць заўважаць, але вось псыхалягічнае прывыканьне не суправаджаецца фізычным.
 
@@ -267,9 +267,9 @@
 
 Цьвіль можа пасяліцца ў~сыстэмах апалу, кандыцыянэрах, пасудамыйных машынах, кветкавых гаршках, ванных, ня кажучы ўжо пра гарышчы і гаражы. Пазьбягайце працяглага знаходжаньня ў~такіх памяшканьнях, кантралюйце гідраізаляцыю, сачыце за сьценамі, дахам і камунікацыямі: у~іх не павінна быць працёкаў вады. Калі адна са сьценаў дома адсырэла, ня стаўце ўсутыч да яе мэблю. Высушвайце ручнікі, вяхоткі, сьмецьцевыя вёдры і не дазваляйце ім стаяць мокрымі доўгі час. Дбайнае ацяпленьне памяшканьняў зімой і восеньню памяншае рызыку цьвілі. Для апрацоўкі заражаных паверхняў выкарыстоўвайце спэцыяльныя супрацьплесьневыя сродкі, якія дазваляюць зьнішчыць яе на ўсёй глыбіні пранікненьня ў~матэрыял.
 
-Антыпылавы дызайн. Арганізуйце сваю кватэру так, каб у~ёй назапашвалася менш пылу і яе было зручна прыбіраць. Пазбаўцеся ад дываноў і палавікоў або зьменшыце іх колькасьць~--- гэта самыя галоўныя пылазборнікі. Шторы ня толькі зацямняюць кватэру, але й зьбіраюць шмат пылу. Зрэшты, цяпер ужо зьявіліся ў~продажы запавесы, ачышчальныя ад пылу. Важна падтрымліваць вільготнасьць у~50-60\,\%~--- гэта перашкаджае залішняму ўтварэньню і распаўсюджваньню пылу: чым ніжэй вільготнасьць, тым больш будзе пылу. Адзеньне захоўвайце ў~закрытых шафах. Ідэальна захоўваць розныя статуэткі і кнігі ў~шафах за шклом. Прызнаюся, што нават мне гэта не ўдалося арганізаваць. Памятайце, што трэба рэгулярна адсоўваць мэблю і прыбіраць пылавыя пасткі, часта гэта месцы за батарэямі або на задняй сьценцы лядоўні.
+Антыпылавы дызайн. Арганізуйце сваю кватэру так, каб у~ёй назапашвалася менш пылу і яе было зручна прыбіраць. Пазбаўцеся ад дываноў і палавікоў або зьменшыце іх колькасьць~--- гэта самыя галоўныя пылазборнікі. Шторы ня толькі зацямняюць кватэру, але й зьбіраюць шмат пылу. Зрэшты, цяпер ужо зьявіліся ў~продажы запавесы, ачышчальныя ад пылу. Важна падтрымліваць вільготнасьць у~50--60\,\%~--- гэта перашкаджае залішняму ўтварэньню і распаўсюджваньню пылу: чым ніжэй вільготнасьць, тым больш будзе пылу. Адзеньне захоўвайце ў~закрытых шафах. Ідэальна захоўваць розныя статуэткі і кнігі ў~шафах за шклом. Прызнаюся, што нават мне гэта не ўдалося арганізаваць. Памятайце, што трэба рэгулярна адсоўваць мэблю і прыбіраць пылавыя пасткі, часта гэта месцы за батарэямі або на задняй сьценцы лядоўні.
 
-Здаровая прыборка. Вільготная прыборка~--- важны складнік догляду за домам, ладзьце яе 1-2 разы на тыдзень. Звычайная вільготная прыборка выклікае прыкметнае скарачэньне мікрачасьціц пылу, і толькі праз тры дні іх колькасьць вяртаецца да ранейшага ўзроўню. Важна пазьбягаць выкарыстаньня хімічных мыйных сродкаў, лепш за ўсё ўжываць ачышчэньне парай і бясьпечнымі спосабамі, напрыклад вадой з~содай.
+Здаровая прыборка. Вільготная прыборка~--- важны складнік догляду за домам, ладзьце яе 1--2 разы на тыдзень. Звычайная вільготная прыборка выклікае прыкметнае скарачэньне мікрачасьціц пылу, і толькі праз тры дні іх колькасьць вяртаецца да ранейшага ўзроўню. Важна пазьбягаць выкарыстаньня хімічных мыйных сродкаў, лепш за ўсё ўжываць ачышчэньне парай і бясьпечнымі спосабамі, напрыклад вадой з~содай.
 
 Устаноўлена, што ў~хатніх гаспадыняў, якія рэгулярна прыбіралі дом з~дапамогай хімічных мыйных сродкаў, на 40\,\% часьцей сустракаўся недых, у~параўнаньні з~тымі, хто іх не выкарыстоўваў. Заўсёды праводзіце прыборку зьверху ўніз, каб пазьбегнуць разносу пылу. Старадаўняя традыцыя выносіць рэчы на сонечнае сьвятло не пазбаўленая сэнсу. Рэч у~тым, што ўльтрафіялет ня толькі забівае кляшчоў, але й за пару гадзінаў раскладае іх алергены, чаго ня можа зрабіць нават кіпячэньне.
 
@@ -300,7 +300,7 @@
 
 У сапраўдны момант большасьць мэдыцынскіх супольнасьцяў лічыць узьдзеяньне электрамагнітнага выпраменьваньня бясьпечным. Ступень біялягічнага ўзьдзеяньня электрамагнітных палёў на арганізм чалавека залежыць ад частаты ваганьняў, напружанасьці і інтэнсіўнасьці поля, а~таксама працягласьці яго ўзьдзеяньня. Біялягічнае ўзьдзеяньне палёў розных дыяпазонаў неаднолькавае: паказаная шкода толькі вельмі высокіх яго значэньняў, таму жыць пад высакавольтнай лініяй перадач, вядома, небясьпечна.
 
-Ад выкарыстаньня тэлефона назіраецца лякальнае павелічэньне тэмпэратуры, але малаверагодна, што гэта павялічвае рызыку раку. Адзінкавыя дасьледаваньні кажуць аб парушэньні выпрацоўкі мэлятаніну і зьніжэньні якасьці сну, але гэтыя дасьледаваньні назіральныя і не адлюстроўваюць прычынна-выніковай сувязі. Такім чынам, шкода ад электрамагнітнага выпраменьваньня тэлефона вельмі малая. Больш небясьпечнае няправільнае выкарыстаньне тэлефона, напрыклад, падчас кіраваньня аўтамабілем, у~тым ліку з~выкарыстаньнем гарнітуры. Гэта павялічвае рызыку дарожна-транспартных здарэньняў у~3-4 разы, але адбываецца праз страту ўвагі, а~не праз электрамагнітнае выпраменьваньне.
+Ад выкарыстаньня тэлефона назіраецца лякальнае павелічэньне тэмпэратуры, але малаверагодна, што гэта павялічвае рызыку раку. Адзінкавыя дасьледаваньні кажуць аб парушэньні выпрацоўкі мэлятаніну і зьніжэньні якасьці сну, але гэтыя дасьледаваньні назіральныя і не адлюстроўваюць прычынна-выніковай сувязі. Такім чынам, шкода ад электрамагнітнага выпраменьваньня тэлефона вельмі малая. Больш небясьпечнае няправільнае выкарыстаньне тэлефона, напрыклад, падчас кіраваньня аўтамабілем, у~тым ліку з~выкарыстаньнем гарнітуры. Гэта павялічвае рызыку дарожна-транспартных здарэньняў у~3--4 разы, але адбываецца праз страту ўвагі, а~не праз электрамагнітнае выпраменьваньне.
 
 Тым ня менш, па меры павелічэньня колькасьці прыбораў і інтэнсіўнасьці выпраменьваньня (укараненьне больш магутных 5G сетак і да т.~п.) важна захоўваць разумную засьцярогу і прытрымлівацца папераджальнай палітыкі, абмяжоўваць па меры магчымасьці залішняе ўзьдзеяньне электрамагнітных палёў.
 
@@ -331,24 +331,24 @@
 
 \section{Вільготнасьць паветра}
 
-Вільготнасьць паветра~--- важны складнік здаровага і камфортнага мікраклімату. Камфортнай лічыцца вільготнасьць ад 40\,\% да 60\,\%, прычым для высокіх тэмпэратураў (больш за 30°) трэба імкнуцца да вільготнасьці 30-50\,\%, пры тэмпэратурах менш за 20° C, наадварот, камфортнай будзе вільготнасьць 50-70\,\%. Пры больш высокай вільготнасьці мы лепей пераносім нізкія тэмпэратуры, а~пры нізкай~--- горай.
+Вільготнасьць паветра~--- важны складнік здаровага і камфортнага мікраклімату. Камфортнай лічыцца вільготнасьць ад 40\,\% да 60\,\%, прычым для высокіх тэмпэратураў (больш за 30°) трэба імкнуцца да вільготнасьці 30--50\,\%, пры тэмпэратурах менш за 20° C, наадварот, камфортнай будзе вільготнасьць 50--70\,\%. Пры больш высокай вільготнасьці мы лепей пераносім нізкія тэмпэратуры, а~пры нізкай~--- горай.
 
 Нэгатыўны ўплыў падвышанай вільготнасьці. Вялікая канцэнтрацыя вільгаці не дазваляе целу чалавека падтрымліваць звычайную тэмпэратуру~--- не працуе належным чынам мэханізм тэрмарэгуляцыі. Каб астудзіць сябе, чалавечае цела выкарыстоўвае потавыдзяленьне. Пот, выпараючыся з~паверхні скуры, выводзіць лішнюю цеплыню. Але што, калі выпарацца няма куды? Тады арганізм пачынае працаваць з~падвышанай сілай, а~гэта вядзе да зваротнага выніку~--- перагрэву. Калі пот зь цела выпараецца павольна, то цела астуджаецца вельмі слаба, і мы пачуваемся не зусім камфортна.
 
 Асаблівае значэньне гэта мае для людзей, якія пакутуюць ад атэрасклерозу, гіпэртаніі, разнастайных захворваньняў сардэчна-сасудзістай сыстэмы,~--- яны мусяць быць асабліва асьцярожныя ў~сьпёку пры высокай вільготнасьці. Існуе магчымасьць рэзкага загостраньня захворваньняў і некантраляваных прыступаў.
 
-Нэгатыўны ўплыў сухога паветра. Чым ніжэй тэмпэратура паветра, тым менш у~ім утрымліваецца вады. Таму вонкавае паветра, які награецца батарэямі, мае нізкую адносную вільготнасьць. Зімой яе значэньне можа падаць да 20\,\%. А аптымальныя значэньні~--- 40-60\,\%. На наша здароўе вільготнасьць паветра аказвае прамы і непрамы ўплыў, давайце іх разьбяром.
+Нэгатыўны ўплыў сухога паветра. Чым ніжэй тэмпэратура паветра, тым менш у~ім утрымліваецца вады. Таму вонкавае паветра, які награецца батарэямі, мае нізкую адносную вільготнасьць. Зімой яе значэньне можа падаць да 20\,\%. А аптымальныя значэньні~--- 40--60\,\%. На наша здароўе вільготнасьць паветра аказвае прамы і непрамы ўплыў, давайце іх разьбяром.
 
 Прамы ўплыў вільготнасьці. Чым менш вільготнасьць паветра, тым мацней выпарэньне са скуры і сьлізістых абалонак. У нашым носе і горле ёсьць тонкі пласт сьлізі, які абараняе нас ад трапляньня вірусаў, гэтая сьлізь увесь час абнаўляецца і перашкаджае перасыханьню. Калі паветра сухое на працягу доўгага часу, то ў~гэтай абароне ўтворацца расколіны, якія і зьяўляюцца ўваходнаю брамай для вірусаў. Успомніце, як выглядае высахлая лужына ў~глінянай зямлі~--- яе дно пакрытае расколінамі. Перасыханьне сьлізістай дае нам нязручнасьць, таму мы кранаемся сьлізістай і тым самым пераносім вірус да «ўваходнае брамы». І таму гэта павялічвае імавернасьць інфікаваньня~--- і сьлізісты бар'ер слабы, і самі перанесьлі вірус. Таксама сухасьць павялічвае колькасьць сымптомаў, зьвязаных з~абцяжараным дыханьнем, памяншае выпрацоўку сьлязы, павялічвае стомленасьць вачэй. Калі вы шмат гаворыце, то ваш голас хутчэй стоміцца і будзе горш гучаць у~сухім паветры. Таксама нізкая ці занадта высокая вільготнасьць уплывае на тэрмарэгуляцыю і якасьць сну.
 
-Непрамы ўплыў вільготнасьці. Непрамы ўплыў вільготнасьці заключаецца ў~тым, як яна ўплывае на цыркуляцыю ў~паветры пылу і аэразоляў. Чым менш вільготнасьць, тым больш пылу і алергенаў знаходзіцца ў~паветры і тым даўжэй яны вісяць. Таму вільготнае паветра і чысьцейшае. У сухім паветры таксама запасіцца і больш электрастатычнай напругі. Вільготнасьць уплывае на выдзяленьне са сьценаў і матэрыялаў фармальдэгіду. У сухім паветры таксама даўжэй лётаюць аэразолі са зьмешчанымі ў~іх вірусамі і бактэрыямі. Стабільнасьць вірусу мінімальная пры 50\,\% вільготнасьці. Калі вільготнасьць 23\,\%, то ў~паветры 70-77\,\% вірусных часьціц, якія зьявіліся пры размове ці кашлі, а~вось пры вільготнасьці 43\,\% іх застаецца толькі 14\,\%. Гэта датычыцца і грыпу і каранавірусу.
+Непрамы ўплыў вільготнасьці. Непрамы ўплыў вільготнасьці заключаецца ў~тым, як яна ўплывае на цыркуляцыю ў~паветры пылу і аэразоляў. Чым менш вільготнасьць, тым больш пылу і алергенаў знаходзіцца ў~паветры і тым даўжэй яны вісяць. Таму вільготнае паветра і чысьцейшае. У сухім паветры таксама запасіцца і больш электрастатычнай напругі. Вільготнасьць уплывае на выдзяленьне са сьценаў і матэрыялаў фармальдэгіду. У сухім паветры таксама даўжэй лётаюць аэразолі са зьмешчанымі ў~іх вірусамі і бактэрыямі. Стабільнасьць вірусу мінімальная пры 50\,\% вільготнасьці. Калі вільготнасьць 23\,\%, то ў~паветры 70--77\,\% вірусных часьціц, якія зьявіліся пры размове ці кашлі, а~вось пры вільготнасьці 43\,\% іх застаецца толькі 14\,\%. Гэта датычыцца і грыпу і каранавірусу.
 
 Таксама сухое паветра вядзе да назапашваньня электрастатычнай электрычнасьці, назапашваньня пылу і павольнейшаму яе асяданьню. Мікрачасьціцы пылу яшчэ мацней раздражняюць высахлыя сьлізістыя абалонкі. Калі вы змушаныя доўгі час знаходзіцца ў~памяшканьні з~сухім паветрам, то памажце нос любым алеем: тлушчавая плёнка на паверхні сьлізістай будзе абараняць яе ад высыханьня. Прамываньне носа воднымі растворамі, на жаль, мае эфэкт кароткатэрміновы~--- ня больш за паўгадзіны.
 
 
 
 
-Як кантраляваць вільготнасьць. Каб вымераць вільготнасьць у~памяшканьні, скарыстайцеся адмысловым прыборам, які называецца гідрамэтар. Як правіла, датчык убудоўваецца ва ўвільгатняльнікі, у~вас можа быць некалькі датчыкаў у~розных памяшканьнях для паасобнага кантролю. Ёсьць спэцыяльныя асушальнікі паветра, ёсьць ультрагукавыя ўвільгатняльнікі паветра, і можна лёгка падтрымліваць неабходны ўзровень вільготнасьці ў~доме. Дасьледаваньні паказваюць, што павелічэньне вільготнасьці да 40\,\% здымае сымптомы раздражненьня. Оптымум вільготнасьці 40-60\,\%, занадта высокая вільготнасьць непажаданая, бо можа выклікаць шэраг іншых праблемаў. Выкарыстаньне буфэрных дыхальных матэрыялаў, накшталт мінімальна апрацаванага дрэва ці гіпсавых канструкцый, дазваляе ім убіраць лішак вільгаці з~паветра і затым, пры высыханьні, аддаваць.
+Як кантраляваць вільготнасьць. Каб вымераць вільготнасьць у~памяшканьні, скарыстайцеся адмысловым прыборам, які называецца гідрамэтар. Як правіла, датчык убудоўваецца ва ўвільгатняльнікі, у~вас можа быць некалькі датчыкаў у~розных памяшканьнях для паасобнага кантролю. Ёсьць спэцыяльныя асушальнікі паветра, ёсьць ультрагукавыя ўвільгатняльнікі паветра, і можна лёгка падтрымліваць неабходны ўзровень вільготнасьці ў~доме. Дасьледаваньні паказваюць, што павелічэньне вільготнасьці да 40\,\% здымае сымптомы раздражненьня. Оптымум вільготнасьці 40--60\,\%, занадта высокая вільготнасьць непажаданая, бо можа выклікаць шэраг іншых праблемаў. Выкарыстаньне буфэрных дыхальных матэрыялаў, накшталт мінімальна апрацаванага дрэва ці гіпсавых канструкцый, дазваляе ім убіраць лішак вільгаці з~паветра і затым, пры высыханьні, аддаваць.
 
 \subsubsection{Пытаньні і заданьні}
 
@@ -394,11 +394,11 @@
 
 Пагроза для здароўя ў~тым, што спэктар і інтэнсіўнасьць штучнага сьвятла моцна адрозьніваюцца ад сонечнага. Адыліж наша вока~--- гэта практычна частка мозгу, вынесеная на пэрыфэрыю! Штучнае сьвятло мае нізкую колераперадачу, часта яго крыніцы пульсуюць, ён мае спэктар выпраменьваньня без ультрафіялету, часта зь лішкам хваляў сіняга спэктру і з~дэфіцытам чырвонага, характарызуецца слабой інтэнсіўнасьцю ў~параўнаньні з~сонцам. Многія лямпы маюць ірваны спэктар у~адрозьненьне ад цэльнага сонечнага. Усё гэта стварае шматлікія пагрозы для здароўя: парушэньне выпрацоўкі мэлятаніну, пагаршэньне выпрацоўкі дафаміну і сератаніну, павышэньне нагрузкі на зрокавы апарат, збой цыркадных рытмаў. Усё гэта павялічвае рызыку шматлікіх захворваньняў, ад дыябэту і дэпрэсіі да хваробы Паркінсана. Калі ўжо мы змушаныя знаходзіцца пры штучным асьвятленьні, важна яго зрабіць як мага бясьпечнейшым для здароўя. Давайце разьбяромся, як правільна абраць найболей здаровую лямпу для дому: сьветлавая плынь, спэктар, колеравая тэмпэратура, колераперадача, пульсацыя.
 
-Адрэгулюйце колькасьць сьвятла. Частая праблема памяшканьняў~--- малая колькасьць сьвятла, цьмянае сьвятло можа пагаршаць настрой і зьніжаць энэргічнасьць. Сьветлавая плынь~--- гэта колькасьць сьвятла, яна вымяраецца ў~люменах, як правіла, паказана на самой лямпе. Яркае сьвятло добрае раніцай і днём, яно бадзёрыць і падтрымлівае тонус. Старайцеся падбіраць сьвятло ня менш за 200-250 люмен на квадратны мэтар, гэта значыць, што тры лямпачкі на пакой будзе занадта мала. У зале ў~мяне 9 лямпаў па 500 люксаў, і стае іх толькі на цэнтар пакоя. На вуліцы нават у~пахмурнае надвор'е~--- 1000 люмен, а~ў сонечны дзень~--- 10.000 лм. Вымераць сьветлавую плынь можна люксомэтрам, прыблізна ацаніць камерай тэлефона, напрыклад з~праграмай Lux light meter. Нашыя вочы адаптуюцца да розных узроўняў асьветленасьці, таму візуальна параўноўваць даволі складана.
+Адрэгулюйце колькасьць сьвятла. Частая праблема памяшканьняў~--- малая колькасьць сьвятла, цьмянае сьвятло можа пагаршаць настрой і зьніжаць энэргічнасьць. Сьветлавая плынь~--- гэта колькасьць сьвятла, яна вымяраецца ў~люменах, як правіла, паказана на самой лямпе. Яркае сьвятло добрае раніцай і днём, яно бадзёрыць і падтрымлівае тонус. Старайцеся падбіраць сьвятло ня менш за 200--250 люмен на квадратны мэтар, гэта значыць, што тры лямпачкі на пакой будзе занадта мала. У зале ў~мяне 9 лямпаў па 500 люксаў, і стае іх толькі на цэнтар пакоя. На вуліцы нават у~пахмурнае надвор'е~--- 1000 люмен, а~ў сонечны дзень~--- 10.000 лм. Вымераць сьветлавую плынь можна люксомэтрам, прыблізна ацаніць камерай тэлефона, напрыклад з~праграмай Lux light meter. Нашыя вочы адаптуюцца да розных узроўняў асьветленасьці, таму візуальна параўноўваць даволі складана.
 
 Спэктар сьвятла лямпы. Спэктар бывае бесьперапынным, як у~сонца ці лямпы напальваньня, ці рваным, калі ў~ім некалькі палосаў. Таксама вылучаюць спэктры зь перавагай рознага сьвятла. Большасьць сьвятлодыёдных лямпаў маюць скажоны спэктар зь сінім пікам. Гэта можа нэгатыўна паўплываць як на выпрацоўку мэлятаніну ўвечары, так і парушыць рэгуляцыю працы вока, бо да сіняга сьвятла асабліва адчувальныя гангліёзныя клеткі. У нашай сятчатцы ёсьць адмысловыя гангліянарныя мэлянапсінавыя клеткі, ад іх па рэтынагіпаталамічным шляху ў~гіпаталямус ідзе сыгнал, які кіруе цыркаднымі рытмамі і адказвае рэакцыю звужэньня зрэнак на сьвятло. Гэтыя клеткі ўзбуджаюцца сінім сьвятлом у~480 нм, таму «пік» у~звычайных сьвятлодыёдных лямпах можа зьбіваць наш унутраны гадзіньнік. Найлепшыя сьвятлодыёдныя лямпы сёньня~--- на аснове тэхналёгіі sunlike, іх спэктар бліжэйшы да сонечнага, бяз сіняга піку і правалу чырвонага. Увечары ж карысьнейшыя лямпы напальваньня, яны ня маюць піку сіняга сьвятла і асабліва не замінаюць выпрацоўцы мэлятаніну.
 
-Колеравая тэмпэратура~--- гэта ўспрымальны колер лямпы. 4000К~--- гэта ``нэўтральны белы'', мякчэйшы жоўты 2700-2800К, а~высокая сьветлавая тэмпэратура вышэй 5500К можа раздражняць і стамляць.
+Колеравая тэмпэратура~--- гэта ўспрымальны колер лямпы. 4000К~--- гэта ``нэўтральны белы'', мякчэйшы жоўты 2700--2800К, а~высокая сьветлавая тэмпэратура вышэй 5500К можа раздражняць і стамляць.
 
 Колераперадача. Ці часта было так, што вы купляеце прыгожую садавіну на рынку, а~на кухні яна выглядае нясмачна? А ваш твар зямлістым? Не сьпяшайцеся вінаваціць сябе ці прадаўцоў, праблема можа быць у~вашым хатнім асьвятленьні. Колераперадача~--- гэта параўнаньне, як выглядаюць адценьні ў~параўнаньні з~сонечным сьвятлом, наколькі раўнамерны ўзровень розных каляровых кампанэнтаў у~сьвятле. У сонца паказьнік колераперадачы 100 (CRI, Ra), а~ў лямпы чым больш CRI, тым лепш. Гэтае значэньне павінна быць пазначанае на ўпакоўцы. Калі CRI ніжэй ці роўны 80, то гэта шкодна, бо адценьні зьліваюцца, а~паніжэньне кантраснасьці ўспрымаецца нашым мозгам як страта рэзкасьці, і гэта змушае нас напружваць цягліцы вачэй, што вядзе да аўтаматычнай напругі вачэй, стамляльнасьці. У мяне стаяць лямпы з~CRI 95 і вышэй, і розьніца са звычайнымі прыкметная.
 
