--- a/willpower/chapter12.tex
+++ b/willpower/chapter12.tex
@@ -10,7 +10,7 @@
 
 Дадаюць праблемаў і мэдыцынскія заключэньні аб уплыве сонечных прамянёў. Было заўважана, што сонца зьяўляецца вядучай прычынай старэньня скуры (фотастарэньня), павялічвае рызыку шэрагу ракавых захворваньняў скуры, уключаючы такую небясьпечную пухліну, як мэляному. Гэта прывяло да распаўсюджваньня сонцаахоўных крэмаў, актыўнага пазьбяганьня сонца, выкарыстаньня сонцаахоўных акуляраў для зьніжэньня рызыкі праблемаў зь сятчаткай вачэй.
 
-Нават у~такіх сонечных краінах, як Аўстралія, у~50-60\,\% насельніцтва можа сустракацца дэфіцыт вітаміну Д, узровень якога адлюстроўвае знаходжаньне на сонцы. Сёньня, у~выніку маштабных навуковых дасьледаваньняў, мы бачым чарговую зьмену парадыгмы~--- новае прызнаньне нязьменнай эвалюцыйнай карысьці сонечнага сьвятла. Як аказалася, яго перавагі нашмат перавешваюць рызыкі, а~пісьменнае выкарыстаньне здольнае гэтыя рызыкі нашмат паменшыць. 
+Нават у~такіх сонечных краінах, як Аўстралія, у~50--60\,\% насельніцтва можа сустракацца дэфіцыт вітаміну Д, узровень якога адлюстроўвае знаходжаньне на сонцы. Сёньня, у~выніку маштабных навуковых дасьледаваньняў, мы бачым чарговую зьмену парадыгмы~--- новае прызнаньне нязьменнай эвалюцыйнай карысьці сонечнага сьвятла. Як аказалася, яго перавагі нашмат перавешваюць рызыкі, а~пісьменнае выкарыстаньне здольнае гэтыя рызыкі нашмат паменшыць. 
 
 Апошнім часам вельмі ўзрос інтарэс да вітаміну D, і людзі сталі ўжываць яго практычна як панацэю. Аднак важна зразумець, што ўзровень вітаміну D адлюстроўвае працягласьць знаходжаньня чалавека на сонцы і, па сутнасьці, зьяўляецца сурагатным маркерам.
 
@@ -49,15 +49,15 @@
 
 З дапамогай сонечных ваннаў можна стварыць у~падскурнай клятчатцы вялікі запас вітаміну Д, якога хопіць і на зімовыя месяцы. Але лепш не рызыкаваць~--- і зімой прымаць прафіляктычныя дозы вітаміну. 
 
-Выпрацоўка вітаміну Д адбываецца ў~скуры, ён утвараецца з~7-дэгідрахалестэролу пры ўзьдзеяньні ультрафіялету B (даўжыня хвалі 315-280 нм). Рэцэптары да вітаміну Д ёсьць практычна ўсюды, таму вітамін Д нават завуць гармонам. Ён рэгулюе ня толькі абмен кальцыя, але і ўплывае на рост клетак, сасудаў, выпрацоўку інсуліну, працу імуннай сыстэмы, палавой сыстэмы, актывуе транскрыпцыю каля 200 генаў.
+Выпрацоўка вітаміну Д адбываецца ў~скуры, ён утвараецца з~7-дэгідрахалестэролу пры ўзьдзеяньні ультрафіялету B (даўжыня хвалі 315--280 нм). Рэцэптары да вітаміну Д ёсьць практычна ўсюды, таму вітамін Д нават завуць гармонам. Ён рэгулюе ня толькі абмен кальцыя, але і ўплывае на рост клетак, сасудаў, выпрацоўку інсуліну, працу імуннай сыстэмы, палавой сыстэмы, актывуе транскрыпцыю каля 200 генаў.
 
-Колькасьць атрыманага ўльтрафіялету вымяраюць у~мінімальных эрытэмных дозах, то бок яго колькасьці, неабходнай для ледзь прыкметнага пачырваненьня скуры. У год для падтрыманьня ўзроўню вітаміну D дастаткова ўсяго 50-60 эрытэмных дозаў. 1 эрітемной доза = 25.000 МЕ вітаміну D. Мінімум сонца~--- гэта чвэрць эрытэмнай дозы: ад 5 да 30 хвілін у~залежнасьці ад геаграфіі, 6-7 раз у~тыдзень на твар, рукі, ногі, з~10:00 да 15:00 у~сярэдніх шыротах. Як бачыце, для атрыманьня вітаміну Д згараць зусім неабавязкова. Праўда, з~сонцам у~зімовыя месяцы будзе крыху цяжкавата.
+Колькасьць атрыманага ўльтрафіялету вымяраюць у~мінімальных эрытэмных дозах, то бок яго колькасьці, неабходнай для ледзь прыкметнага пачырваненьня скуры. У год для падтрыманьня ўзроўню вітаміну D дастаткова ўсяго 50--60 эрытэмных дозаў. 1 эрітемной доза = 25.000 МЕ вітаміну D. Мінімум сонца~--- гэта чвэрць эрытэмнай дозы: ад 5 да 30 хвілін у~залежнасьці ад геаграфіі, 6--7 раз у~тыдзень на твар, рукі, ногі, з~10:00 да 15:00 у~сярэдніх шыротах. Як бачыце, для атрыманьня вітаміну Д згараць зусім неабавязкова. Праўда, з~сонцам у~зімовыя месяцы будзе крыху цяжкавата.
 
 Дадаткі вітаміну D. Калі ваш узровень вітаміну D ніжэй за 30 НГ / мл і вы ня можаце атрымаць дастатковую колькасьць сонца, то ёсьць сэнс прымаць яго дабаўкі. Для прафіляктыкі гіпавітамінозу D у~зімовы час, магчыма, таксама варта ўжываць яго ў~дадатках (але ня больш за 2000 МЕ у~дзень) і хаця б раз у~год вымяраць яго ўзровень у~плазьме крыві. Вітамін D, выпрацаваны ў~скуры, не распадаецца прынамсі ўдвая даўжэй, чым вітамін D у~дадатках. Перадазіроўка вітаміну D за кошт сонечных прамянёў немагчымая. Акрамя сонца і дабавак, невялікія колькасьці вітаміну D можна атрымліваць з~тлустай марской рыбай. Фізычная актыўнасьць павялічвае мабілізацыю вітаміну D з~тлушчу. Але сонца~--- гэта нашмат больш, чым вітамін Д. І замяніць сонца дадаткам немагчыма. Давайце разьбяромся, якія ж ключавыя мэханізмы карыснага дзеяньня сонца.
 
 Сынтэз NO (аксід азоту). Выбіраючыся на пікнік, гараджане часта заўважаюць, што ў~іх ад чыстага паветра ледзь ня кружыцца галава. Насамрэч гэта дзеяньне сонца. Можна правесьці навуковы экспэрымэнт: для яго нам патрэбны таномэтр і 20-хвіліннае знаходжаньне на сонцы. Вымярыўшы ціск да і пасьля, вы зможаце ўбачыць, што ціск пасьля знаходжаньня на сонцы зьнізілася. Пад узьдзеяньнем сонца ў~сасудах выдзяляецца аксід азоту, які валодае сасудапашыральным дзеяньнем і абараняе ад атэрасклерозу.
 
-Аксід азоту~--- гэта актыўнае злучэньне, якое выпрацоўваецца ў~нашым арганізьме і валодае дабратворным узьдзеяньнем на здароўе сасудаў, пашыраючы іх, яно зьніжае запаленьне, паляпшае гаеньне ранаў, паляпшае працу мітахондрыяў, зьніжае рызыкі сардэчна-сасудзістых захворваньняў, узмацняе эрэкцыю і да т.~п. У нашай скуры захоўваецца шмат азоту ў~выглядзе нітратаў, нітрытаў і нітразатыёлу. Калі на скуру трапляе сонечнае сьвятло, адбываецца выпрацоўка аксіду азоту. Цікава, што для гэтага патрабуецца даўгахвалевы ультрафіялет А (315-400 нм), які менш расьсейваецца. Таму шпацыр на сонцы будзе карысны, нават калі вітамін Д амаль не выпрацоўваецца. Фізычная актыўнасьць таксама дапамагае выдзяляцца аксіду азоту ў~сасудах, так што трэніроўка на адкрытым паветры пры сьвятле дня дае аптымальны эфэкт. Варта ўжываць у~ежу дастатковую колькасьць гародніны, дзе шмат карыснага азоту, напрыклад, чырвоны бурак.
+Аксід азоту~--- гэта актыўнае злучэньне, якое выпрацоўваецца ў~нашым арганізьме і валодае дабратворным узьдзеяньнем на здароўе сасудаў, пашыраючы іх, яно зьніжае запаленьне, паляпшае гаеньне ранаў, паляпшае працу мітахондрыяў, зьніжае рызыкі сардэчна-сасудзістых захворваньняў, узмацняе эрэкцыю і да т.~п. У нашай скуры захоўваецца шмат азоту ў~выглядзе нітратаў, нітрытаў і нітразатыёлу. Калі на скуру трапляе сонечнае сьвятло, адбываецца выпрацоўка аксіду азоту. Цікава, што для гэтага патрабуецца даўгахвалевы ультрафіялет А (315--400 нм), які менш расьсейваецца. Таму шпацыр на сонцы будзе карысны, нават калі вітамін Д амаль не выпрацоўваецца. Фізычная актыўнасьць таксама дапамагае выдзяляцца аксіду азоту ў~сасудах, так што трэніроўка на адкрытым паветры пры сьвятле дня дае аптымальны эфэкт. Варта ўжываць у~ежу дастатковую колькасьць гародніны, дзе шмат карыснага азоту, напрыклад, чырвоны бурак.
 
 Зімовы сардэчна-сасудзісты фэномэн~--- гэта пачашчэньне многіх хваробаў, ад трамбозаў да інсультаў, так зімой частата тромбаэмбаліі вышэй на 20\,\%, інсультаў~--- на 48\,\%, чым у~іншыя месяцы. Узімку вышэй узровень адрэналіну, ангіятэнзіну, гэтую зьяву тлумачаць і меншай рухомасьцю, і брудным паветрам, але ня будзем забываць пра наймацнейшы дэфіцыт~--- пра сонца. Сонца зьніжае рызыку сардэчна-сасудзістых захворваньняў рознымі спосабамі. Мы казалі пра вызваленьне аксіду азоту пад узьдзеяньнем ультрафіялету, але навукоўцы дасьледавалі і іншы мэханізм~--- яркасьць сьвятла. Аказваецца, сьвятло сілай у~10.000 люкс павялічвае актыўнасьць экспрэсіі цыркаднага гена Period 2 (PER2), што ў~сваю чаргу павялічвае актыўнасьць гіпаксіяй індукаванага фактару HIF1A. А HIF1A у~сваю чаргу аказвае ахоўны эфэкт у~розных тканках. Такім чынам, яркае сьвятло абараняе ад сардэчна-сасудзістых захворваньняў і, у~выпадку інфаркту, значна абмяжоўвае пашкоджаньне сардэчнай мышцы.
 
@@ -108,7 +108,7 @@
 
 Каратыноіды ўбудоўваюцца ў~нашы клеткавыя мэмбраны і абараняюць іх ад пашкоджаньняў свабоднымі радыкаламі, а~таксама цэласнасьць клетак і тканін ад ультрафіялету і ня толькі. Калі такі фізычны мэханізм не спрацаваў, то каратыноіды могуць проста прымаць удар на сябе, акісьляючыся. Агляд дасьледаваньняў пацьвярджае, што людзі, якія ўжываюць дастаткова садавіны і гародніны, багатых каратыноідамі (морква, памідоры, папая), маюць менш паталёгіяў скуры, і іх скура пад дзеяньнем ультрафіялету павольней старэе.
 
-Так, умераная доза бэта-каратыну зьмяншае рэакцыю скуры на дзеяньне ўльтрафіялету. У адным дасьледаваньні параўноўвалі дзеяньне таматнага соку, экстракту тамата і сынтэтычнага лікапэну. Максімум утрыманьня іх у~скуры назіраўся праз 12 тыдняў~--- гэта зьвязана з~хуткасьцю абнаўленьня скуры і кумуляцыі лікапэну. Пры гэтым экстракт тамата на 48\,\% павялічыў фотаабарону, а~вось дадатак лікапэну~--- на 25\,\%. Вось відавочная карысьць цэльнай гародніны, у~якой утрымоўваецца цэлы шэраг фотапратэктараў, такіх як фітафлуен, фітаен і інш. Акрамя гародніны, эфэктыўным для фотаабароны можа быць прыём астаксанцыну ў~выглядзе дадаткаў. Толькі пачаць яго прыём трэба за 1-2 месяцы да паездкі ў~гарачыя краіны, каб ён пасьпеў назапасіцца ў~скуры. Фотаахоўнымі ўласьцівасьцямі таксама валодае какава.
+Так, умераная доза бэта-каратыну зьмяншае рэакцыю скуры на дзеяньне ўльтрафіялету. У адным дасьледаваньні параўноўвалі дзеяньне таматнага соку, экстракту тамата і сынтэтычнага лікапэну. Максімум утрыманьня іх у~скуры назіраўся праз 12 тыдняў~--- гэта зьвязана з~хуткасьцю абнаўленьня скуры і кумуляцыі лікапэну. Пры гэтым экстракт тамата на 48\,\% павялічыў фотаабарону, а~вось дадатак лікапэну~--- на 25\,\%. Вось відавочная карысьць цэльнай гародніны, у~якой утрымоўваецца цэлы шэраг фотапратэктараў, такіх як фітафлуен, фітаен і інш. Акрамя гародніны, эфэктыўным для фотаабароны можа быць прыём астаксанцыну ў~выглядзе дадаткаў. Толькі пачаць яго прыём трэба за 1--2 месяцы да паездкі ў~гарачыя краіны, каб ён пасьпеў назапасіцца ў~скуры. Фотаахоўнымі ўласьцівасьцямі таксама валодае какава.
 
 Фотасэнсібілізатары. Будзьце асьцярожныя з~сонцам, калі прымаеце лекі, якія валодаюць уласьцівасьцямі фотасэнсібілізатараў: сульфаніламіды, тэтрацыкліны, фэнатыязіны, фторхіналоны, нестэроідныя супрацьзапаленчыя прэпараты, некаторыя гарманальныя прэпараты, некаторыя віды касмэтыкі~--- з~дадаткамі вітамінаў, рэтынавай кіслаты, этэрных алеяў і г.д..
 
@@ -155,7 +155,7 @@
 
 Здаровы тэмпэратурны рэжым дапамагае нам ня толькі мацней спаць, лепш выглядаць, але і падвышае разумовую і фізычную актыўнасьць~--- аж да падаўжэньні жыцьця. Сыстэмы астуджэньня вельмі важныя, у~т.л. і для працы мозгу. Тэмпэратура мозгу рэгулюе актыўнасьць нэрвовай тканкі, мо таму пра чалавека, які рацыянальна разважае, гавораць, што ў~яго ``халодная галава''.
 
-Буры тлушч называецца так праз свой колер і выглядае так таму, што ў~клетках яго вельмі шмат мітахондрый з~асаблівым бялком тэрмагенінам (разьяднальны бялок). У бурым тлушчы актыўна ідуць працэсы акісьленьня тлушчаў, толькі ўтварааецца пры гэтым не энэргія для клеткі ў~выглядзе АТФ, а~цеплыня. За год 50 г бурага тлушчу могуць спаліць да 4-5 кг белага тлушчу. Колькасьць бурага тлушчу рэзка зьніжаецца да 40 гадоў: звычайна ў~дарослага чалавека ёсьць усяго 20-30 грамаў актыўнага бурага тлушчу, у~асноўным у~надключычнай вобласьці. Выяўлена, што ў~людзей, якія маюць лішнюю вагу, колькасьць бурага тлушчу зьніжаная, а~яго актыўнасьць прыгнечаная. Пры пэўных умовах (меншая тэмпэратура паветра, вялікая фізычная актыўнасьць) частка клетак звычайнага ``белага'' тлушчу могуць пачаць паводзіць сябе як бурыя, тады іх называюць ``бэжавы тлушч''. Актывацыя бурага тлушчу паляпшае абмен рэчываў, абараняе ад дыябэту, паляпшае адчувальнасьць да інсуліну.
+Буры тлушч называецца так праз свой колер і выглядае так таму, што ў~клетках яго вельмі шмат мітахондрый з~асаблівым бялком тэрмагенінам (разьяднальны бялок). У бурым тлушчы актыўна ідуць працэсы акісьленьня тлушчаў, толькі ўтварааецца пры гэтым не энэргія для клеткі ў~выглядзе АТФ, а~цеплыня. За год 50 г бурага тлушчу могуць спаліць да 4--5 кг белага тлушчу. Колькасьць бурага тлушчу рэзка зьніжаецца да 40 гадоў: звычайна ў~дарослага чалавека ёсьць усяго 20--30 грамаў актыўнага бурага тлушчу, у~асноўным у~надключычнай вобласьці. Выяўлена, што ў~людзей, якія маюць лішнюю вагу, колькасьць бурага тлушчу зьніжаная, а~яго актыўнасьць прыгнечаная. Пры пэўных умовах (меншая тэмпэратура паветра, вялікая фізычная актыўнасьць) частка клетак звычайнага ``белага'' тлушчу могуць пачаць паводзіць сябе як бурыя, тады іх называюць ``бэжавы тлушч''. Актывацыя бурага тлушчу паляпшае абмен рэчываў, абараняе ад дыябэту, паляпшае адчувальнасьць да інсуліну.
 
 Разьяднальныя бялкі (UCP) знаходзяцца на мэмбране мітахондрый і спрыяюць таму, што назапашаная ў~выглядзе розьніцы патэнцыялаў энэргія сыходзіць у~цеплыню, г.~зн. разьядноўваюць акісьленьне і фасфараляваньне. Падобныя выдаткі аказваюцца вельмі карыснымі для арганізма.
 
@@ -182,7 +182,7 @@
 
 У гэтай справе, як і ў~шматлікіх іншых, важныя правільны псыхалягічны настрой і ўпэўненасьць: гартуемся на мяжы задавальненьня, але не гвалтуем сябе. Пры працэдуры скура павінна чырванець: калі яна бляднее ці сінее, то нагрузка празьмерная. Калі адчуваеце, што замярзаеце, трэба неадкладна спыніць працэдуру і сагрэцца. Таксама важна выконваць адпаведную дыету і пазьбягаць абязводжваньня. Дадаткі Амэга-3, адаптагенаў дапамогуць лягчэй адаптавацца да холаду.
 
-Паветраныя ванны. Апранайце менш лішняга адзеньня дома і на вуліцы: вы ідэальна апранутыя, калі вам халодна стаяць, але цёпла ісьці. Тэмпература 18-20 градусаў спрыяе падтрыманьню цяглічнага тонусу.
+Паветраныя ванны. Апранайце менш лішняга адзеньня дома і на вуліцы: вы ідэальна апранутыя, калі вам халодна стаяць, але цёпла ісьці. Тэмпература 18--20 градусаў спрыяе падтрыманьню цяглічнага тонусу.
 
 Вы можаце рабіць зарадку з~адкрытымі вокнамі і галяком~--- адсутнасьць адзеньня ўзмацняе цеплааддачу. Паводле словаў Уладзіміра Маякоўскага: ``Няма на сьвеце прыгажэйшага адзеньня, чым бронза мускулаў і сьвежасьць скуры''. Бэнджамін Франклін заўсёды пачынаў свае дні з~паветраных ваннаў: на працягу паўгадзіны кожны дзень ён сядзеў перад разнасцежаным акном галяком, чытаючы, робячы запісы, разважаючы. Сон у~прахалодзе паляпшае мэтабалічныя паказьнікі нават здаровых людзей: мерзнуць ня трэба, спіце пад коўдрай і ўдыхайце прахалоднае паветра.
 
@@ -204,13 +204,13 @@
 
 Навуковыя дасьледаваньні паказваюць прыкметны ўплыў Амэга-3 на халадовую ўстойлівасьць, прычым адразу па некалькіх мэханізмах, уключаючы прамы ўплыў на бэжавы і буры тлушч. Амэга-3 зьвязваецца з~рэцэптарам GPR120, што прыводзіць да выдзяленьня гармону FGF21, які ўзмацняе выпрацоўку цяпла ў~тлушчавай тканцы.
 
-Сьвятло. Лішак штучнага сьвятла ўвечары і ўначы можа блякаваць працу бурага тлушчу, гэтак жа як і ўжываньне бэта-блякатараў і дрэнная праца шчытавіцы. У дасьледаваньнях паказана, што ў~мышэй, якіх доўга трымалі на сьвятле, назапашвалася на 25-50\,\% больш тлушчу, хоць іх кармілі аднолькава. Чым сьвятлей у~вас у~спальні ўначы, тым вышэйшая рызыка атлусьценьня!
+Сьвятло. Лішак штучнага сьвятла ўвечары і ўначы можа блякаваць працу бурага тлушчу, гэтак жа як і ўжываньне бэта-блякатараў і дрэнная праца шчытавіцы. У дасьледаваньнях паказана, што ў~мышэй, якіх доўга трымалі на сьвятле, назапашвалася на 25--50\,\% больш тлушчу, хоць іх кармілі аднолькава. Чым сьвятлей у~вас у~спальні ўначы, тым вышэйшая рызыка атлусьценьня!
 
 Цеплавая працэдура. Цеплавыя працэдуры ў~розных відах былі ва ўсіх старажытных цывілізацыях. У антычныя часы лазьні сталі сапраўднымі аздараўленчымі цэнтрамі з~гімнастычнымі залямі, парнымі, басэйнамі з~вадой розных тэмпэратураў, гразевымі ваннамі і масажам. Тэрмы Дыяклетыяна ў~Рыме зьмяшчалі да трох з~паловай тысячаў чалавек адначасова!
 
 У «Аповесьці мінулых гадоў» ад асобы апостала Андрэя прыведзена апісаньне старажытнарускіх лазьняў: «Дзіўнае бачыў у~славянскай зямлі, калі ішоў сюды. Бачыў лазні драўляныя, і напаляць іх да чырвані, і распрануцца, і будуць голымі, і абальюцца квасам скураным, і ўзнімуць на сябе маладыя пруты, і б’юць сябе самі, і да таго даб’юцца, што вылезуць ледзь жывыя, і абальюцца вадою сцюдзёнаю, і так ажывуць. І тое твораць ва ўсе дні, ніхто ж іх не мучыць, але самі сябе мучаць, і гэтак твораць амавенне сабе, а~не пакуту».
 
-Цеплавы стрэс зьніжае рызыку сьмерці ад сардэчна-сасудзістых захворваньняў. Так, аматары саўнаў на 44\,\% радзей паміралі ад раптоўнага спыненьня сэрца, рызыка гіпэртэнзіі зьніжалася на 47\,\%. Дадатны эфэкт ёсьць таксама і для мозгу (зьніжэньне рызыкі Альцгаймэра і стымуляцыя нэўраплястычнасьці), для мэтабалізму (павелічэньне адчувальнасьці да інсуліну) і іншыя плюсы. Пры гэтым наведваньні 2-4 разы на тыдзень карысьнейшыя, чым раз на тыдзень. Цеплавы стрэс выклікае павелічэньне колькасьці бялкоў цеплавога шоку, якія дапамагаюць аднаўляць у~клетках пашкоджаныя малекулы.
+Цеплавы стрэс зьніжае рызыку сьмерці ад сардэчна-сасудзістых захворваньняў. Так, аматары саўнаў на 44\,\% радзей паміралі ад раптоўнага спыненьня сэрца, рызыка гіпэртэнзіі зьніжалася на 47\,\%. Дадатны эфэкт ёсьць таксама і для мозгу (зьніжэньне рызыкі Альцгаймэра і стымуляцыя нэўраплястычнасьці), для мэтабалізму (павелічэньне адчувальнасьці да інсуліну) і іншыя плюсы. Пры гэтым наведваньні 2--4 разы на тыдзень карысьнейшыя, чым раз на тыдзень. Цеплавы стрэс выклікае павелічэньне колькасьці бялкоў цеплавога шоку, якія дапамагаюць аднаўляць у~клетках пашкоджаныя малекулы.
 
 Саўны і гарачыя ванны паляпшаюць кантроль глюкозы ў~крыві і нават зьмяншаюць колькасьць тлушчу, яны могуць быць карысныя для людзей з~цукроўкаю 2-га тыпу. Але яшчэ яны могуць нэгатыўна паўплываць на фэртыльнасьць мужчынаў (роўна як і занадта цёплая ніжняя бялізна, вузкія штаны, звычка трымаць ноўтбук на нагах і т. п.), бо павелічэньне тэмпэратуры ў~вобласьці машонкі парушае спэрматагенэз. Зрэшты, гэты ўплыў зварачальны.
 
@@ -225,11 +225,11 @@
 
 \section{Карысныя бактэрыі}
 
-За дзесяць сэкундаў пацалунку пары абменьваюцца больш за 80 мільёнамі бактэрыяў, якія належаць да 150-300 відаў. У пастаянных партнёраў мікрафлёра рота наогул становіцца аднолькавай. Калі вы і ваш абраньнік/абраньніца здаровыя, то павелічэньне разнастайнасьці карысных бактэрыяў пойдзе вам абаім на карысьць.
+За дзесяць сэкундаў пацалунку пары абменьваюцца больш за 80 мільёнамі бактэрыяў, якія належаць да 150--300 відаў. У пастаянных партнёраў мікрафлёра рота наогул становіцца аднолькавай. Калі вы і ваш абраньнік/абраньніца здаровыя, то павелічэньне разнастайнасьці карысных бактэрыяў пойдзе вам абаім на карысьць.
 
 Калі вы ясьце, ваша ежа корміць яшчэ й велізарнае мноства вашых малюсенькіх сяброў у~кішачніку~--- і тут гаворка таксама пра бактэрыі. Сяброўства зь імі забясьпечвае здароўе, а~сапсаваныя адносіны могуць нэгатыўна паўплываць на разьвіцьцё розных хваробаў~--- ад атлусьценьня і дэпрэсіі да алергій і харчовай непераноснасьці. Навукоўцы апісваюць ня толькі мікрабіем кішачніка, але й мікрабіёмы скуры, рота, дыхальных шляхоў, похвы і да т.~п.
 
-У склад мікрабіёмы ўваходзяць ня толькі бактэрыі, але й вірусы, археі, найпрасьцейшыя і грыбы. У норме разнастайнасьць бактэрыяў дасягае 300-700 відаў мікраарганізмаў. Мікрабіёму нават называюць «другім геномам» і «другім мозгам», бо яна можа ўплываць на наша здароўе з~дапамогай мноства мэханізмаў. Нашы гены не памяняеш, а~вось на мікрафлёру часткова можна актыўна ўплываць. Даследаваньні паказваюць, што наша мікрафлёра дазваляе прадказваць наяўнасць шэрагу захворваньняў на 20\,\% дакладней, чым геном (за выключэннем дыябэту 1 тыпу). Рэч у~тым, што мікрабіём дакладней адлюстроўвае наш лад жыцьця, у~тым ліку гісторыю разьвіцьця, харчаваньне, фізычную актыўнасьць і інш.
+У склад мікрабіёмы ўваходзяць ня толькі бактэрыі, але й вірусы, археі, найпрасьцейшыя і грыбы. У норме разнастайнасьць бактэрыяў дасягае 300--700 відаў мікраарганізмаў. Мікрабіёму нават называюць «другім геномам» і «другім мозгам», бо яна можа ўплываць на наша здароўе з~дапамогай мноства мэханізмаў. Нашы гены не памяняеш, а~вось на мікрафлёру часткова можна актыўна ўплываць. Даследаваньні паказваюць, што наша мікрафлёра дазваляе прадказваць наяўнасць шэрагу захворваньняў на 20\,\% дакладней, чым геном (за выключэннем дыябэту 1 тыпу). Рэч у~тым, што мікрабіём дакладней адлюстроўвае наш лад жыцьця, у~тым ліку гісторыю разьвіцьця, харчаваньне, фізычную актыўнасьць і інш.
 
 Аналіз мікрабіёмы можа нават прадказаць рызыку сьмерці: наяўнасьць вялікай колькасьці бактэрыяў зь сямейства Enterobacteriaceae на 15\,\% павялічвае рызыку сьмерці на працягу бліжэйшых 15 гадоў.
 
@@ -296,9 +296,9 @@
 
 Напрыклад, рэзістэнтны крухмал~--- гэта разнавіднасьць крухмалу, устойлівага да перастраварваньня ў~тонкім кішачніку, што дзейнічае як прэбіётык. Ён маецца ў~бабовых, цэльных зернях, нясьпелых бананах, сырой бульбе, а~таксама астуджаным хлебе і збожжавых.
 
-Харчовыя валокны маюць шмат дадатных уласьцівасьцяў і не зьвязаных зь мікрафлёрай. Яны зьніжаюць рызыку запораў, памяншаюць глікемічны індэкс, хутчэй насычаюць і зьніжаюць рызыку пераяданьня. 30 грамаў клятчаткі памяншаюць на 20\,\% і больш рызыку сардэчна-сасудзістых захворваньняў, раку прамой кішкі і дыябэту, зьніжаюць сьмяротнасьць ад інфэкцыйных захворваньняў. Ніжняя мяжа нормы спажываньня харчовых валокнаў складае 30-35 грамаў, але паказьнік у~50 грамаў будзе больш аптымальным.
+Харчовыя валокны маюць шмат дадатных уласьцівасьцяў і не зьвязаных зь мікрафлёрай. Яны зьніжаюць рызыку запораў, памяншаюць глікемічны індэкс, хутчэй насычаюць і зьніжаюць рызыку пераяданьня. 30 грамаў клятчаткі памяншаюць на 20\,\% і больш рызыку сардэчна-сасудзістых захворваньняў, раку прамой кішкі і дыябэту, зьніжаюць сьмяротнасьць ад інфэкцыйных захворваньняў. Ніжняя мяжа нормы спажываньня харчовых валокнаў складае 30--35 грамаў, але паказьнік у~50 грамаў будзе больш аптымальным.
 
-Самая высокая разнастайнасьць мікрафлёры ў~сучасным сьвеце ў~людзей з~плямёнаў паляўнічых-зьбіральнікаў, што абумоўлена ня толькі іх багатым бактэрыямі асяродзьдзем, але і вялікай колькасьцю зьяданых харчовых валокнаў, да 75-100 грам у~дзень. 30 грам клятчаткі памяншае на 20\,\% і больш рызыку сардэчна-сасудзістых захворваньняў, раку прамой кішкі і дыябэту, зьніжае сьмяротнасьць ад інфэкцыйных захворваньняў.
+Самая высокая разнастайнасьць мікрафлёры ў~сучасным сьвеце ў~людзей з~плямёнаў паляўнічых-зьбіральнікаў, што абумоўлена ня толькі іх багатым бактэрыямі асяродзьдзем, але і вялікай колькасьцю зьяданых харчовых валокнаў, да 75--100 грам у~дзень. 30 грам клятчаткі памяншае на 20\,\% і больш рызыку сардэчна-сасудзістых захворваньняў, раку прамой кішкі і дыябэту, зьніжае сьмяротнасьць ад інфэкцыйных захворваньняў.
 
 Зьвярніце ўвагу, што ў~складзе многіх прадуктаў больш за ўсё валокнаў у~лупіне ды іншых цьвёрдых частках, а~ня ў~мякаці. Таму перапрацаваныя і рафінаваныя прадукты, як правіла, утрымліваюць нашмат менш валокнаў. Павялічвайце колькасьць валокнаў паступова, бо рэзкае павелічэньне можа прывесьці да балючых адчуваньняў у~кішачніку. Пачніце не з~сырой, а~з тэрмічна апрацаванай гародніны, затым пераходзьце да альдэнтэ і толькі пасьля гэтага павелічайце колькасьць сырой.
 
