--- a/willpower/chapter3.tex
+++ b/willpower/chapter3.tex
@@ -28,7 +28,7 @@
 
 Назіраньне за сабой~--- унікальная рэч, таму што дазваляе зьмяніцца без самапрымусу і барацьбы. Эфэкт назіральніка, як мэтапазыцыя, дапамагае зірнуць на сябе збоку, без эмацыйных адзнак, што можа радыкальна паўплываць на разуменьне сытуацыі і сваіх праблемаў. Зь іншага боку, аб'ектыўныя лічбы могуць аказаць і моцнае эмацыйнае ўзьдзеяньне. Напрыклад, выпадкова зьедзены кавалачак торта ўспрымаецца несур'ёзна. Але калі падлічыць, колькі гэтых «выпадковых кавалачкаў» выпадае ў~месяц, то лічба робіць зусім іншае ўражаньне і прымушае задумацца.
 
-Напрыклад, радары на дарогах, якія паказваюць вашую хуткасьць, «працуюць» нашмат лепш, чым звычайныя папераджальныя знакі. Кіроўцы сапраўды зьніжаюць хуткасьць на 8-10 км/г. Менавіта так працуюць лічбы ў~цыклі зваротнай сувязі.
+Напрыклад, радары на дарогах, якія паказваюць вашую хуткасьць, «працуюць» нашмат лепш, чым звычайныя папераджальныя знакі. Кіроўцы сапраўды зьніжаюць хуткасьць на 8--10 км/г. Менавіта так працуюць лічбы ў~цыклі зваротнай сувязі.
 
 Вымярайце, каб заўважыць. Калі зьмены маленькія і расьцягнутыя ў~часе, то мы да іх звыкаем і можам нават не заўважаць. Яшчэ студэнтам я працаваў масажыстам, і пасьля доўгага курсу масажу мой кліент няпэўна зазначыў, што пачуваецца як звычайна, быццам нічога і не зьмянілася. Але праз два дні ён ператэлефанаваў і сказаў, што сьпіна не баліць! Да добрага мы звыкаем хутка, але гэтак жа хутка можна звыкнуць і да дрэннага і не заўважыць пагаршэньня здароўя.
 
@@ -109,9 +109,9 @@
 
 Апошнім часам папулярнасьць набываюць «оміксныя» аналізы, калі вывучаецца поўны профіль: аналіз усяго геному, мікрабіёму, эпігеному, транскрыптому (РНК-профіль), цытакіному (набор цытакінаў~--- узровень запаленьня), пратэому (набор бялкоў крыві), мэтабалёма (профіль і канцэнтрацыя нутрыентаў у~крыві) і да т.~п. Але такія падыходы вельмі дарагія і пакуль недасяжныя большасьці чытачоў, хоць па аналізе ДНК мы ўжо сёньня можам падбіраць больш аптымальныя прэпараты (фармакагеноміка). Камбінаванае выкарыстаньне ўсіх «омікаў» для канкрэтнай мэты называецца паноміка («panomics»), і, магчыма, за ёй будучыня прэцызійнай (дакладнай) мэдыцыны, якая дазваляе максімальна дакладна падбіраць лячэньне для канкрэтнага чалавека з~канкрэтнай хваробай.
 
-Напрыклад, дасьледаваньні паказваюць, што, калі людзі зь пераддыябэтам ня ўносяць карэктываў у~свой лад жыцьця, большасьць зб іх на працягу 10 гадоў сутыкаецца з~разьвіцьцём цукровага дыябэту 2 тыпу, зь іх у~15-30\,\% хвароба разьвіваецца на працягу пяці гадоў. Калі людзі з~пачатковымі кагнітыўнымі разладамі нічога ня робяць, у~іх ёсьць вельмі высокая рызыка разьвіцьця дэменцыі бліжэйшым часам.
+Напрыклад, дасьледаваньні паказваюць, што, калі людзі зь пераддыябэтам ня ўносяць карэктываў у~свой лад жыцьця, большасьць зб іх на працягу 10 гадоў сутыкаецца з~разьвіцьцём цукровага дыябэту 2 тыпу, зь іх у~15--30\,\% хвароба разьвіваецца на працягу пяці гадоў. Калі людзі з~пачатковымі кагнітыўнымі разладамі нічога ня робяць, у~іх ёсьць вельмі высокая рызыка разьвіцьця дэменцыі бліжэйшым часам.
 
-Важна адрозьніваць «норму» і «оптымум» для кожнага з~маркераў. Напрыклад, для С-рэактыўнага бялку ў~шматлікіх лябараторыях нормай пазначанае значэньне 5, хоць аптымальнымі зьяўляюцца значэньні 0,1-0,65, а~рызыка для здароўя расьце ўжо са значэньня 1.1. Таксама аптымальнае значэньне залежыць ад канкрэтнай тэрапэўтычнай мэты. Напрыклад, чым вышэйшая рызыка сардэчна-сасудзістых захворваньняў, тым меншым будзе аптымальнае значэньне ЛПНШ (ліпапратэіны нізкае шчыльнасьці).
+Важна адрозьніваць «норму» і «оптымум» для кожнага з~маркераў. Напрыклад, для С-рэактыўнага бялку ў~шматлікіх лябараторыях нормай пазначанае значэньне 5, хоць аптымальнымі зьяўляюцца значэньні 0,1--0,65, а~рызыка для здароўя расьце ўжо са значэньня 1.1. Таксама аптымальнае значэньне залежыць ад канкрэтнай тэрапэўтычнай мэты. Напрыклад, чым вышэйшая рызыка сардэчна-сасудзістых захворваньняў, тым меншым будзе аптымальнае значэньне ЛПНШ (ліпапратэіны нізкае шчыльнасьці).
 
 Мінімальны набор аналізаў уключае такія базавыя паказьнікі, як глюкоза, інсулін, глікаваны гемаглябін, ліпідны профіль, С-рэактыўны бялок, мачавая кіслата, ТТГ, св. тэстастэрон, АлАт, АсАт, білірубін, крэатынін, агульны бялок, агульны аналіз крыві і мачы. Прыклад разгорнутай панэлі біямаркераў прыведзены ніжэй. Для захоўваньня і аналізу вынікаў можна выкарыстоўваць адмысловую праграму, якая было створаная пры маім удзеле,~--- CarrotCare (iOS).
 
@@ -127,7 +127,7 @@
 
 Хатнія прылады. Цяпер можна купіць розныя датчыкі для самастойнага вымярэньня паказьнікаў здароўя~--- ад узроўню глюкозы і кетонавых целаў у~мачы або дыханьні да ціску і сатурацыі (узровень насычэньня крыві кіслародам). У прыватнасьці, за час распаўсюджваньня каранавіруснай інфэкцыі павысіўся попыт на пульсаксімэтры~--- апараты, якія вызначаюць сатурацыю, каб была магчымасьць своечасова заўважыць дыхальную недастатковасьць.
 
-Зьявілася шмат датчыкаў для кругласутачнага адсочваньня ваганьняў глюкозы, напрыклад Free Libre. Яны дапамагаюць заўважыць скокі глюкозы ў~здаровых людзей і выявіць іх прычыны. Аказваецца, у~розных людзей бываюць розныя глюкатыпы са сваёй амплітудай ваганьняў узроўняў глюкозы. Маніторынг таксама дазваляе выявіць індывідуальную глікемічную рэакцыю на прадукты, убачыць эпізоды як гіпэрглікеміі, так і ўтоенай гіпаглікеміі і зьвязаць іх з~пэўнымі станамі. Празьмерны і працяглы скачок глюкозы пасьля прыёму ежы павышае рызыку інфаркту міякарда ў~4-5 разоў, прычым незалежна ад яе ўзроўню нашча. З дапамогай аптэчнага аналізатара ўзроўню глюкозы можна вымяраць рэакцыю менавіта на прыём ежы.
+Зьявілася шмат датчыкаў для кругласутачнага адсочваньня ваганьняў глюкозы, напрыклад Free Libre. Яны дапамагаюць заўважыць скокі глюкозы ў~здаровых людзей і выявіць іх прычыны. Аказваецца, у~розных людзей бываюць розныя глюкатыпы са сваёй амплітудай ваганьняў узроўняў глюкозы. Маніторынг таксама дазваляе выявіць індывідуальную глікемічную рэакцыю на прадукты, убачыць эпізоды як гіпэрглікеміі, так і ўтоенай гіпаглікеміі і зьвязаць іх з~пэўнымі станамі. Празьмерны і працяглы скачок глюкозы пасьля прыёму ежы павышае рызыку інфаркту міякарда ў~4--5 разоў, прычым незалежна ад яе ўзроўню нашча. З дапамогай аптэчнага аналізатара ўзроўню глюкозы можна вымяраць рэакцыю менавіта на прыём ежы.
 
 Інструмэнтальныя вымярэньні. Бадай кожны орган можа быць старанна абсьледаваны~--- і для гэтага вынайшлі мноства розных мэдыцынскіх спосабаў абсьледаваньня. Напрыклад, ацэнка стану сардэчна-сасудзістай сыстэмы ўключае вымярэньне артэрыяльнага ціску, пульсу спакою, УГД сасудаў шыі, УГД міякарда, мультысьпіральную кампутарную тамаграфію сасудаў сэрца, вымярэньне калянасьці артэрыяў рознымі спосабамі, ЭКГ, манжэтавы тэст, нагрузачныя тэсты. Мэтазгоднасьць выбару таго ці іншага інструмэнту залежыць ад канкрэтнае сытуацыі.
 
@@ -167,7 +167,7 @@
 
 Вядома, тут працуе і праблема чаканьняў: калі ўжо нешта выяўлена, то ад лекара чакаюць прызначэньня разгорнутага лячэньня, а~ня проста назіраньня або парадаў па зьмене ладу жыцьця. І заўсёды застаецца пытаньне асабістай карысьці: калі ў~сярэднім нейкі спосаб раньняй дыягностыкі можа быць неэфэктыўным, то менавіта ў~вашым выпадку ён можа выратаваць жыцьцё.
 
-Індывідуальная праграма. Канкрэтная праграма абсьледаваньняў залежыць ад узросту чалавека, наяўнасьці чыньнікаў рызыкі захворваньняў, біямаркераў. Напрыклад, для вызначэньня аптымальнага спосабу скрынінгу каларэктальнага раку важна ведаць, што яго чыньнікамі рызыкі зьяўляюцца запаленчыя захворваньні кішачніка (язвавы каліт, хвароба Крона), спадчынны адэнаматозны паліпоз, пэўны стыль харчаваньня. Таксама наяўнасьць сваякоў з~каларэктальным ракам павышае рызыку ў~2-3 разы: калі ў~іх быў рак ва ўзросьце да 60 гадоў, то трэба пачынаць скрынінг у~45 гадоў~--- за 15 гадоў да. Як мінімум мне б хацелася, каб у~вас быў свой выразны плян здароўя на год і на 10 гадоў наперад. Вялікая колькасьць чыньнікаў рызыкі якога-небудзь захворваньня патрабуе больш дбайнай і раньняй прафіляктыкі.
+Індывідуальная праграма. Канкрэтная праграма абсьледаваньняў залежыць ад узросту чалавека, наяўнасьці чыньнікаў рызыкі захворваньняў, біямаркераў. Напрыклад, для вызначэньня аптымальнага спосабу скрынінгу каларэктальнага раку важна ведаць, што яго чыньнікамі рызыкі зьяўляюцца запаленчыя захворваньні кішачніка (язвавы каліт, хвароба Крона), спадчынны адэнаматозны паліпоз, пэўны стыль харчаваньня. Таксама наяўнасьць сваякоў з~каларэктальным ракам павышае рызыку ў~2--3 разы: калі ў~іх быў рак ва ўзросьце да 60 гадоў, то трэба пачынаць скрынінг у~45 гадоў~--- за 15 гадоў да. Як мінімум мне б хацелася, каб у~вас быў свой выразны плян здароўя на год і на 10 гадоў наперад. Вялікая колькасьць чыньнікаў рызыкі якога-небудзь захворваньня патрабуе больш дбайнай і раньняй прафіляктыкі.
 
 Зьбярыце інфармацыю пра сваё здароўе ў~адным месцы, магчыма, і на воблачным носьбіце, бо ўсе выпіскі на паперы губляюцца. Разглядайце здароўе ў~шырокім ключы: гэта і рызыка ДТЗ, фінансавыя рызыкі, рызыкі залежнасьці, суіцыду, прафіляктычныя мерапрыемствы, уключаючы прышчэпкі ня толькі для дзяцей, але і для дарослых, маніторынг пабочных эфэктаў лекаў.
 
@@ -175,7 +175,7 @@
 
 Прафіляктычныя дасьледаваньні мае сэнс пачынаць прыкметна раней, чым рэкамэндуюць. Так, атэрасклератычнае паражэньне сасудаў пачынаецца рана ў~жыцьці, але прагрэсуе з~рознай хуткасьцю. У многіх назіраецца паскораны атэрасклероз, які клінічна значны ўжо ў~маладым узросьце. Пагатоў тыповыя чыньнікі рызыкі не заўсёды прадказваюць яго. А 80\,\% выпадкаў раптоўнае каранарнае сьмерці зьвязана з~атэрасклерозам.
 
-Дасьледаваньне PDAY вывучала аўтапсіі амаль 3000 людзей ва ўзросьце 15--34, 13\,\% абсьледаваных аказаліся з~выяўленым атэрасклерозам (уключна зь нестабільнымі бляшкамі). Выяўленыя прыкметы атэрасклерозу абдамінальнай аорты ў~20\,\% (15-19 гадоў), 40\,\% (30-34 гады), паражэньне каранарных артэрыяў у~10\,\% (15-19 гадоў), 30\,\% (30-34 гады). У іншым дасьледаваньні УГД паказала прыкметы каранарнага атэрасклерозу ў~15\,\% людзей маладзейшых за 20, 37\,\% ва ўзросьце 20-29, 60\,\% ва ўзросьце 30-39, 71\,\% ва ўзросьце 40-49, 85\,\% ва ўзросьце старэйшых за 50. Аўтапсіі загінулых жаўнераў (сярэдні ўзрост 26) паказалі каранарны атэрасклероз у~78\,\%, пры гэтым звужэньне прасьвету артэрыяў больш чым на 50\,\%~--- у~20\,\% выпадкаў, больш за 75\,\% прасьвету~--- у~9\,\%. Як бачыце, паражэньні сардэчна-сасудзістай сыстэмы часта ўзьнікаюць даволі рана. Таму прэвэнтыўная дыягностыка можа быць эфэктыўнай і карыснай. Можна запаволіць і нават скіраваць назад працэс атэрасклерозу.
+Дасьледаваньне PDAY вывучала аўтапсіі амаль 3000 людзей ва ўзросьце 15--34, 13\,\% абсьледаваных аказаліся з~выяўленым атэрасклерозам (уключна зь нестабільнымі бляшкамі). Выяўленыя прыкметы атэрасклерозу абдамінальнай аорты ў~20\,\% (15--19 гадоў), 40\,\% (30--34 гады), паражэньне каранарных артэрыяў у~10\,\% (15--19 гадоў), 30\,\% (30--34 гады). У іншым дасьледаваньні УГД паказала прыкметы каранарнага атэрасклерозу ў~15\,\% людзей маладзейшых за 20, 37\,\% ва ўзросьце 20--29, 60\,\% ва ўзросьце 30--39, 71\,\% ва ўзросьце 40--49, 85\,\% ва ўзросьце старэйшых за 50. Аўтапсіі загінулых жаўнераў (сярэдні ўзрост 26) паказалі каранарны атэрасклероз у~78\,\%, пры гэтым звужэньне прасьвету артэрыяў больш чым на 50\,\%~--- у~20\,\% выпадкаў, больш за 75\,\% прасьвету~--- у~9\,\%. Як бачыце, паражэньні сардэчна-сасудзістай сыстэмы часта ўзьнікаюць даволі рана. Таму прэвэнтыўная дыягностыка можа быць эфэктыўнай і карыснай. Можна запаволіць і нават скіраваць назад працэс атэрасклерозу.
 
 Генэтычнае тэставаньне. Існуе вялікая колькасьць розных тэхналёгіяў тэставаньня, ад частковага да поўнагеномнага, і кампаніяў, якія займаюцца тэставаньнем. Варта загадзя адзначыць, што сувязь захворваньне--гены далёка не заўсёды адназначная, таму да атрыманых рэкамэндацыяў варта ставіцца скептычна. Толькі невялікая колькасьць генаў вывучаная настолькі, што стала магчымым вызначыць іх узаемасувязь зь некаторымі захворваньнямі і спосабы перадухіленьня рызыкі. Напрыклад, сувязь BRCA1 і раку грудзей, APOE і хваробы Альцгаймэра.
 
@@ -202,7 +202,7 @@
 
 У шмат каго здаровы лад жыцьця асацыюецца з~чалавекам, які абчапляўся датчыкамі, пастаянна лічыць калёрыі і нэрвова ўвечары ходзіць кругамі, дабіраючы крокі да запаветных 10.000. Калі мы глядзім на свой шчыльны расклад, то адчуваем роспач, бо не знаходзім магчымасьці ўпіхнуць усе гэтыя аздараўленчыя практыкі. Ня варта хвалявацца. Адказна заяўляю: сапраўдная практыка здароўя павінна зараджаць вас энэргіяй і вызваляць час. Нам патрэбнае здароўе для жыцьця, а~не жыцьцё для здароўя.
 
-Напрыклад, у~харчаваньні вы зэканоміце кучу часу і сілаў, калі будзеце есьці радзей, 2-3 разы на дзень. Прыбіраючы вячэры, вы вызваліце вячэрні час для адпачынку і камунікацыі. Пазбаўляючыся ад шкодных звычак, будзеце атрымліваць ня толькі прыбаўку здароўя, але й выйгрыш у~часе і энэргіі. Скарачэньне часу, які вы праводзіце ў~сацсетках ці за праглядам сэрыялаў, таксама дадасьць і адпачынку, і бадзёрасьці. Сапраўдныя здаровыя звычкі~--- гэта інвэстыцыі, якія шматкроць акупляюцца. Галоўнае, што вам спатрэбіцца,~--- гэта некаторыя намаганьні на этапе іх укараненьня ў~сваё жыцьцё. Працуючы зь людзьмі, я звычайна стараюся нават стрымліваць іх энтузіязм на першым этапе і факусаваць увагу на невялікай колькасьці сапраўды важных рэчаў.
+Напрыклад, у~харчаваньні вы зэканоміце кучу часу і сілаў, калі будзеце есьці радзей, 2--3 разы на дзень. Прыбіраючы вячэры, вы вызваліце вячэрні час для адпачынку і камунікацыі. Пазбаўляючыся ад шкодных звычак, будзеце атрымліваць ня толькі прыбаўку здароўя, але й выйгрыш у~часе і энэргіі. Скарачэньне часу, які вы праводзіце ў~сацсетках ці за праглядам сэрыялаў, таксама дадасьць і адпачынку, і бадзёрасьці. Сапраўдныя здаровыя звычкі~--- гэта інвэстыцыі, якія шматкроць акупляюцца. Галоўнае, што вам спатрэбіцца,~--- гэта некаторыя намаганьні на этапе іх укараненьня ў~сваё жыцьцё. Працуючы зь людзьмі, я звычайна стараюся нават стрымліваць іх энтузіязм на першым этапе і факусаваць увагу на невялікай колькасьці сапраўды важных рэчаў.
 
 Многія людзі захапляюцца рознымі мэтодыкамі і часта выпускаюць мэту з-пад увагі. Напрыклад, у~харчаваньні пачынаюць факусавацца толькі на «натуральнасьці» прадуктаў, ядучы супэркалярыйныя «натуральныя» сушаныя фінікі, забыўшыся аб правіле кіраваньня калярыйнасьцю. Так, вам падабаецца трэнажор для прапампоўкі асобных пучкоў цягліцаў, які выглядае крута, але для вас нашмат важнейшыя базавыя практыкаваньні. Ня трэба спачатку факусавацца на дэталях, факусуйцеся на галоўным і рабіце яго прасьцейшым. Дасьведчаны кухар скарачае колькасьць страваў у~мэню, каб зрабіць іх ідэальнымі, дасьведчаны трэнер не дае пачаткоўцу дзесяць складаных практыкаваньняў.
 
@@ -212,7 +212,7 @@
 
 З мадыфікаваных чыньнікаў рызыкі сьмерці, тых, што можна зьмяніць і пазьбегнуць, лепш за ўсё вывучана курэньне. Але ёсьць шэраг іншых чыньнікаў, шкода ад якіх выяўленая ня менш~--- а~часам і мацней, хоць гучаць яны цалкам штодзённа і бясьпечна. Памятайце, асноўную ўвагу трэба надаваць таму, што сапраўды важна, а~ня проста «карысна для здароўя». Карысных рэчаў~--- вялікае мноства, а~жыцьцёва важных насамрэч усяго сем. Звычкі, якія могуць уплываць на здароўе нават горш за курэньне: гіпадынамія, дрэннае харчаваньне, пустэльніцтва, недасып, стрэс, самота, нізкі сацыяльны статус.
 
-Гіпадынамія. «Сядзеньне~--- гэта новае курэньне»~--- такія загалоўкі прыцягваюць нашу ўвагу. Сядзячы лад жыцьця больш за 10-12 гадзінаў у~дзень можа выклікаць вялікія праблемы са здароўем. Пры гэтым фітнэс-трэніроўкі 2-3 разы на тыдзень не кампэнсуюць цэлы дзень, праведзены седзячы. Працуйце хоць часткова стоячы, сам так раблю і іншым раю.
+Гіпадынамія. «Сядзеньне~--- гэта новае курэньне»~--- такія загалоўкі прыцягваюць нашу ўвагу. Сядзячы лад жыцьця больш за 10--12 гадзінаў у~дзень можа выклікаць вялікія праблемы са здароўем. Пры гэтым фітнэс-трэніроўкі 2--3 разы на тыдзень не кампэнсуюць цэлы дзень, праведзены седзячы. Працуйце хоць часткова стоячы, сам так раблю і іншым раю.
 
 Дрэннае харчаваньне. Дрэннае харчаваньне~--- магутны чыньнік рызыкі: па розных ацэнках, харчаваньне складае каля 50\,\% якасьці жыцьця: яно ўплывае на здароўе мацней, чым курэньне, наркотыкі, неабаронены сэкс і шматлікае іншае разам узятае. Зрэшты, гэта ня значыць, што, калі вы ясьце правільна, то вам можна курыць і займацца выпадковым сэксам.
 
@@ -247,7 +247,7 @@
 
 Жаданьне быць здаровым~--- гэта выдатна, бо «той, хто хоча быць здаровым, збольшага ўжо крыяе». Але многім людзям мала проста акрыяньня, яны хочуць атрымаць усё і адразу: калі ўжо худнець, то жорсткая галадоўка, калі ўжо бегаць, то адразу на маратон, калі ўжо сьвядомасьць, то ў~Індыю на віпасану. Толькі вось жыцьцё~--- гэта маратон, а~ня спрынт, і для бясьпечнай зьмены патрэбны час. Мы забываем, што нашае цела мае свае законы і сваю скорасьць зьмены: цела павольнейшае за розум.
 
-Чым меншая скорасьць~--- тым меншая рызыка зрыву. Важна паступова павялічваць нагрузку, паэтапна скідаць вагу. Напрыклад, бясьпечная хуткасьць пахуданьня вар'юецца ў~значэньнях 500-1000 грамаў на тыдзень. Чым больш чалавек губляе вагі, тым вышэйшая рызыка адкату і ўскладненьняў~--- ад парушэньня харчовых паводзінаў да тлушчавага гепатозу печані.
+Чым меншая скорасьць~--- тым меншая рызыка зрыву. Важна паступова павялічваць нагрузку, паэтапна скідаць вагу. Напрыклад, бясьпечная хуткасьць пахуданьня вар'юецца ў~значэньнях 500--1000 грамаў на тыдзень. Чым больш чалавек губляе вагі, тым вышэйшая рызыка адкату і ўскладненьняў~--- ад парушэньня харчовых паводзінаў да тлушчавага гепатозу печані.
 
 Залатая сярэдзіна здароўя~--- гэта балянс паміж адсутнасьцю якога-небудзь клопату пра здароўе і апантанасьцю ім. Прынцып «больш~--- значыць лепш» тут не працуе. Практычна для ўсіх рэсурсаў здароўя існуе U-падобная сувязь паміж колькасьцю намаганьняў і атрыманай карысьцю. Гэта значыць, што больш~--- гэта часьцяком шкода. Напрыклад, дасьледаваньні выявілі U-падобную сувязь паміж бегам і сьмяротнасьцю: ёсьць верхняя мяжа карысьці і фізычнай актыўнасьці. Залішняя актыўнасьць можа зьмяншаць узровень тэстастэрону, парушаць мэнструальны цыкль, прыгнятаць імунітэт.
 
@@ -257,7 +257,7 @@
 
 Зашмат карыснага~--- шкодна. Напрыклад, фолевая кіслата. У высокіх дозах яна ўзмацняе праліфэрацыю клетак, што можа паскорыць атэрасклероз. І калі прадукты забясьпечваюць вам дастатковую колькасьць В9, то дадатковы прыём фолію не дадасьць карысьці, але можа павялічыць рызыку для здароўя. Гэта ж датычыцца і вітамінаў, проста прапіваць іх можа быць небясьпечна. Індывідуальны падыход~--- выяўленьне дэфіцытаў і карэкцыя іх. Дэфіцыты могуць узьнікаць з~розных прычынаў~--- нізкае ўтрыманьне вітамінаў або мінэралаў у~прадуктах (кепскі рацыён, бедная глеба), дрэннае ўсмоктваньне праз спалучэньне прадуктаў або захворваньняў (нізкая кіслотнасьць страўніка), генэтычныя асаблівасьці, якія перашкаджаюць засваеньню, падвышанае выдаткаваньне арганізмам. Таксама шкодная залішняя колькасьць вітамінаў В12, А, Е і шэрагу іншых. Гіпэрдозы вітаміну Д могуць справакаваць кальцыфікацыю крывяносных сасудаў.
 
-Напрыклад, пагаршаюць усмоктваньне жалеза з~прадуктаў і дадаткаў (танін гарбаты, какава, кава і інш.), фітаты (кашы, перапечкі і да т.~п.), фасфаты і кальцый (уся малочка), аксаляты і інш. Так, дадатковы прыём на працягу 10 дзён малака і сыра на 30-50\,\% зьнізіў засваеньне жалеза. А гарбата на 62\,\% зьніжае засваеньне жалеза ў~параўнаньні з~вадой. Паляпшаюць усмоктваньне жалеза: вітамін С ды іншыя арганічныя кіслоты, уключаючы цытрынавую, бурштынавую і інш., фруктоза, сарбіт, амінакіслоты (мэтыянін, цыстэін і інш.), «чыньнік жывёльнага бялку»: міяглабін + гемаглабін. Вітамін С~--- наймацнейшы чыньнік паляпшэньня ўсмоктваньня жалеза. Могуць нашкодзіць і дадаткі, напрыклад п'яце шмат цынку~--- ён блякуе засваеньне медзі, п'яце кальцый~--- ён зьніжае ўсмоктваньне жалеза.
+Напрыклад, пагаршаюць усмоктваньне жалеза з~прадуктаў і дадаткаў (танін гарбаты, какава, кава і інш.), фітаты (кашы, перапечкі і да т.~п.), фасфаты і кальцый (уся малочка), аксаляты і інш. Так, дадатковы прыём на працягу 10 дзён малака і сыра на 30--50\,\% зьнізіў засваеньне жалеза. А гарбата на 62\,\% зьніжае засваеньне жалеза ў~параўнаньні з~вадой. Паляпшаюць усмоктваньне жалеза: вітамін С ды іншыя арганічныя кіслоты, уключаючы цытрынавую, бурштынавую і інш., фруктоза, сарбіт, амінакіслоты (мэтыянін, цыстэін і інш.), «чыньнік жывёльнага бялку»: міяглабін + гемаглабін. Вітамін С~--- наймацнейшы чыньнік паляпшэньня ўсмоктваньня жалеза. Могуць нашкодзіць і дадаткі, напрыклад п'яце шмат цынку~--- ён блякуе засваеньне медзі, п'яце кальцый~--- ён зьніжае ўсмоктваньне жалеза.
 
 Усё залежыць ад дозы і спосабу выкарыстаньня. Як казаў сярэднявечны лекар Парацэльс: «Яд або лекі~--- усё залежыць ад дозы». Калі людзі чуюць пра шкоду нечага, дык трэба заўсёды ўдакладняць кантэкст: каму шкодна? у~якім аб'ёме? у~якім рэжыме?
 
