--- a/willpower/chapter7.tex
+++ b/willpower/chapter7.tex
@@ -101,11 +101,11 @@
 
 Некантраляваны гостры стрэс празьмернай сілы павялічвае рызыку сьмерці. Напрыклад, крах біржы, як і землятрус, павялічвае ў~найбліжэйшыя дні сьмяротнасьць ад сардэчна-сасудзістых захворваньняў. Нават пройгрыш любімай каманды можа павысіць сьмяротнасьць, а~вось выйгрыш можа зьнізіць рызыку сьмяротнасьці бліжэйшымі днямі~--- такая адказнасьць перад заўзятарамі. Пастаноўка дыягназу «рак» павялічвае рызыку сардэчна-сасудзістай сьмерці ў~першы тыдзень амаль у~шэсьць разоў, у~першы месяц~--- у~тры разы, а~да канца года рызыка становіцца сярэдняй.
 
-Стрэс нэгатыўна ўплывае на працу мозгу, зьніжае нэўраплястычнасьць, сінаптагенэз, нэўрагенэз, што вядзе да пагаршэньня памяці і павелічэньня рызыкі дэмэнцыі. Хранічныя стрэсы фізычна зьмяншаюць памер мозгу, пакутуюць найважнейшыя структуры мозгу: гіпакамп (памяншаецца на 7-15\,\%) і кара лобных доляў. Вобласьці прэфрантальнай кары адказваюць за самакантроль, а~чым горшы самакантроль~--- тым горш вы даяце рады са стрэсам. І зноў фармуецца заганнае кола.
+Стрэс нэгатыўна ўплывае на працу мозгу, зьніжае нэўраплястычнасьць, сінаптагенэз, нэўрагенэз, што вядзе да пагаршэньня памяці і павелічэньня рызыкі дэмэнцыі. Хранічныя стрэсы фізычна зьмяншаюць памер мозгу, пакутуюць найважнейшыя структуры мозгу: гіпакамп (памяншаецца на 7--15\,\%) і кара лобных доляў. Вобласьці прэфрантальнай кары адказваюць за самакантроль, а~чым горшы самакантроль~--- тым горш вы даяце рады са стрэсам. І зноў фармуецца заганнае кола.
 
 Стрэс і сэрца. Стрэс адмоўна ўзьдзейнічае на сэрца: узмацняе працу сімпатыйнай нэрвовай сыстэмы, пагаршае кровазабесьпячэньне, правакуе разьвіцьцё арытмій, стымулюе згусаньне крыві і г.д. Чым больш напругі на працы, тым вышэйшая рызыка атэрасклерозу каранарных сасудаў і падвышанага ціску. У Японіі нават існуе тэрмін «каросі»~--- сьмерць (інсульт або інфаркт) на працоўным месцы ад перапрацоўкі. Высокі ўзровень перажытага стрэсу летась у~чатыры разы павялічвае рызыку інсульту. А ўсяго некалькі месяцаў перапрацоўкі па 10 гадзінаў за дзень на траціну павялічваюць імавернасьць інсульту.
 
-Праграмы зьніжэньня стрэсу пасьля інфаркту прыводзяць да зьніжэньня сьмяротнасьці ў~бліжэйшы год назіраньня, а~праграма рэляксацыі на працягу 6-9 месяцаў зьніжае ня толькі стрэс, але й ягоныя наступствы~--- зварочвае атэрасклероз, прыводзіць да памяншэньня таўшчыні інтым-мэдыя сонных артэрыяў, зьніжае ЧСС, павышае варыябэльнасьць сардэчнага рытму, паляпшае пераноснасьць фізычнае нагрузкі, зьніжае частасьць прыступаў стэнакардыі, эпізодаў арытміі, а~таксама колькасьці сьмерцяў ад ССЗ.
+Праграмы зьніжэньня стрэсу пасьля інфаркту прыводзяць да зьніжэньня сьмяротнасьці ў~бліжэйшы год назіраньня, а~праграма рэляксацыі на працягу 6--9 месяцаў зьніжае ня толькі стрэс, але й ягоныя наступствы~--- зварочвае атэрасклероз, прыводзіць да памяншэньня таўшчыні інтым-мэдыя сонных артэрыяў, зьніжае ЧСС, павышае варыябэльнасьць сардэчнага рытму, паляпшае пераноснасьць фізычнае нагрузкі, зьніжае частасьць прыступаў стэнакардыі, эпізодаў арытміі, а~таксама колькасьці сьмерцяў ад ССЗ.
 
 Стрэс зьніжае адчувальнасьць да інсуліну і павялічвае рызыку дыябэту. Стрэсавае пераяданьне пагаршае гэты працэс. Пры стрэсе лішак картызолу ўзмацняе страту цяглічнай масы і павялічвае набор тлушчу ў~вобласьці жывата, правакуючы вісцэральнае атлусьценьне, а~таксама ў~верхняй частцы цела, уключаючы твар і шыю. Хранічны стрэс пагаршае структуру цела, прыводзячы да ўтварэньня ў~розных частках цела «пастак тлушчу», устойлівых да пахуданьня. Стрэс вядзе да парушэньня працы імуннай і стрававальнай сыстэмаў, прама ці ўскосна шкодзіць усяму арганізму. Стрэс кароціць тэламэры, а~чым карацейшыя тэламэры, тым вышэйшая хуткасьць старэньня.
 
@@ -225,13 +225,13 @@
 
 Навукова ўстаноўлена, што перапынак у~працы ў~першай палове дня карысьнейшы для прадуктыўнасьці, чым у~сярэдзіне ці канцы дня. Таксама было даведзена, што шмат кароткіх перапынкаў нашмат больш эфэктыўныя, чым адзін працяглы. Некаторыя дасьледаваньні паказваюць, што пры навучаньні новаму навыку неабходныя паўзы, роўныя часу навучаньня. 10 хвілінаў пазаймаліся? 10 хвілінаў і адпачывайце.
 
-Я раю разьбіваць працу на фрагмэнты па 25-35 хвілінаў зь невялікім перапынкам на 2-3 хвіліны, калі можна зьмяніць месца, папрысядаць, перакінуцца з~калегам парай словаў, выпіць глыток вады. Для мяне ў~паўзах лепш за ўсё працуе невялікая фізычная актыўнасьць, напрыклад сэт бэрпі ці хвіліна скачкоў. 
+Я раю разьбіваць працу на фрагмэнты па 25--35 хвілінаў зь невялікім перапынкам на 2--3 хвіліны, калі можна зьмяніць месца, папрысядаць, перакінуцца з~калегам парай словаў, выпіць глыток вады. Для мяне ў~паўзах лепш за ўсё працуе невялікая фізычная актыўнасьць, напрыклад сэт бэрпі ці хвіліна скачкоў. 
 
 Наступны цыкль~--- гэта тры малыя цыклі, ён складае ў~сярэднім 1,5 гадзіны (90 хвілінаў~--- гэта клясычны ультрадыяны рытм актыўнасьці), пасьля чаго перапынак на 15 хвілінаў. Тры паўтарагадзінныя цыклі складаюць адзін вялікі цыкль у~4,5 гадзіны. Паміж вялікімі цыклямі ёсьць адна гадзіна, якая звычайна спалучае фізычную актыўнасьць, прыём ежы і рэляксацыю. Атрымліваецца своеасаблівы фрактальны рэжым, дзе шмат структураваных перапынкаў. Такі рэжым я прыдумаў для сябе, ён рэальна дапамагае працаваць шмат і безь зьнясіленьня~--- і ўся справа ў~структуры дня.
 
 Пачатак працы і правільны настрой таксама маюць значэньне. Сфакусуйцеся на задачы, вылучыце сабе мэту, пункт гарызонту, паспрабуйце задаць пару цікавых пытаньняў да матэрыялу, знайсьці супярэчнасьці або займальную зачэпку, каб абудзіць цікавасьць.
 
-Плянуйце. Плянаваньне~--- важны інструмэнт, які дае кантроль і здымае стрэс. Многія людзі складаюць доўгія сьпісы справаў, а~затым, калі не пасьпяваюць усё зрабіць, адчуваюць толькі расчараваньне і стомлу. Я звычайна пляную кожны тыдзень і падводжу на выходных вынікі. Штораніцы стаўлю 1-3 важныя справы на дзень і арганізую рутыну вакол іх. Наша працоўная памяць мае абмежаваны аб'ём, яе перапаўненьне адно выклікае трывогу і дае адчуваньне перагрузкі. Важна мець лёгкую галаву, каб ясна факусавацца на галоўным.
+Плянуйце. Плянаваньне~--- важны інструмэнт, які дае кантроль і здымае стрэс. Многія людзі складаюць доўгія сьпісы справаў, а~затым, калі не пасьпяваюць усё зрабіць, адчуваюць толькі расчараваньне і стомлу. Я звычайна пляную кожны тыдзень і падводжу на выходных вынікі. Штораніцы стаўлю 1--3 важныя справы на дзень і арганізую рутыну вакол іх. Наша працоўная памяць мае абмежаваны аб'ём, яе перапаўненьне адно выклікае трывогу і дае адчуваньне перагрузкі. Важна мець лёгкую галаву, каб ясна факусавацца на галоўным.
 
 Для таго каб задзейнічаць энэргію эмоцыі, перафармулюйце задачы як міні-гісторыі. Напрыклад: «Сёньня я змог цудоўна расказаць у~артыкуле пра важнасьць рэжыму дня і запаліць сэрцы сваіх чытачоў!» Няхай гэта захапляе і натхняе, няхай ваш плян будзе такім, каб неадкладна хацелася ўвасабляць яго ў~жыцьцё.
 
@@ -269,7 +269,7 @@
 
 Курс на аднаўленьне. У спорце існуе яснае разуменьне таго, што фізычныя нагрузкі без аднаўленьня небясьпечныя зьніжэньнем вынікаў. Адэкватнае аднаўленьне~--- ключ да росту. Дакладна гэтак жа і ў~стрэсе~--- важна новую нагрузку браць не адразу пасьля папярэдняй, а~ў пункце супэркампэнсацыі, калі энэргія ўжо аднавілася. Фізычная актыўнасьць, час сярод блізкіх людзей~--- гэта выдатныя спосабы завяршыць стрэс і ўключыць рэжым аднаўленьня.
 
-Антыстрэсавы лад жыцьця мяркуе, што большую частку дня мы арганізуем як адпачынак, вылучаем ня больш за 4-6 гадзінаў на максімальнае засяроджваньне, а~астатні час~--- на нізкастрэсавыя заняткі. Гэта дапамагае нам быць супэрпрадуктыўнымі, замест таго каб па 10 гадзінаў хаатычна пераключацца паміж рознымі справамі. Вылучайце хаця б адзін дзень нау тыдзень на якасны адпачынак у~выглядзе розных абмежаваньняў: бяз працы, без смартфона, на інфармацыйнай і дафамінавай дыеце, прысьвяціўшы яго адпачынку і разважаньням.
+Антыстрэсавы лад жыцьця мяркуе, што большую частку дня мы арганізуем як адпачынак, вылучаем ня больш за 4--6 гадзінаў на максімальнае засяроджваньне, а~астатні час~--- на нізкастрэсавыя заняткі. Гэта дапамагае нам быць супэрпрадуктыўнымі, замест таго каб па 10 гадзінаў хаатычна пераключацца паміж рознымі справамі. Вылучайце хаця б адзін дзень нау тыдзень на якасны адпачынак у~выглядзе розных абмежаваньняў: бяз працы, без смартфона, на інфармацыйнай і дафамінавай дыеце, прысьвяціўшы яго адпачынку і разважаньням.
 
 Фрамінгемскае дасьледаваньне сэрца вызначыла сувязь паміж адпачынкамі і сардэчна-сасудзістымі захворваньнямі: адпачынак менш за тры тыдні на год прыводзіў да павелічэньня сьмяротнасьці на 37\,\%. Нічога дзіўна ў~гэтым няма, іншыя дасьледаваньні таксама пацьвярджаюць гэтыя назіраньні. Вучыцеся адпачываць эфэктыўна. Вось некалькі ідэяў для якаснага адпачынку:
 
@@ -310,7 +310,7 @@
 
 Калі мы сфакусаваныя на нэгатыўных чаканьнях, гэта можа адыграць ролю «самавыканальнага прароцтва», калі нашыя чаканьні вядуць да неадаптыўнай рэакцыі і пераконваюць нас у~праўдзівасьці нашых уяўленьняў («а я казаў»).
 
-Стрэс і перабудова нэўронавых сувязяў. «Для посьпеху ў~жыцьці патрэбныя сувязі, моцныя нэўронныя сувязі»,~--- жартуюць нэўрафізыёлягіі. Але насамрэч нам патрэбныя гнуткія нэўронныя сувязі, бо нам трэба не вучыцца, а~перавучвацца. На гэта асабліва зважаў амэрыканскі футуроляг Элвін Тофлер: «Непісьменнымі ў~XXI стагодзьдзі будуць лічыцца ня тыя, хто ня ўмее чытаць і пісаць, а~тыя, хто ня ўмее вучыцца, развучвацца і перавучвацца». Так, для многіх японскіх фірмаў характэрная ратацыя і перавучваньне пэрсаналу новым спэцыяльнасьцям кожныя 3-5 гадоў.
+Стрэс і перабудова нэўронавых сувязяў. «Для посьпеху ў~жыцьці патрэбныя сувязі, моцныя нэўронныя сувязі»,~--- жартуюць нэўрафізыёлягіі. Але насамрэч нам патрэбныя гнуткія нэўронныя сувязі, бо нам трэба не вучыцца, а~перавучвацца. На гэта асабліва зважаў амэрыканскі футуроляг Элвін Тофлер: «Непісьменнымі ў~XXI стагодзьдзі будуць лічыцца ня тыя, хто ня ўмее чытаць і пісаць, а~тыя, хто ня ўмее вучыцца, развучвацца і перавучвацца». Так, для многіх японскіх фірмаў характэрная ратацыя і перавучваньне пэрсаналу новым спэцыяльнасьцям кожныя 3--5 гадоў.
 
 Перавучвацца нашмат складаней, чым проста вучыцца новаму. Рэч у~тым, што пры доўгім занятку адным і тым жа нэўронныя сувязі, якія кіруюць гэтым працэсам, становяцца досыць трывалымі. Гучыць быццам бы добра? Насамрэч гэта ня так. Устаноўлена, што здольны на больш эфэктыўнае навучаньне мозг валодае гнуткасьцю і здольнасьцю адразу перабудоўваць злучэньні з~мэтай засваеньня новых ведаў~--- гэта называецца высокая нэўраплястычнасьць. Залішняя «калянасьць» нэўронавых шляхоў зьвязаная з~горшай навучальнасьцю.
 
@@ -566,7 +566,7 @@
 
 Камплімэнты, абдымкі, знаходжаньне ў~бясьпечным асяродзьдзі, погляд вочы ў~вочы, пацалункі, абдымкі, сэкс. Паціскаць можна і цацкі, і хатніх жывёл, а~можна і паплакаць~--- гэта таксама актывуе вагус. Пацалунак ня меншы за 6 сэкундаў, абдымкі ня меншыя за 20 сэкундаў будуць найболей карысныя.
 
-Рэгулярная фізычная актыўнасьць. Рухальная актыўнасьць імітуе натуральны эвалюцыйны мэханізм «бі--бяжы» і дапамагае прыбраць лішнія глюкозу і тлушчы, якія цыркулююць у~крыві. Для спартоўцаў і аматараў характэрны высокі тонус вагуса. Цяглічная актыўнасьць павышае ўзровень нэўратрафічнага чыньніка BDNF, што павышае нэўраплястычнасьць і нашыя шанцы супрацьстаяць стрэсу, разьвіваць новыя навыкі. На гэта лепш за ўсё працуюць аэробныя практыкаваньні з~60-70\,\% узмацненьнем рытму сэрца ня менш за 30 хвілінаў. Зрэшты, пасуе і кароткая інтэнсіўная нагрузка: тры хвіліны спрынту на 20\,\% павялічваюць кагнітыўныя здольнасьці. Наагул скачкі, спантанная актыўнасьць і танцы паднімаюць BDNF нашмат мацней у~параўнаньні з~фітнэсам.
+Рэгулярная фізычная актыўнасьць. Рухальная актыўнасьць імітуе натуральны эвалюцыйны мэханізм «бі--бяжы» і дапамагае прыбраць лішнія глюкозу і тлушчы, якія цыркулююць у~крыві. Для спартоўцаў і аматараў характэрны высокі тонус вагуса. Цяглічная актыўнасьць павышае ўзровень нэўратрафічнага чыньніка BDNF, што павышае нэўраплястычнасьць і нашыя шанцы супрацьстаяць стрэсу, разьвіваць новыя навыкі. На гэта лепш за ўсё працуюць аэробныя практыкаваньні з~60--70\,\% узмацненьнем рытму сэрца ня менш за 30 хвілінаў. Зрэшты, пасуе і кароткая інтэнсіўная нагрузка: тры хвіліны спрынту на 20\,\% павялічваюць кагнітыўныя здольнасьці. Наагул скачкі, спантанная актыўнасьць і танцы паднімаюць BDNF нашмат мацней у~параўнаньні з~фітнэсам.
 
 Цяглічны тонус. Пры стрэсе назіраецца ўзмацненьне цяглічнага тонусу, а~такі стан заціснутасьці некамфортны. Цяглічныя рэляксацыі і расьцяжкі могуць дапамагчы з~гэтым. 
 
