--- a/willpower/chapter8.tex
+++ b/willpower/chapter8.tex
@@ -6,7 +6,7 @@
 
 Спачуваючы іншым, я вызваляюся ад злосьці і зычу дабра. Праўда, ня ўсім~--- мабыць, я яшчэ не настолькі ўсьвядомлены. Раней я няўмела абыходзіўся з~эмоцыямі, пакутаваў ад перападаў настрою, шукаў ухвалы, але ўсьвядомленасьць перамяніла ўсё на лепшае. У моманты, калі я адчуваў сябе дрэнна, лічыў і сябе, і іншых людзей дрэннымі, пры няўдачах абыходзіўся з~сабой жорстка і самакрытычна, часта падманваў сябе, адмаўляўся прымаць многія рэчы ў~сабе і іншых, змагаўся супраць рэальнасьці і доўга ня мог адпусьціць састарэлае, прыдумляў нерэалістычныя чаканьні і пакутаваў праз тое, што яны не ажыцьцяўляюцца. Усьвядомленасьць зьмяніла й гэта.
 
-Мэдытацыя. Мэдытацыя прыйшла ў~маё жыцьцё рана. Яшчэ ў~пятым класе, калі я хадзіў на заняткі каратэ, наш трэнер у~пачатку і канцы трэніроўкі садзіў нас і прапаноўваў «засяродзіцца» на сваіх думках з~заплюшчанымі вачамі, каб супакоіць іх. Тыя, хто гарбаваціўся ці адцягваўся, маглі атрымаць палкай па сьпіне, так што ў~нас быў моцны стымул для пільнасьці. З таго часу я памятаю незвычайнае пачуцьцё яснасьці розуму, якое ўзьнікала пры мэдытацыі пасьля актыўнай і жорсткай трэніроўкі. Затым я мэдытаваў пэрыядамі ў~8-10 класах, ва ўнівэрсытэце~--- асабліва ў~тыя часы, калі было шмат пераменаў і розум рабіўся асабліва неспакойным.
+Мэдытацыя. Мэдытацыя прыйшла ў~маё жыцьцё рана. Яшчэ ў~пятым класе, калі я хадзіў на заняткі каратэ, наш трэнер у~пачатку і канцы трэніроўкі садзіў нас і прапаноўваў «засяродзіцца» на сваіх думках з~заплюшчанымі вачамі, каб супакоіць іх. Тыя, хто гарбаваціўся ці адцягваўся, маглі атрымаць палкай па сьпіне, так што ў~нас быў моцны стымул для пільнасьці. З таго часу я памятаю незвычайнае пачуцьцё яснасьці розуму, якое ўзьнікала пры мэдытацыі пасьля актыўнай і жорсткай трэніроўкі. Затым я мэдытаваў пэрыядамі ў~8--10 класах, ва ўнівэрсытэце~--- асабліва ў~тыя часы, калі было шмат пераменаў і розум рабіўся асабліва неспакойным.
 
 Практыкую ўсьвядомленасьць у~розных формах і цяпер. Яна дае мне, не пабаюся гэтага слова, спакой і шчасьце. Толькі ўціхамірыўшы трывогу розуму, я пачынаю паўнавартасна жыць тут і цяпер~--- адэкватна рэагуючы на тое, што адбываецца, атрымліваючы задавальненьне ад таго, што побач, адчуваючы падзяку і ўдзячнасьць за магчымасьць займацца тым, што я раблю. Усьвядомленасьць дае мне сапраўдную свабоду ад чаканьняў у~будучыні, ад трывог у~мінулым, яна не чакае нічога ад мяне, а~толькі прапануе атрымаць асалоду ад сапраўднага моманту і пражыць яго ярка і ўважліва. Кожная сэкунда нашага жыцьця ўнікальная, і толькі ўвага дапамагае адчуць водар сьвежасьці жыцьця.
 
@@ -96,7 +96,7 @@
 
 Усьвядомленасьць станоўча ўплывае ня толькі на псыхалягічнае здароўе, але й зьмяншае рызыкі шматлікіх захворваньняў. Імаверна, гэта адбываецца як праз эфэкт паніжэньня стрэсу, так і праз прыняцьце больш усьвядомленых і здаровых рашэньняў у~сваім жыцьці. Чым вышэйшая усьвядомленасьць, тым вышэйшая і прадуктыўнасьць чалавека~--- назіраецца дозазалежны эфэкт.
 
-Параўнаньне розных праграмаў усьвядомленасьці паказвае, што для заўважнага станоўчага ўплыву на здароўе патрабуецца рэгулярная штодзённая мэдытацыя працягласьцю ня меней за 20-30 хвілінаў у~адзін ці два падыходы. Чым вышэйшая канцэнтрацыя ўвагі дасягаецца, тым вышэйшыя вынікі дае практыка.
+Параўнаньне розных праграмаў усьвядомленасьці паказвае, што для заўважнага станоўчага ўплыву на здароўе патрабуецца рэгулярная штодзённая мэдытацыя працягласьцю ня меней за 20--30 хвілінаў у~адзін ці два падыходы. Чым вышэйшая канцэнтрацыя ўвагі дасягаецца, тым вышэйшыя вынікі дае практыка.
 
 Здаровыя паводзіны. Больш усьвядомленыя людзі менш схільныя да пераяданьня і курэньня, спажываньня алькаголю і наркотыкаў; праграмы ўсьвядомленасьці эфэктыўна дапамагаюць пазбавіцца ад залежнасьцяў. Усьвядомленасьць робіць вас больш аўтаномнымі і рацыянальнымі, а~працяглая мэдытацыя зьніжае аб'ём прылеглага ядра, і вы становіцеся больш незалежнымі ад узнагародаў. У адным з~дасьледаваньняў нават аднаразовая мэдытацыя ўплывала на прыняцьце больш аптымальных фінансавых рашэньняў і дапамагала ігнараваць прыроджаныя перадузятасьці і кагнітыўныя скажэньні.
 
@@ -305,7 +305,7 @@
 
 Калі вы ўжо пачалі практыкаваць паўсядзённае ўсьвядомленасьць, то маглі заўважыць яе дабрадайнае ўзьдзеяньне. Але толькі рэгулярная паўсядзённая практыка мэдытацыі можа сапраўды глыбока і трансфармавальна паўзьдзейнічаць на вас. Мэдытацыя, як і лекі, працуе, калі прымаць яе кожны дзень увесь пэрыяд лячэньня. Добра практыкаваць усьвядомленасьць у~штодзённасьці, нефармальна, а~штодзённыя фармальныя практыкі патрэбныя, каб быў рост. Як немагчыма напампавацца або схуднець за пару дзён, так ня варта чакаць прасьвятленьня праз 20 хвілін мэдытацыі. Але пастаянная яе практыка прынясе свой каштоўны плён.
 
-Сэанс мэдытацыі. Вылучыце сабе ад 5 да 30 хвілін, знайдзіце спакойнае месца, дзе вы зможаце заставацца ў~расслабленай нерухомасьці. Адключыце тэлефон, папярэдзьце, каб вас не турбавалі, абярыце зручнае адзеньне. Поза для мэдытацыі можа быць любая, пры якой вы можаце захоўваць прамую сьпіну: сядзіце ўпэўнена, устойліва, з~захаваньнем увагі, годнасьці й пільнасьці. Рукі пажадана разгарнуць далонямі ўверх, сківіцы расслабленыя, вусны мякка самкнёныя, язык кранаецца нёба за верхнімі зубамі. Локці хай будуць распраўленыя, а~галава~--- роўна над хрыбтом. Сядзіце роўна, не адхіляючыся. Лепш не мэдытуйце лежачы~--- так вы можаце заснуць. Па першым часе няхай вашая мэдытацыя будзе кароткай, 5-10 хвілін. Ня варта мэдытаваць на працягу гадзіны-паўтары пасьля ежы і рабіць больш чым 1-2 сэсіі (з досьведам вашая практыка можа пашырыцца). Зважайце на зьмену свайго становішча і на станоўчыя адчуваньні, але не прывязвайцеся да іх і не рабіце сваёй мэтай. 
+Сэанс мэдытацыі. Вылучыце сабе ад 5 да 30 хвілін, знайдзіце спакойнае месца, дзе вы зможаце заставацца ў~расслабленай нерухомасьці. Адключыце тэлефон, папярэдзьце, каб вас не турбавалі, абярыце зручнае адзеньне. Поза для мэдытацыі можа быць любая, пры якой вы можаце захоўваць прамую сьпіну: сядзіце ўпэўнена, устойліва, з~захаваньнем увагі, годнасьці й пільнасьці. Рукі пажадана разгарнуць далонямі ўверх, сківіцы расслабленыя, вусны мякка самкнёныя, язык кранаецца нёба за верхнімі зубамі. Локці хай будуць распраўленыя, а~галава~--- роўна над хрыбтом. Сядзіце роўна, не адхіляючыся. Лепш не мэдытуйце лежачы~--- так вы можаце заснуць. Па першым часе няхай вашая мэдытацыя будзе кароткай, 5--10 хвілін. Ня варта мэдытаваць на працягу гадзіны-паўтары пасьля ежы і рабіць больш чым 1--2 сэсіі (з досьведам вашая практыка можа пашырыцца). Зважайце на зьмену свайго становішча і на станоўчыя адчуваньні, але не прывязвайцеся да іх і не рабіце сваёй мэтай. 
 
 Перад мэдытацыяй нагадвайце сабе, для чаго вы гэта робіце: ``Я мэдытую для ўмацаваньня ўвагі і буду сабраны і ўважлівы ў~мэдытацыі'' ці ``Няхай я буду шчасьлівы''. Вельмі важна захоўваць энэргічнасьць, увагу, пільнасьць, не паддаючыся дрымотнасьці. Паназірайце за ваганьнямі фокусу ўвагі адносна гэтага моманту, не дазваляючы яму сасьлізгваць у~мінулае ці будучыню: вось ваша дыханьне, цела, думкі, гукі. Затым плыўна звужайце фокус толькі на сваім целе, выбраўшы дыханьне, цялесныя адчуваньні або думкі. Адчуйце посмак мэдытацыі, калі яе завершыце. Адзначце спакой і прымірэньне розуму і як затым яны зьмяншаюцца ў~звыклай плыні думак.
 
@@ -498,7 +498,7 @@
 
 Мы адчуваем сябе з~дапамогай самасьвядомасьці. Як жа выглядае сьвядомасьць? Уявіце навальнічную хмару, у~ёй мільярды кропляў са сваім зарадам, якія пэрыядычна акумулююцца і адбываецца разрад: грымоты і маланка. Новыя кроплі кандэнсуюцца, іншыя пакідаюць воблака з~дажджом, але актыўнасьць хмары захоўваецца. Так і мільярды расьсеяных нэўронаў структуруюцца, разраджаюцца, паміж імі ўзьнікаюць найскладанейшыя патэрны ўзаемнай актыўнасьці~--- і ўзьнікае сьвядомасьць. Гэта такі глябальны нэўронавы карэлят, «дынамічнае ядро», якое само сябе сынхранізуе. У ім няма фізычных межаў, няма лякацыі ў~мозгу, але ёсьць узгодненасьць.
 
-Што ж утрымлівае і зводзіць разам размаітыя актыўнасьці нэўронаў у~розных аддзелах мозгу? Гэта сынхронныя ваганьні нэўронных разрадаў, вядомыя як гама-рытмы мозгу (25-100 герц). Іх усплёск назіраецца пры рашэньні задач, якія патрабуюць максімальнай канцэнтрацыі ўвагі, пры высокім узроўні сьвядомага ўспрыманьня, шэраг аўтараў упэўнены, што гама-рытм адлюстроўвае працу сьвядомасьці. Цікава, што мэдытацыя павялічвае актыўнасьць гама-рытму і, мабыць, зьмяняе глыбінную структуру сьвядомасьці. Мадулююць актыўнасьць гама-рытму ў~першую чаргу дафамінавыя нэўроны.
+Што ж утрымлівае і зводзіць разам размаітыя актыўнасьці нэўронаў у~розных аддзелах мозгу? Гэта сынхронныя ваганьні нэўронных разрадаў, вядомыя як гама-рытмы мозгу (25--100 герц). Іх усплёск назіраецца пры рашэньні задач, якія патрабуюць максімальнай канцэнтрацыі ўвагі, пры высокім узроўні сьвядомага ўспрыманьня, шэраг аўтараў упэўнены, што гама-рытм адлюстроўвае працу сьвядомасьці. Цікава, што мэдытацыя павялічвае актыўнасьць гама-рытму і, мабыць, зьмяняе глыбінную структуру сьвядомасьці. Мадулююць актыўнасьць гама-рытму ў~першую чаргу дафамінавыя нэўроны.
 
 Сучасная нэўрабіялёгія лічыць, што адчуваньне самасьці, пачуцьцё свайго Я~--- гэта ня вынік існаваньня рэальнай асобы, а~толькі праява актывацыі сьвядомай мадэлі арганізма, фэнамэнальнай сябе-мадэлі паводле Мэтцынгера. Нямецкі філосаф Томас Мэтцынгер выкарыстоўвае мэтафару тунэлю эга, дзе адчуваньне Я~--- гэта ўнутраны канструкт, які толькі выбіральна паказвае нам фрагмэнты інфармацыі ад вонкавага сьвету. Але, хоць наша рэпрэзэнтацыя рэальнасьці вельмі слабая, мы адчуваем ілюзіі прамога ўспрыманьня ва ўсім яго багацьці, ілюзію цэласнасьці і бесьперапыннасьці існаваньня нашай нязьменнай асобы. Гэтая сымуляцыя зьбірае розныя часткі нашага арганізма ў~адзіную мадэль, мы ўзаемадзейнічаем са сьветам празь яе.
 
@@ -520,7 +520,7 @@
 
 2. Ці часта вы «корміце эга» пошукам прызнаньняў сваёй значнасьці, павышаючы самаацэнку? Ці часта вы адмаўляецеся нешта рабіць толькі таму, што баіцеся страціць павагу?
 
-3. Наколькі моцна памяняліся вашыя погляды за апошнія 5-10 гадоў?
+3. Наколькі моцна памяняліся вашыя погляды за апошнія 5--10 гадоў?
 
 
 \section{Дабрыня і спачуваньне}
