--- a/willpower/chapter9.tex
+++ b/willpower/chapter9.tex
@@ -295,7 +295,7 @@ Soft skills. У такіх абставінах выйгрышным будзе 
 
 Чым радасьнейшы чалавек, тым ён прывабнейшы. Тое, як мы выглядаем і рухаемся, залежыць ад работы ніграстрыярнага шляху. Ніграстрыярны шлях~--- гэта дафамінавы шлях мозгу, які рэгулюе цяглічны тонус, цягліцы твару, каардынацыю, позы і рухальныя праявы эмоцыяў (сьмех, усьмешкі, радасьць). Пры нізкім узроўні дафаміну ваш твар скаваны, цягліцы напружаныя, рухі нязграбныя, поза згорбленая. Калі вы радасныя, то вочы зьзяюць, цела разьняволенае, твар усьцешаны і адкрыты, пастава ганарлівая. Так радасьць робіць вас прыгажэйшымі.
 
-Чым вы ``большыя'', тым ``важнейшыя''. Разьдзімаюцца ў~памеры жабы, вайскоўцы апранаюць велізарныя фуражкі і эпалеты, каб здавацца больш значнымі і небясьпечнымі. Умерана разьвітая мускулатура, высокі рост~--- прыкметы статусу. Сярод амэрыканцаў ростам 170-180 см кожныя 2,5 см павялічваюць заробак на 2\,\%. Шанец атрымаць больш высокую пасаду вышэйшы ў~высокіх людзей, таму адзеньне і абцасы, якія візуальна павялічваюць рост, важныя для кар'еры мужчынаў і жанчынаў. Стаць «большымі» можна проста выпрастаўшыся і расправіўшы плечы, ну, ці можна залезьці на бранявік~--- калі вы маленькага росту. 
+Чым вы ``большыя'', тым ``важнейшыя''. Разьдзімаюцца ў~памеры жабы, вайскоўцы апранаюць велізарныя фуражкі і эпалеты, каб здавацца больш значнымі і небясьпечнымі. Умерана разьвітая мускулатура, высокі рост~--- прыкметы статусу. Сярод амэрыканцаў ростам 170--180 см кожныя 2,5 см павялічваюць заробак на 2\,\%. Шанец атрымаць больш высокую пасаду вышэйшы ў~высокіх людзей, таму адзеньне і абцасы, якія візуальна павялічваюць рост, важныя для кар'еры мужчынаў і жанчынаў. Стаць «большымі» можна проста выпрастаўшыся і расправіўшы плечы, ну, ці можна залезьці на бранявік~--- калі вы маленькага росту. 
 
 Позірк і пастава. Чым ніжэйшая ваша галава, тым горшая ваша пастава. У маім анляйн-курсе «Здаровая пастава» мы пачынаем працу менавіта са зьмены позірку, бо куды вы глядзіце, туды й нахілецца галава. А куды нахіляецца галава, туды ідзе і зьмена тонусу цягліц цела. Давайце правядзём экспэрымэнт. Прыслухайцеся да тонусу цягліц: як толькі вы сагняце галаву, аўтаматычна ўзьнікне павелічэньне тонусу цягліц пярэдняга боку цела і жаданьне сагнуць канцавіны. А калі вы падымеце галаву, то павялічыцца тонус цягліц-разгінальнікаў задняй паверхні цела. Паспрабавалі?
 
@@ -455,7 +455,7 @@ Soft skills. У такіх абставінах выйгрышным будзе 
 
 Працягвайце пытацца ў~сябе і назіраць. Што для вас самае каштоўнае? Чым ганарыцеся? Што ўмееце рабіць? У чым вы прафэсіянал? Якія навыкі трэба паляпшаць? Што вы любіце рабіць? Ад чаго замірае сэрца? Аб чым марыце? Што павышае вашу самаацэнку? Хто вы ў~марах? Чаго вы чакаеце ад працы~--- калектыў, дасягненьні, кар'ера, грошы? Спытайце сябе шчыра: я падабаюся сабе, калі раблю гэта? Ці падабаецеся вы сабе раздражнёным, лежачы на канапе і купляючы тавары па акцыі? А зараз падумайце, чым вы бываеце занятыя, калі вам падабаецца, хто вы такі. Калі вы расьцяце, калі вы перамагаеце?
 
-Гэта нармальна~--- шукаць сваё шчасьце і пакліканьне. Вы нікому нічога не павінны рабіць, калі гэта не прыносіць вам шчасьця і задавальненьня ад жыцьця. Назапасьцеся цярпеньнем, бо ваш пошук можа заняць доўгі час, і самае важнае ў~ім~--- працягваць шукаць і дзейнічаць. Схадзіце ў~кнігарню, пагартайце кнігі ў~розных разьдзелах. Спытайце сябе, у~якім разьдзеле вы б хацелі прачытаць усё? Успомніце людзей, якім вы зайздросьцілі і якіх пераймалі. Чым яны займаліся? Што вы любілі ва ўзросьце 13-15 гадоў? У якой справе вы з~задавальненьнем бралі звышмерную працу ці гатовыя былі займацца гэтым бясплатна?
+Гэта нармальна~--- шукаць сваё шчасьце і пакліканьне. Вы нікому нічога не павінны рабіць, калі гэта не прыносіць вам шчасьця і задавальненьня ад жыцьця. Назапасьцеся цярпеньнем, бо ваш пошук можа заняць доўгі час, і самае важнае ў~ім~--- працягваць шукаць і дзейнічаць. Схадзіце ў~кнігарню, пагартайце кнігі ў~розных разьдзелах. Спытайце сябе, у~якім разьдзеле вы б хацелі прачытаць усё? Успомніце людзей, якім вы зайздросьцілі і якіх пераймалі. Чым яны займаліся? Што вы любілі ва ўзросьце 13--15 гадоў? У якой справе вы з~задавальненьнем бралі звышмерную працу ці гатовыя былі займацца гэтым бясплатна?
 
 Самаацэнка і годнасьць. Часта людзі спрабуюць павышаць сваю самаацэнку штучна, а~не праз павелічэньне сваіх рэсурсаў. Напампоўваньне ілюзій прыводзіць толькі да завышэньня прэтэнзій да навакольнага сьвету і павялічвае рызыку дэпрэсіі. Сьцьвярджаць сабе, што вы самы разумны,~--- ня зробіць вас разумнейшым. Зьмена самаўяўленьня адбываецца ў~выніку дзеяў, а~не разважаньняў. Наш мозг, назіраючы за тым, што мы робім, мяняе нашу самаацэнку і ўяўленьні пра сябе. Калі вы баіцеся, але дзейнічаеце адважна, робіце гэта ўвесь час, то вы пачынаеце думаць пра сябе як пра адважнага чалавека.
 
