--- a/nutrition/chapter22.tex
+++ b/nutrition/chapter22.tex
@@ -13,7 +13,7 @@
 \subsection{Як гэта ўплывае на здароўе?}
 
 \paragraph{Абязводжваньне\index{абязводжваньне}.}
-Ёсьць даныя, што нават страта вады ў~1--1,3\,\% ад масы цела пагаршае настрой і канцэнтрацыю, павышае рызыку галаўнога болю. Калі страта вады перавышае 2\,\% ад масы цела, зьніжаюцца нашыя фізычныя і кагнітыўныя здольнасьці, мы горш выглядаем. Страта 5\,\% і больш вядзе да парушэньняў тэрмарэгуляцыі, што актуальна для тых, хто жыве ў~гарачым клімаце, і спартоўцаў, недахоп больш чым 6--7\,\% прывядзе да моцнай страты трываласьці. Абязводжваньне\index{абязводжваньне} пагаршае стан скуры, можа справакаваць галаўны боль, парушыць працу страўнікава-кішачнага тракту, зьменшыць разумовыя здольнасьці, узмацніць апэтыт.
+Ёсьць даныя, што нават страта вады ў 1--1,3\,\% ад масы цела пагаршае настрой і канцэнтрацыю, павышае рызыку галаўнога болю. Калі страта вады перавышае 2\,\% ад масы цела, зьніжаюцца нашыя фізычныя і кагнітыўныя здольнасьці, мы горш выглядаем. Страта 5\,\% і больш вядзе да парушэньняў тэрмарэгуляцыі, што актуальна для тых, хто жыве ў~гарачым клімаце, і спартоўцаў, недахоп больш чым 6--7\,\% прывядзе да моцнай страты трываласьці. Абязводжваньне\index{абязводжваньне} пагаршае стан скуры, можа справакаваць галаўны боль, парушыць працу страўнікава-кішачнага тракту, зьменшыць разумовыя здольнасьці, узмацніць апэтыт.
 
 \tipbox{Страта вады ў~1--1,3\,\% ад масы цела пагаршае настрой і канцэнтрацыю, павышае рызыку галаўнога болю. Калі страта вады перавышае 2\,\% ад масы цела, зьніжаюцца нашы фізычныя і кагнітыўныя здольнасьці. Страта 5\,\% і больш вядзе да парушэньняў тэрмарэгуляцыі, што актуальна для тых, хто жыве ў~гарачым клімаце, і спартоўцаў, недахоп больш чым 6--7\,\% прывядзе да моцнай страты трываласьці.}
 
