--- a/willpower/chapter4.tex
+++ b/willpower/chapter4.tex
@@ -75,7 +75,7 @@
 
 Назіраючы людзей з~рознымі праблемамі здароўя, я бачу, што не існуе такой хваробы ці стану, на які не магло б паўплываць паляпшэньне якасьці і рэжыму харчаваньня. 
 
-\emph{Здаровае харчаваньне можа зьнізіць рызыку заўчаснае сьмерці на 50-60\,\%, падоўжыць жыцьцё на 8-10 гадоў, нездаровае~--- скараціць жыцьцё больш чым на 6 гадоў. Нездаровае харчаваньне болей шкоднае, чым курэньне, зьяўляючыся прамой прычынай больш за 20\,\% усіх сьмерцяў у~сьвеце і ўскоснай прычынай мноства іншых сьмерцяў. Так, ежа сапраўды становіцца вельмі эфэктыўным лекам.} 
+\emph{Здаровае харчаваньне можа зьнізіць рызыку заўчаснае сьмерці на 50--60\,\%, падоўжыць жыцьцё на 8--10 гадоў, нездаровае~--- скараціць жыцьцё больш чым на 6 гадоў. Нездаровае харчаваньне болей шкоднае, чым курэньне, зьяўляючыся прамой прычынай больш за 20\,\% усіх сьмерцяў у~сьвеце і ўскоснай прычынай мноства іншых сьмерцяў. Так, ежа сапраўды становіцца вельмі эфэктыўным лекам.} 
 
 \tipbox{Сярод самых небясьпечных харчовых звычак навукоўцы лічаць дэфіцыт садавіны і гародніны, недастатковае спажываньне клятчаткі і збожжа, залішняе спажываньне солі, цукру і інш.}
 
@@ -192,7 +192,7 @@
 Спажываньне большай часткі каляражу раніцай і днём, абавязковы сьняданак, частата прыёмаў ежы два-тры разы ў~дзень і рэгулярныя пэрыяды фастынгу\index{фастынг}~--- усё гэта вядзе да такіх станоўчых зьменаў, як зьніжэньне хранічнага запаленьня, паляпшэньне цыркаднай рэгуляцыі, павялічаная аўтафагія\index{аўтафагія}, стрэсаўстойлівасьць\index{стрэсаўстойлівасьць} і лепшы стан мікрафлёры.
 
 \subsubsection{Сьняданак і вячэра.}
-Цяпер, калі вы разабраліся з~агульнымі правіламі рэжыму, час перайсьці да прыёмаў ежы: сьняданку, абеду і вячэры. Я рэкамэндую рэгулярна сьнедаць у~адзін і той жа час, на працягу гадзіны-паўтары пасьля абуджэньня~--- не пазьней, і шчыльна, па-каралеўску. Сьняданак павінен складаць ня менш за 30-40\,\% сутачнай калярыйнасьці і зьмяшчаць мінімум 30-40 г бялку. У аснове сьняданку павінны быць якасныя бялковыя прадукты: яйкі, рыба, курыца з~гароднінай і зелянінай, а~ня каша. Да іх можна дадаваць тлушчы і некрухмалістую гародніну. Калі раніцай няма апэтыту, менш ежце на вячэру ці прапусьціце вячэрні прыём ежы.
+Цяпер, калі вы разабраліся з~агульнымі правіламі рэжыму, час перайсьці да прыёмаў ежы: сьняданку, абеду і вячэры. Я рэкамэндую рэгулярна сьнедаць у~адзін і той жа час, на працягу гадзіны-паўтары пасьля абуджэньня~--- не пазьней, і шчыльна, па-каралеўску. Сьняданак павінен складаць ня менш за 30--40\,\% сутачнай калярыйнасьці і зьмяшчаць мінімум 30--40 г бялку. У аснове сьняданку павінны быць якасныя бялковыя прадукты: яйкі, рыба, курыца з~гароднінай і зелянінай, а~ня каша. Да іх можна дадаваць тлушчы і некрухмалістую гародніну. Калі раніцай няма апэтыту, менш ежце на вячэру ці прапусьціце вячэрні прыём ежы.
 
 \emph{Прыклады сьняданкаў, абедаў і вячэр вы можаце знайсьці на маім Youtube-канале, дзе ў~вольным доступе выкладзеныя відэа-ролікі прыгатаваньня страў тыднёвага рацыёну. Заўсёды майце зь вечара плян сьняданку на раніцу, захоўвайце запас замарожанай ежы (агародніна, мяса, рыба, ягады, зеляніна), каб у~выпадку чаго ў~вас быў запасны варыянт сьняданку.}
 
@@ -279,14 +279,14 @@
 \paragraph{Рэарганізуйце час прыёму ежы:}
 \begin{enumerate}
   \item Зрабіце паўзу перад ядой.
-  \item Ежце павольна~--- аптымальны час складае 15-20 хвілін.
+  \item Ежце павольна~--- аптымальны час складае 15--20 хвілін.
   \item У час яды рабіце перапынкі на пару хвілінаў~--- адчуйце, ці сапраўды вы хочаце працягнуць прыём ежы.
   \item Ежце сьвядома і атрымлівайце больш некалярыйнага задавальненьня.
   \item Калі паелі~--- ``завяршыце сталаваньне''.
 \end{enumerate}
 
 \subsubsection{А зараз падрабязьней.}
-Правіла паўзы перад ядой. Сядзьце за стол і не пачынайце адразу есьці, пачакайце 1-3 хвіліны. Паглядзіце на стравы, панюхайце, расслабцеся. Падумайце пра ежу як крыніцу энэргіі, якая патрэбная вам для вырашэньня важных справаў. Цікава, што ў~першыя сэкунды зьяўляецца жаданьне зьесьці болей, але дзьве і больш хвіліны нюху зьмяншаюць цягу і дапамагаюць абраць больш здаровыя стравы. Выпіце шклянку вады~--- гэта дапаможа зьесьці менш. 
+Правіла паўзы перад ядой. Сядзьце за стол і не пачынайце адразу есьці, пачакайце 1--3 хвіліны. Паглядзіце на стравы, панюхайце, расслабцеся. Падумайце пра ежу як крыніцу энэргіі, якая патрэбная вам для вырашэньня важных справаў. Цікава, што ў~першыя сэкунды зьяўляецца жаданьне зьесьці болей, але дзьве і больш хвіліны нюху зьмяншаюць цягу і дапамагаюць абраць больш здаровыя стравы. Выпіце шклянку вады~--- гэта дапаможа зьесьці менш. 
 
 Таксама карысна ўспомніць, што вы елі ў~мінулы прыём ежы, і сфатаграфаваць ежу ў~выгадным ракурсе~--- гэта дапаможа атрымаць больш задавальненьня і насыціцца меншай колькасьцю ежы. Выкладваць кожны раз фота ў~інстаграм зусім не абавязкова.
 
@@ -453,7 +453,7 @@
 \paragraph{Калі ў~вас высокабялковы сьняданак~--- то бок утрыманьне вугляводаў у~ім менш за 10\,\%, -- то падчас абеду і вячэры ў~гэты дзень павышэньне глюкозы будзе меншым.} А вось і зваротная сувязь: постпрандыяльная глікемія (павышэньне глюкозы пасьля прыёму ежы) пасьля стандартнага сьняданку была прыкметна ніжэйшай, калі вячэра перад гэтым была з~прадуктаў зь нізкім глікеміческім індэксам.
 
 \subsubsection{Харчовыя валокны.}
-Павелічэньне колькасьці цэльнага збожжа, бабовых, зеляніны дапаможа павялічыць колькасьць харчовых валокнаў. Харчовыя валокны зьмяншаюць імавернасьць разьвіцьця шматлікіх хваробаў, ад сардэчна-сасудзістых да дэпрэсіі\index{дэпрэсія}, прычым чым больш клятчаткі ў~рацыёне, тым мацнейшае зьніжэньне рызыкаў. Харчовыя валокны як распушчальныя (пэктыны і інш.), так і нераспушчальныя (лігнін і інш.) зьмяншаюць глікемічны індэкс і дабратворна ўплываюць на мікрафлёру. А празь мікрафлёру робяць магутнае аздараўленчае ўзьдзеяньне на ўвесь арганізм. Расьлінныя прадукты багатыя прэбіётыкамі: фрукта-алігацукрыды, інулін, лактулоза, бэта-глюканы і інш.
+Павелічэньне колькасьці цэльнага збожжа, бабовых, зеляніны дапаможа павялічыць колькасьць харчовых валокнаў. Харчовыя валокны зьмяншаюць імавернасьць разьвіцьця шматлікіх хваробаў, ад сардэчна-сасудзістых да дэпрэсіі\index{дэпрэсія}, прычым чым больш клятчаткі ў~рацыёне, тым мацнейшае зьніжэньне рызыкаў. Харчовыя валокны як распушчальныя (пэктыны і інш.), так і нераспушчальныя (лігнін і інш.) зьмяншаюць глікемічны індэкс і дабратворна ўплываюць на мікрафлёру. А празь мікрафлёру робяць магутнае аздараўленчае ўзьдзеяньне на ўвесь арганізм. Расьлінныя прадукты багатыя прэбіётыкамі: фрукта-алігацукрыды\index{фрукта-алігацукрыды}, інулін, лактулоза, бэта-глюканы і інш.
 
 Бэта-глюканы, напрыклад, ёсьць ня толькі ў~аўсянцы, але і ў~грыбах. Таксама грыбы ўтрымліваюць хітын, які паляпшае працу кішачніка і зьніжае рызыку запораў. Спажываньне грыбоў тры разы на тыдзень зьніжае рызыку дэмэнцыі і цукроўкі. Цікава, што ўплыў на вугляводны абмен ускосны, празь мікрабіем: грыбы павялічваюць долю бактэрыяў Prevotella, а~тыя ўжо, у~сваю чаргу, уплываюць на мэтабалізм. Шмат карысных уласьцівасьцяў маюць грыбы: апроч валокнаў яны ўтрымоўваюць шмат антыаксідантаў ды іншых карысных злучэньняў, напрыклад грыбны цукар трэгалоза, а~таксама валодаюць імунамадулюючымі ўласьцівасьцямі.
 
@@ -480,24 +480,24 @@
 \paragraph{Ключавыя падыходы да бялковых прадуктаў:}
 \begin{itemize}
   \item ежце бялок з~цэльных прадуктаў, а~не зь перапрацаванага мяса. Стэйк, а~не сасіскі, рыба, а~ня крабавыя палачкі;
-  \item пазьбягайце лішку і дэфіцыту бялку, рабіце часам вэганскія дні і прыёмы ежы безь бялку. Ежце чырвонае мяса не часьцей за 2-3 разы на тыдзень, тлустую марскую рыбу 2-3 разы на тыдзень;
+  \item пазьбягайце лішку і дэфіцыту бялку, рабіце часам вэганскія дні і прыёмы ежы безь бялку. Ежце чырвонае мяса не часьцей за 2--3 разы на тыдзень, тлустую марскую рыбу 2--3 разы на тыдзень;
   \item выбірайце якасны бялок: рыба лепшая за чырвонае мяса;
   \item выкарыстоўвайце ашчадную апрацоўку мяса. Варэньне, а~не смажаньне. Калі вы смажыце мяса, пры гэтым назапашваюцца поліцыклічныя араматычныя вуглевадароды, небясьпечныя для здароўя. Нават калі вы яго не ясьце, але смажыце бяз выцяжкі ў~пліты, яны могуць пранікаць праз скуру.
 \end{itemize}
 
 «Ты дражлівы празь мяса?»~--- «А бязь мяса я пачуваюся слабым!» Такія спрэчкі здзівілі б нашых продкаў, бо яны былі вэгетарыянцамі падчас пастоў, а~ў астатні час~--- мясаедамі. Гэты падыход імітуе старажытныя цыклі паляўнічых-зьбіральнікаў, калі ўдалае паляваньне зьмянялася пошукам караняплодаў. Так і вам трэба знайсьці сваю залатую сярэдзіну бяз скрайнасьцяў.
 
-\paragraph{Карысьць бялкоў} у~тым, што яны выдатна насычаюць, дапамагаюць схуднець і павялічыць аб'ём цягліц. Дастатковая колькасьць бялку ў~ежы стымулюе, павышае энэргічнасьць і настрой. Амінакіслоты зьяўляюцца важным будаўнічым матэрыялам для арганізма, а~таксама папярэднікамі многіх гармонаў і нэўрамэдыятараў. Такія ўласьцівасьці забясьпечылі бялку папулярнасьць у~дыеталёгіі: бывае, бялковыя прадукты рэкамэндуюцца практычна на кожны прыём ежы і ў~дозах, якія шматкроць перавышаюць 0,8-1,2 грамаў на кіляграм вагі. 
+\paragraph{Карысьць бялкоў} у~тым, што яны выдатна насычаюць, дапамагаюць схуднець і павялічыць аб'ём цягліц. Дастатковая колькасьць бялку ў~ежы стымулюе, павышае энэргічнасьць і настрой. Амінакіслоты зьяўляюцца важным будаўнічым матэрыялам для арганізма, а~таксама папярэднікамі многіх гармонаў і нэўрамэдыятараў. Такія ўласьцівасьці забясьпечылі бялку папулярнасьць у~дыеталёгіі: бывае, бялковыя прадукты рэкамэндуюцца практычна на кожны прыём ежы і ў~дозах, якія шматкроць перавышаюць 0,8--1,2 грамаў на кіляграм вагі. 
 
 \emph{Павялічыць колькасьць бялку можна ў~дні інтэнсіўнай працы, як разумовай, так і фізычнай. А таксама ва ўзросьце старэйшым за 65 гадоў для падтрыманьня цяглічнай масы і прафіляктыкі саркапэніі\index{саркапэнія}.}
 
-\paragraph{Лішак бялку,} асабліва жывёльнага, у~ежы зьніжае працягласьць жыцьця і павялічвае рызыку захворваньняў (пухлінныя, цукроўка). Жывёльныя бялкі ўтрымліваюць шмат мэтыяніну і ВСАА-амінакіслотаў (лейцын, ізалейцын, валін)~--- памяншэньне колькасьці гэтых амінакіслотаў падаўжае жыцьцё амаль эквівалентнае нізкакалярыйнаму харчаваньню. А вось расьлінны бялок ня мае нэгатыўнага ўплыву, мо празь меншае ўтрыманьне мэтыяніну і ВСАА-амінакіслотаў. Таму рэгулярнае спажываньне бабовых, якія маюць даволі высокае ўтрыманьне бялку, можа быць пэрыядычнай альтэрнатывай жывёльнаму бялку.
+\paragraph{Лішак бялку,} асабліва жывёльнага, у~ежы зьніжае працягласьць жыцьця і павялічвае рызыку захворваньняў (пухлінныя, цукроўка). Жывёльныя бялкі ўтрымліваюць шмат мэтыяніну і ВСАА-амінакіслотаў (лейцын\index{лейцын}, ізалейцын, валін)~--- памяншэньне колькасьці гэтых амінакіслотаў падаўжае жыцьцё амаль эквівалентнае нізкакалярыйнаму харчаваньню. А вось расьлінны бялок ня мае нэгатыўнага ўплыву, мо празь меншае ўтрыманьне мэтыяніну і ВСАА-амінакіслотаў. Таму рэгулярнае спажываньне бабовых, якія маюць даволі высокае ўтрыманьне бялку, можа быць пэрыядычнай альтэрнатывай жывёльнаму бялку.
 
 Мае сэнс абмяжоўваць колькасьць бялку ў~харчаваньні, асабліва за кошт чырвонага мяса: есьці бялковыя прадукты ня ў~кожны прыём ежы, ладзіць вэганскія дні. Асабліва карысна гэта на выходных ці ў~адпачынку, бо абмежаваньне бялку дапамагае рэляксацыі.
 
-Добрай крыніцай бялку зьяўляецца мяса жывёл пашавага выпасу, вельмі карысныя морапрадукты і марская рыба, яйкі. Кампэнсаваць зьніжэньне жывёльнага бялку можна павелічэньнем расьліннага. Чырвонае мяса варта ўжываць не часьцей за 2-3 разы на тыдзень, варта дадаваць у~рацыён субпрадукты і болей белага мяса (птушка). Марскую рыбу рэкамэндуецца таксама есьці 2-3 разы на тыдзень. Самай частай рыбай у~нашым рацыёне зьяўляецца скумбрыя (цэльная, глыбокай замарозкі). Абумоўлена гэта цэлым шэрагам прычынаў: гэта рыба дзікае лоўлі, напрыклад нарвэская скумбрыя даяжджае ў~добрым стане, у~ёй адносна невялікая колькасьць костак, таму яе лёгка есьці дзецям.
+Добрай крыніцай бялку зьяўляецца мяса жывёл пашавага выпасу, вельмі карысныя морапрадукты і марская рыба, яйкі. Кампэнсаваць зьніжэньне жывёльнага бялку можна павелічэньнем расьліннага. Чырвонае мяса варта ўжываць не часьцей за 2--3 разы на тыдзень, варта дадаваць у~рацыён субпрадукты і болей белага мяса (птушка). Марскую рыбу рэкамэндуецца таксама есьці 2--3 разы на тыдзень. Самай частай рыбай у~нашым рацыёне зьяўляецца скумбрыя (цэльная, глыбокай замарозкі). Абумоўлена гэта цэлым шэрагам прычынаў: гэта рыба дзікае лоўлі, напрыклад нарвэская скумбрыя даяжджае ў~добрым стане, у~ёй адносна невялікая колькасьць костак, таму яе лёгка есьці дзецям.
 
-\emph{Звычайна я зьядаю сярэднюю скумбрыю (350 г) за раз, гэта дае порцыю адварной скумбрыі ў~250 г. Што гэта значыць на мове лічбаў? Такім чынам, адна скумбрыя~--- гэта 550 ккал, зь іх 50 грамаў адборнага бялку, 36 грамаў выдатнага тлушчу. А таксама 129 мкг селену (больш за 200\,\% ад патрэбы ў~содні), 135 мкг ёду (амаль поўная содневая патрэба), 3,6 г Амэга-3 тлустых кіслотаў. Як бачыце, пры 2-3 порцыях рыбы на тыдзень няма ніякай неабходнасьці ў~прыёме дадатковых дабавак.}
+\emph{Звычайна я зьядаю сярэднюю скумбрыю (350 г) за раз, гэта дае порцыю адварной скумбрыі ў~250 г. Што гэта значыць на мове лічбаў? Такім чынам, адна скумбрыя~--- гэта 550 ккал, зь іх 50 грамаў адборнага бялку, 36 грамаў выдатнага тлушчу. А таксама 129 мкг селену (больш за 200\,\% ад патрэбы ў~содні), 135 мкг ёду (амаль поўная содневая патрэба), 3,6 г Амэга-3 тлустых кіслотаў. Як бачыце, пры 2--3 порцыях рыбы на тыдзень няма ніякай неабходнасьці ў~прыёме дадатковых дабавак.}
 
 Рыбны бялок прыкметна адрозьніваецца ад чырвонага і белага мяса, ён валодае даведзеным антыгіпэртэнзіўным эфэктам, стымулюе фібрыноліз, спрыяе зьніжэньню вагі і зьніжае ўзровень С-рэактыўнага бялку, паляпшае адчувальнасьць да інсуліну. 
 
@@ -511,7 +511,7 @@
 
 \subsubsection{Пытаньні і заданьні}
 
-1. Ці ясьце вы рыбу? Дадайце яе ў~рацыён 1-2 разы на тыдзень.
+1. Ці ясьце вы рыбу? Дадайце яе ў~рацыён 1--2 разы на тыдзень.
 
 2. Мінімізуйце спажываньне перапрацаванага чырвонага мяса.
 
@@ -541,7 +541,7 @@
 
 Аптымальны выбар~--- \textbf{аліўкавы алей} першага халоднага адціску. Панюхайце яго, вы адчуеце расьлінны (травяны, фруктовы ці агароднінны) пах, а~калі праглыняце, то павінны адчуць горыч на языку (гэта алеурапэін) і раздражненьне і пякоту ў~горле (алеакантал), аж да пакашліваньня. Гэта паказьнікі якасьці і карысьці алею, зьвязаныя з~высокім утрыманьнем фітанутрыентаў алеурапэіну, алеаканталу і алеацыну. Гэтыя злучэньні валодаюць добра вывучанай супрацьзапаленчай актыўнасьцю, антыаксідантнай, яны павялічваюць адчувальнасьць да інсуліну, павялічваюць выпрацоўку аксіду азоту, памяншаюць выпрацоўку малекулаў адгезіі. Усё гэта прыводзіць да зьніжэньня рызыкі атэрасклерозу\index{атэрасклероз}, дыябэту\index{дыябэт}, раку, нэўрадэгенэратыўных захворваньняў, зьніжэньня артэрыяльнага ціску.
 
-Апошнімі дзесяцігодзьдзямі мы сутыкнуліся зь лішкам танных алеяў, якія зьмяшчаюць шмат поліненасычаных Амэга-6 тлустых кіслотаў (соевы, сланечнікавы, кукурузны і інш.). Зьяўляецца дысбалянс, і каб яго ўраўнаважыць, варта абмежаваць спажываньне Амэга-6 і павысіць у~рацыёне колькасьць Амэга-3 тлустых кіслотаў. Для гэтага рэкамэндую ўжываць марскую тлустую рыбу 2-3 разы на тыдзень, у~іншых выпадках можна зьвярнуцца да дадаткаў. Вымераць суадносіны Амэга-3 / Амэга-6 можна па аналізе крыві. 
+Апошнімі дзесяцігодзьдзямі мы сутыкнуліся зь лішкам танных алеяў, якія зьмяшчаюць шмат поліненасычаных Амэга-6 тлустых кіслотаў (соевы, сланечнікавы, кукурузны і інш.). Зьяўляецца дысбалянс, і каб яго ўраўнаважыць, варта абмежаваць спажываньне Амэга-6 і павысіць у~рацыёне колькасьць Амэга-3 тлустых кіслотаў. Для гэтага рэкамэндую ўжываць марскую тлустую рыбу 2--3 разы на тыдзень, у~іншых выпадках можна зьвярнуцца да дадаткаў. Вымераць суадносіны Амэга-3 / Амэга-6 можна па аналізе крыві. 
 
 \textbf{Зьвярніце ўвагу, што льняны алей не зьяўляецца паўнавартаснай крыніцай жывёльных Амэга-3 тлустых кіслотаў, патрэбных нашаму арганізму, у~адрозьненьне ад рыбінага тлушчу.}
 
@@ -604,9 +604,9 @@
 \paragraph{Падлічыць свой энэргетычны балянс} можна з~дапамогай адмысловых анляйн-калькулятараў, якія ўлічваюць і ваш узровень фізычнай актыўнасьці, масу, структуру цела. Сярэдні мужчына мае значэньне 2400 ккал, жанчына~--- 2000\,ккал, а~для пахуданьня, як правіла, прапануецца ствараць дэфіцыт каля 10\,\%, падтрымліваючы суадносіны бялкі-тлушчы-вугляводы як 20--30--50. Старое правіла абвяшчае, што дэфіцыт у~3500\,ккал прывядзе да страты 500 грам вагі. Аднак пры практычным увасабленьні гэтае правіла мае шмат перашкодаў.
 
 \subsubsection{Ацэнка зьедзенага па руках.}
-Усё ў~вашых руках, у~тым ліку і просты падлік колькасьці зьедзенага. Правіла рукі ці далоні~--- гэта выкарыстаньне нашых ручыцаў як мерных інструмэнтаў. Параўноўваючы візуальна порцыю з~дзьвюма далонямі, далоньню, кулаком, вялікім пальцам, мы можам арыентавацца ў~аб'ёмах прадуктаў. Так, порцыя гародніны~--- гэта кулак, рэкамэндуюць ня меней за 5-6 порцый гародніны ў~дзень, памер бялковых прадуктаў на адзін прыём ежы~--- як далонь, крупы~--- ня больш за жменю, тлушч~--- як верхняя фаланга вялікага пальца, кандытарскія вырабы~--- ня больш за два пальцы, ягад або садавіны~--- ня больш за жменю, салата~--- на дзьве далоні. На адзін кулак бялковых прадуктаў пажадана зьядаць ня менш за два кулакі гародніны.
+Усё ў~вашых руках, у~тым ліку і просты падлік колькасьці зьедзенага. Правіла рукі ці далоні~--- гэта выкарыстаньне нашых ручыцаў як мерных інструмэнтаў. Параўноўваючы візуальна порцыю з~дзьвюма далонямі, далоньню, кулаком, вялікім пальцам, мы можам арыентавацца ў~аб'ёмах прадуктаў. Так, порцыя гародніны~--- гэта кулак, рэкамэндуюць ня меней за 5--6 порцый гародніны ў~дзень, памер бялковых прадуктаў на адзін прыём ежы~--- як далонь, крупы~--- ня больш за жменю, тлушч~--- як верхняя фаланга вялікага пальца, кандытарскія вырабы~--- ня больш за два пальцы, ягад або садавіны~--- ня больш за жменю, салата~--- на дзьве далоні. На адзін кулак бялковых прадуктаў пажадана зьядаць ня менш за два кулакі гародніны.
 
-Аднак на практыцы існуюць вялікія разыходжаньні і ваганьні вагі. Гэта зьвязана з~тым, што падлічыць сапраўды свой каляраж складана, а~колькасьць спальваных калёрыяў~--- таксама цяжка. Абодва бакі ўраўненьня, як паступленьне калёрыяў, так і спальваньне, могуць пастаянна мяняцца. Вы можаце спальваць розную колькасьць калёрыяў у~залежнасьці ад адсотку цягліцаў, вашае масы, прапорцыі макранутрыентаў, асаблівасьцяў страваваньня (2-10\,\% калёрыяў не засвойваюцца), пры дэфіцыце калёрыяў мы падсьвядома менш рухаемся, пры прафіцыце~--- больш, па-рознаму працуе наш буры тлушч, што ўплывае на долю энэргіі, якую мы трацім на тэрмагенэз\index{тэрмагенэз}.
+Аднак на практыцы існуюць вялікія разыходжаньні і ваганьні вагі. Гэта зьвязана з~тым, што падлічыць сапраўды свой каляраж складана, а~колькасьць спальваных калёрыяў~--- таксама цяжка. Абодва бакі ўраўненьня, як паступленьне калёрыяў, так і спальваньне, могуць пастаянна мяняцца. Вы можаце спальваць розную колькасьць калёрыяў у~залежнасьці ад адсотку цягліцаў, вашае масы, прапорцыі макранутрыентаў, асаблівасьцяў страваваньня (2--10\,\% калёрыяў не засвойваюцца), пры дэфіцыце калёрыяў мы падсьвядома менш рухаемся, пры прафіцыце~--- больш, па-рознаму працуе наш буры тлушч, што ўплывае на долю энэргіі, якую мы трацім на тэрмагенэз\index{тэрмагенэз}.
 
 \paragraph{Ваганьні вагі не адлюстроўваюць зьмену структуры цела} (цягліцы, тлушч, вада). Часта зьмены масы цела адбываюцца за кошт вады, напрыклад, пры нізкавугляводнай дыеце, калі мы губляем ваду, ці ў~розныя дні мэнструальнага цыклю. Таму вымяраць зьмены масы цела лепш у~адзін і той жа дзень цыклю. Зрэшты, і ўстрыманьне ад паходу ў~туалет можа няўзнак дадаць вам кіляграм. Менавіта таму важна не худнець, а~падтрымліваць здаровую структуру цела: больш цяглічнай масы, аптымальны працэнт тлушчу ў~правільных месцах.
 
@@ -660,7 +660,7 @@
 
 У падліку калёрыяў ёсьць шэраг нэгатыўных аспэктаў: гэта складана рабіць на доўгатэрміновай аснове, бо патрабуе валявых сьвядомых намаганьняў, людзі схільныя да самападману, падлік калёрыяў правакуе абмежавальныя паводзіны і разлады харчовых паводзінаў, пастаянна пачуцьцё голаду вельмі дыскамфортнае. Калёрыі ежы замест крыніцы энэргіі становяцца пагрозай, і гэта не спрыяе нашаму псыхічнаму здароўю. Таму для кожнага канкрэтнага чалавека важна абраць найболей аптымальны для яго падыход да паніжэньня каляражу. Для кагосьці гэта будзе проста зьніжэньне стрэсу і трывогі.
 
-Існуюць розныя прыёмы, кожны зь іх дае невялікі вынік, але ў~суме яны дзейнічаюць эфэктыўна~--- напрыклад, кіраваньне сытасьцю, стварэньне асяродзьдзя без харчовых трыгераў\index{трыгер}, мікрамэнэджмэнт харчаваньня, прыёмы гастрафізікі. Стварыўшы такую сыстэму, вы будзеце есьці менш, а~адчуваць сябе больш сытымі. Напрыклад, звужэньне харчовага акна да 6-8 гадзінаў ужо аўтаматычна прыводзіць да таго, што мы ямо на 500 ккал у~содні менш, а~выбар цэльнай ежы замест перапрацаванай~--- да зьніжэньня каляражу на супастаўнае значэньне пры захаваньні ранейшай сытасьці.
+Існуюць розныя прыёмы, кожны зь іх дае невялікі вынік, але ў~суме яны дзейнічаюць эфэктыўна~--- напрыклад, кіраваньне сытасьцю, стварэньне асяродзьдзя без харчовых трыгераў\index{трыгер}, мікрамэнэджмэнт харчаваньня, прыёмы гастрафізікі. Стварыўшы такую сыстэму, вы будзеце есьці менш, а~адчуваць сябе больш сытымі. Напрыклад, звужэньне харчовага акна да 6--8 гадзінаў ужо аўтаматычна прыводзіць да таго, што мы ямо на 500 ккал у~содні менш, а~выбар цэльнай ежы замест перапрацаванай~--- да зьніжэньня каляражу на супастаўнае значэньне пры захаваньні ранейшай сытасьці.
 
 \subsubsection{Харчовае ўстрыманьне.}
 Да ліку самых эфэктыўных стратэгіяў адносіцца звужэньне харчовага вакна і пэрыядычны фастынг\index{фастынг}, пра якія мы казалі вышэй. Лічым гадзіны, а~не калёрыі, і не абмяжоўваем сябе ў~ежы ў~вузкім харчовым вакне: такое абмежаваньне дазваляе зьменшыць колькасьць зьяданага.
@@ -688,7 +688,7 @@
 
 Уплываюць на апэтыт і іншыя чыньнікі, напрыклад, узровень фізычнай актыўнасьці, вячэрняе асьвятленьне, наяўнасьць сацыяльных кантактаў. Людзі, якія больш рухаюцца, адчуваюць сябе больш сытымі і менш ядуць, занадта яркае сьвятло ўвечары можа правакаваць начны апэтыт, а~самота ўзмацняе голад.
 
-\paragraph{Бялок зьяўляецца адным з~магутных чыньнікаў насычэньня.} У дасьледаваньнях на жывёлах навукоўцы выявілі, што менавіта ваганьні бялку ў~дыеце ўплываюць на іх паводзіны. Гэтую зьяву назвалі гіпотэзай бялковага рычага: яе сутнасьць у~тым, што жывёлы імкнуцца ў~першую чаргу набраць неабходны мінімум бялку і толькі затым зважаюць на тлушчы і вугляводы. Патрэбны набор бялку прыкметна зьніжае апэтыт і абмяжоўвае далейшае пераяданьне. Матэматычная мадэль, якая апісвае ваганьні макранутрыентаў, пацвердзіла, што доля бялку ў~агульнай колькасьці калёрыяў у~розных людзей па ўсім сьвеце сапраўды вагаецца ў~вузкіх межах (каля 10-15\,\%), у~той час як прапорцыі тлушчаў і вугляводаў моцна вар'іруюцца. У паляўнічых-зьбіральнікаў сярэдняе ўтрыманьне бялку ў~рацыёне было дастаткова высокім~--- ад 20\,\% да 30\,\% ад агульнай каларыйнасьці.
+\paragraph{Бялок зьяўляецца адным з~магутных чыньнікаў насычэньня.} У дасьледаваньнях на жывёлах навукоўцы выявілі, што менавіта ваганьні бялку ў~дыеце ўплываюць на іх паводзіны. Гэтую зьяву назвалі гіпотэзай бялковага рычага: яе сутнасьць у~тым, што жывёлы імкнуцца ў~першую чаргу набраць неабходны мінімум бялку і толькі затым зважаюць на тлушчы і вугляводы. Патрэбны набор бялку прыкметна зьніжае апэтыт і абмяжоўвае далейшае пераяданьне. Матэматычная мадэль, якая апісвае ваганьні макранутрыентаў, пацвердзіла, што доля бялку ў~агульнай колькасьці калёрыяў у~розных людзей па ўсім сьвеце сапраўды вагаецца ў~вузкіх межах (каля 10--15\,\%), у~той час як прапорцыі тлушчаў і вугляводаў моцна вар'іруюцца. У паляўнічых-зьбіральнікаў сярэдняе ўтрыманьне бялку ў~рацыёне было дастаткова высокім~--- ад 20\,\% да 30\,\% ад агульнай каларыйнасьці.
 
 \emph{Ідэя аб тым, што павелічэньне долі бялку дапаможа зьнізіць пераяданьне і будзе спрыяць пахудзеньню, здаецца заманлівай, але гэта занадта моцнае спрашчэньне. Шэраг дасьледаваньняў паказвае, што доля бялку ў~рацыёне мала адрозьніваецца ў~людзей з~атлусьценьнем\index{атлусьценьне} і без, і што ключавая роля ў~пахудзеньні належыць усё-ткі зьніжэньню колькасьці высокаглікемічных вугляводаў. Акрамя таго, высокабялковыя дыеты ў~доўгатэрміновай пэрспэктыве маюць шэраг нэгатыўных уласьцівасьцей.}
 
@@ -784,7 +784,7 @@
 
 \emph{У сярэднім ад 45\,\% жанчынаў і 60\,\% мужчынаў з~нармальным ІМТ маюць лішак вісцэральнага тлушчу, да 10\,\% мужчынаў і жанчынаў маюць выяўлены лішак вісцэральнага тлушчу. Нават худыя мадэлі могуць мець яго лішак. Такі стан называецца «худы тлусты», або TOFI~--- Thin Outside, Fat Inside.}
 
-\paragraph{Тофі~--- гэта як чалавек-бомба: праз нармальную вагу ён нават не падазрае, што яму нешта пагражае.} Пры гэтым над ім «навісаюць» усе праявы мэтабалічнага сындрому: артэрыяльная гіпэртэнзія\index{артэрыяльная гіпэртэнзія}, цукровы дыябэт\index{дыябэт}, сардэчна-сасудзістыя захворваньні\index{сардэчна-сасудзістыя захворваньні}, рак, дэпрэсіі\index{дэпрэсія} і інш. Дасьледаваньні паказалі, што 22\,\% мужчынаў і 8\,\% жанчынаў мелі лішак вісцэральнага тлушчу нават пры нармальным аб'ёме таліі. МРТ паказвае значныя ваганьні вісцэральнага тлушчу: у~двух людзей аднаго ўзросту, полу, росту, масы цела вісцэральны тлушч складае ад 5,86 да 1,65 літраў. Значная розьніца, праўда? Важна, што ў~такіх людзей значна павышаныя рызыкі для здароўя і ёсьць зьмены ў~аналізах: у~10-27\,\% асобаў са звычайнай масай цела сустракаюцца інсулінарэзістэнтнасьць і дысьліпідэмія.
+\paragraph{Тофі~--- гэта як чалавек-бомба: праз нармальную вагу ён нават не падазрае, што яму нешта пагражае.} Пры гэтым над ім «навісаюць» усе праявы мэтабалічнага сындрому: артэрыяльная гіпэртэнзія\index{артэрыяльная гіпэртэнзія}, цукровы дыябэт\index{дыябэт}, сардэчна-сасудзістыя захворваньні\index{сардэчна-сасудзістыя захворваньні}, рак, дэпрэсіі\index{дэпрэсія} і інш. Дасьледаваньні паказалі, што 22\,\% мужчынаў і 8\,\% жанчынаў мелі лішак вісцэральнага тлушчу нават пры нармальным аб'ёме таліі. МРТ паказвае значныя ваганьні вісцэральнага тлушчу: у~двух людзей аднаго ўзросту, полу, росту, масы цела вісцэральны тлушч складае ад 5,86 да 1,65 літраў. Значная розьніца, праўда? Важна, што ў~такіх людзей значна павышаныя рызыкі для здароўя і ёсьць зьмены ў~аналізах: у~10--27\,\% асобаў са звычайнай масай цела сустракаюцца інсулінарэзістэнтнасьць і дысьліпідэмія.
 
 Адваротны стан «тоўсты ня тлусты»~--- гэта FOTI~--- Fat Outside, Thin Inside, або мэтабалічна здаровае атлусьценьне\index{атлусьценьне}. Ад 10 да 40\,\% пацыентаў маюць пры лішку вагі нармальныя паказьнікі вугляводнага абмену, ліпіднага профілю, артэрыяльнага ціску, узроўню глюкозы, С-рэактыўнага бялку і адчувальнасьці да інсуліну. Але лічыцца, што пры ІМТ > 30\,кг/м${}^2$ рэальная распаўсюджанасьць гэтага стану ня больш за 5--15\,\%. Пры дасьледаваньнях у~такіх людзей няма лішку вісцэральнага тлушчу, а~лішняя вага ў~іх~--- за кошт падскурнага. Таксама яны захоўваюць высокі ўзровень фізычнай актыўнасьці.
 
@@ -792,7 +792,7 @@
 
 \paragraph{Залішняя вага~---} гэта ня проста касмэтычны недахоп, гэта сур'ёзнае павелічэньне рызыкі сардэчна-сасудзістых захворваньняў\index{сардэчна-сасудзістыя захворваньні}, дыябэту\index{дыябэт}, дэпрэсіі\index{дэпрэсія}, пухлінавых захворваньняў. Напрыклад, у~пажылых жанчынаў нават зь невялікім атлусьценьнем\index{атлусьценьне} рызыка раку маткі ў~10 разоў вышэй, чым пры нармальнай вазе. 
 
-\tipbox{Выяўнае атлусьценьне\index{атлусьценьне} скарачае працягласьць жыцьця да 9 гадоў. Кожны кіляграм, які вы скінеце, падаўжае ваша жыцьцё на 3-4 месяцы.}
+\tipbox{Выяўнае атлусьценьне\index{атлусьценьне} скарачае працягласьць жыцьця да 9 гадоў. Кожны кіляграм, які вы скінеце, падаўжае ваша жыцьцё на 3--4 месяцы.}
 
 Падабаецца нам гэта ці не, але цяпер структура цела зьяўляецца адным з~ключавых паказьнікаў сацыяльнага статусу чалавека. Успрыманьне статусу адбываецца на падкорцы, літаральна ў~першыя сэкунды знаёмства, а~ад ацэнкі статусу залежыць і камунікацыя, і разьмеркаваньне рэсурсаў. Дык вось, кожны лішні кіляграм вагі ў~сярэднім адымае ад зарплаты 1\,\%, незалежна ад полу, групы, сацыяльнага становішча. Самае непрыемнае, што праблема можа пачынацца ўжо ў~дзяцінстве. Дзеці, якія пакутавалі ад атлусьценьня\index{атлусьценьне}, пасталеўшы, атрымліваюць заробак на 18\,\% менш, проста поўныя~--- на 4\,\% менш. Гэта зьвязана з~тым, што яны атрымліваюць менш навыкаў, чым аднагодкі.
 
@@ -832,15 +832,15 @@
 
 \paragraph{Абхоп сьцёгнаў.} Вымерайце з~дапамогай мернай стужкі акружнасьць сьцёгнаў у~самым шырокім месцы (ніжэй за вялікія сьцегнавыя бугры). 
 
-\textbf{Сярэднія значэньні: 90-107\,см~--- мужчынскія сьцёгны, 90-110\,см~--- жаночыя сьцёгны.}
+\textbf{Сярэднія значэньні: 90--107\,см~--- мужчынскія сьцёгны, 90--110\,см~--- жаночыя сьцёгны.}
 
 Занадта вузкія сьцёгны ў~жанчынаў павялічваюць рызыку дыябэту\index{дыябэт}, гіпэртэнзіі\index{гіпэртэнзія} і жоўцекамянёвай хваробы\index{жоўцекамянёвая хвароба}\index{хвароба!жоўцекамянёвая}. Нармальныя памеры ягадзіц зьвязаныя зь лепшым ліпідным профілем і меншай рызыкай шэрагу захворваньняў, ад сардэчна-сасудзістых да некаторых відаў раку. Гэтая сувязь больш характэрная для жанчынаў, чым для мужчынаў. Памер ягадзіц залежыць як ад разьвіцьця цягліц, так і ад тыпу адкладу тлушчу.
 
 \paragraph{Суадносіны талія-сьцёгны.}~\nopagebreak[4]
 
-\textbf{Для мужчын: норма 0,9 (0,88-0,92), павышаны паказьнік~--- 0,92-1,0, больш за 1,0~--- атлусьценьне\index{атлусьценьне}.} 
+\textbf{Для мужчын: норма 0,9 (0,88--0,92), павышаны паказьнік~--- 0,92--1,0, больш за 1,0~--- атлусьценьне\index{атлусьценьне}.} 
 
-\textbf{Для жанчын: норма 0,7 (0,68-0,77), павышаны паказьнік~--- 0,75-0,85, больш за 0,85~--- атлусьценьне\index{атлусьценьне}.}
+\textbf{Для жанчын: норма 0,7 (0,68--0,77), павышаны паказьнік~--- 0,75--0,85, больш за 0,85~--- атлусьценьне\index{атлусьценьне}.}
 
 Гэты паказьнік зьвязаны зь нізкай рызыкай разьвіцьця дыябэту, сардэчна-сасудзістых захворваньняў\index{сардэчна-сасудзістыя захворваньні} і гармон-залежных ракаў (у жанчынаў яечнікаў і грудзей, у~мужчынаў~--- падкарэньніцы), з~нармальнай фэртыльнасьцю і большай прывабнасьцю.
 
@@ -860,7 +860,7 @@
 
 \paragraph{Суадносіны рост-талія.} Для гэтага абхоп жывата ў~см дзеляць на рост у~см. Можна зваротным спосабам разьлічыць ідэальную талію для дадзенага росту і вылічыць, колькі сантымэтраў трэба прыбраць для дасягненьня нормы. 
 
-\textbf{Паказьнікі: 0,40-0,48~--- норма, 0,48-0,56~--- павышаны паказьнік, больш за 0,57~--- крытычна высокая рызыка мэтабалічных парушэньняў.}
+\textbf{Паказьнікі: 0,40--0,48~--- норма, 0,48--0,56~--- павышаны паказьнік, больш за 0,57~--- крытычна высокая рызыка мэтабалічных парушэньняў.}
 
 \paragraph{Вышыня жывата.} Вышыня жывата~--- гэта найменшая адлегласьць паміж двума гарызанталямі: той, якая ляжыць на паверхні жывата, і той, якая датыкаецца пазванка сьпіны. Вымяраць трэба, прыціснуўшыся сьпінай да падлогі і сагнуўшы ногі ў~каленях, на ўзроўні крыжа. Норма~--- да 25 сантыметраў. Вышыня жывата больш за 25\,см~--- гэта рызыка разьвіцьця хваробы Альцгаймэра\index{хвароба!Альцгаймэра}.
 
@@ -893,7 +893,7 @@
 У норме ў~печані зьмяшчаецца каля 5\,\% тлушчу, і перавышэньне гэтага невысокага парога ўжо выклікае праблемы са здароўем, якія доўгі час працякаюць утоена. Людзі, якія пераядаюць і вядуць маларухомы лад жыцьця, могуць атрымаць сваё «фуа-гра» ўсярэдзіне ў~выглядзе тлушчавай дыстрафіі печані. Добрая навіна~--- тлушчавая дыстрафія печані цалкам зварачальная: худнееце вы~--- худнее і печань, і гэты працэс можна кантраляваць па УГД.
 
 \subsubsection{Падскурны тлушч.} 
-У агульным аб'ёме тлушчавай тканіны вісцэральны тлушч у~норме складае ня больш за 8-10\,\%, большая частка~--- гэта падскурны тлушч. Хоць падскурны тлушч і спрабуюць «спаліць», у~нармальных прапорцыях ён карысны для здароўя: выпрацоўвае многія карысныя гармоны, напрыклад адыпанэктын, якія зьніжаюць рызыку сардэчна-сасудзістых захворваньняў\index{сардэчна-сасудзістыя захворваньні} і дыябэту\index{дыябэт}. Пры старэньні колькасьць падскурнай тлушчавай клятчаткі памяншаецца прапарцыйна ўзросту.
+У агульным аб'ёме тлушчавай тканіны вісцэральны тлушч у~норме складае ня больш за 8--10\,\%, большая частка~--- гэта падскурны тлушч. Хоць падскурны тлушч і спрабуюць «спаліць», у~нармальных прапорцыях ён карысны для здароўя: выпрацоўвае многія карысныя гармоны, напрыклад адыпанэктын, якія зьніжаюць рызыку сардэчна-сасудзістых захворваньняў\index{сардэчна-сасудзістыя захворваньні} і дыябэту\index{дыябэт}. Пры старэньні колькасьць падскурнай тлушчавай клятчаткі памяншаецца прапарцыйна ўзросту.
 
 \emph{Выдаленьне падскурнага тлушчу пры ліпасакцыі не прыводзіць да паляпшэньня стану чалавека, а~вось рызыка сьмерці ўзрастае ў~некалькі разоў, прычым рызыка вышэйшая для мужчынаў.}
 
@@ -925,7 +925,7 @@
 
 20\,\%~--- бачныя бакавыя лініі прэса, меншыя грудзі, вылучаюцца асобныя цягліцы (спартыўны выгляд).
 
-\textbf{Нармальным працэнтам тлушчу ў~жанчынаў лічыцца 20-29\,\%.}
+\textbf{Нармальным працэнтам тлушчу ў~жанчынаў лічыцца 20--29\,\%.}
 
 Менш за 20\,\% тлушчу ўжо выглядае эстэтычна ня вельмі прывабна. Зьніжэньне тлушчу менш за 13\,\% (калі бачныя кубікі прэсу) вядзе да заўважнага зьніжэньня эстрагену, парушэньня мэнструальнага цыклю, зьнікненьня авуляцыі ды іншых небясьпечных для здароўя наступстваў.
 
